--- a/2023-1/beamer/C11_md1.tex
+++ b/2023-1/beamer/C11_md1.tex
@@ -12,7 +12,7 @@
 \usepackage{multicol}
 \usepackage{amsgen,amsmath,amstext,amsbsy,amsopn,amsfonts,amssymb}
 \usepackage{amsthm}
-\usepackage{calc}        % From LaTeX distribution
+\usepackage{calc}         % From LaTeX distribution
 \usepackage{graphicx}     % From LaTeX distribution
 \usepackage{ifthen}
 %\usepackage{makeidx}
@@ -70,7 +70,7 @@
 \renewcommand{\t}{{\operatorname{t}}}
 \renewcommand{\figurename }{Figura}
 
-\include{definiciones}
+\include{definiciones} % definiciones propias
 
 \newcommand{\nc}{\newcommand}
 
@@ -94,356 +94,278 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%LETRAS
 
 
-\title[Clase 11 - Divisibilidad]{Matemática Discreta I \\ Clase 11 - Divisibilidad}
+
+
+\title[Clase 12 - MCD (1)]{Matemática Discreta I \\ Clase 12 - Máximo común divisor (1)}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[25/04/2023]{25 de abril  de 2023}
+\date[27/04/2023]{27 de abril de 2023}
 
-
+\newcommand{\mcd}{\operatorname{mcd}}
 
 
 \begin{document}
-
-\frame{\titlepage} 
-
-
-\begin{frame}
     
-{\color{blue}Definición}
-\vskip .2cm Dados dos enteros $x$ e $y$ decimos que $y$ {\em divide a } $x$, y escribimos $y|x$, si
-    $$
-    x=yq\quad\text{ para algún }\quad q\in \mathbb Z.
-    $$
-    También decimos que $y$ es un {\em factor} de $x$, que $y$ es un {\em divisor} de $x$, que $x$ es {\em divisible} por $y$, y que $x$ es {\em múltiplo}\index{múltiplo} de $y$.
-
-\vskip .8cm\pause
-
-{\color{blue}Observación.}
-\vskip .2cm 
-
-1. Si $y|x$, es decir si $y$ es divisor de $x$, existe $q$ tal que $x = yq$. Luego $q$ es
-también un divisor de $x$.\pause
-
-\vskip .2cm 
-2. Si $y|x$ e $y \not=0$, denotamos $\frac{x}{y}$ al cociente de $x$ dividido  $y$, es decir 
-$$
-x = \frac{x}{y}\cdot y
-$$
-
-\end{frame}
-
-
-\begin{frame}
+    \frame{\titlepage} 
     
-    {\color{blue}Notación. }
-    \vskip .3cm
-    Si $y$ no  divide a $x$ escribimos $y  \not| x$.
-\vskip .8cm\pause
-{\color{blue}Ejemplos. }
-\vskip .3cm
-
-(1) $3 | 12$, pues $12 = 3 \cdot 4$. Es decir, 3 es divisor de 12 y luego 4 es otro divisor de 12.
-\vskip .3cm\pause
-(2) $12 \not| 3$, pues no existe ningún entero $q$ tal que $3 = q \cdot 12$. 
-\vskip .3cm\pause
-(3) $6 | 18$, pues $18 = 6 \cdot 3$. Luego también vale que $18 = (-6) \cdot (-3)$ y que $ -18 = (-6) \cdot 3 $ y $ -18 = 6 \cdot (-3)$.  De esto se sigue que
-\begin{align*}
-    6 &| 18,& -6 &| 18,& -6 &| -18,& 6 &| -18,\\
-    3 &| 18,& -3 &| 18,& 3 &| -18,& -3 &| -18.
-\end{align*}
-
-
-
-\end{frame}
-
-
-\begin{frame}\frametitle{Propiedades básicas 1}
     
-Veamos ahora alguna propiedades básicas de la relación ``divide a''. \pause
-
-\vskip .3cm
-
-Sean $a,b,c$ enteros, entonces\pause
-
-\vskip .3cm
-
-{\color{blue}1. }        $1|a$\quad $a|\pm a$;
+    \begin{frame}\frametitle{Definición de MCD}
         
-        \vskip .3cm \pause
-{\color{blue}Demostración. }\pause
-\vskip .3cm        
-        \;\textbullet\; $a = 1 \cdot a$.
-\vskip .3cm    
-        \;\textbullet\; $ a =     a \cdot 1$.     
-\vskip .3cm    
-        \;\textbullet\; $ - a =     a \cdot (-1)$.    
-\vskip .3cm            
-
-
-
-\end{frame}
-
-
-
-
-\begin{frame}\frametitle{Propiedades básicas 2}
-    
         
-    {\color{blue}2. }             $a|0$ y $0$ sólo divide a $0$;
-    \vskip .3cm  \pause
-    {\color{blue}Demostración. }\pause
-    \vskip .3cm
-    \;\textbullet\; $0 = a\cdot 0$.
-    \vskip .3cm    
-    \;\textbullet\; Si $0|a$ entonces existe $q$ tal que $a = 0 \cdot q =0$. 
-    \vskip .8cm    
-
-    {\color{blue}3. }            si $a|b$, entonces $a|bc$ para cualquier $c$;\pause
-    \vskip .3cm
-    {\color{blue}Demostración. } \pause
-    \vskip .3cm
-    \;\textbullet\; $a | b \;\Rightarrow\; b = a \cdot q \;\Rightarrow\;  bc = a \cdot qc \;\Rightarrow\; a|bc$. 
-    
-
-    
-    
-\end{frame}
-
-
-
-
-\begin{frame}\frametitle{Propiedades básicas 2}
-        {\color{blue}4. }           si $a|b$ y $a|c$, entonces $a|(b+c)$;\pause
-        \vskip .3cm
-        {\color{blue}Demostración. } \pause
-    \vskip .3cm
-    \;\textbullet\; $a|b$ y $a|c$ $\;\Rightarrow\;$ $b = a \cdot q$ y $c = a \cdot q'$ $\;\Rightarrow\;$ 
-    \vskip .2cm
-    \quad\; $b+c =  a \cdot q +   a \cdot q' =  a \cdot(q + q')$  $\;\Rightarrow\;$  $a|(b+c)$.
+        \begin{definicion}
+        Si $a$ y $b$ son enteros algunos de ellos no nulo, decimos que un entero positivo $d$ es un {\em máximo común divisor}\index{máximo común divisor}, o {\em mcd}, de $a$ y $b$ si
+        \begin{enumerate}
+            \item[{\color{blue} a)}] $ d|a$  y $d|b$;
+            \item[{\color{blue} b)}]  si $ c|a $ y $c|b$ entonces $ c\le d$.
+        \end{enumerate}
+        \end{definicion}\pause
+        \vskip .4cm 
+        \begin{itemize}
+            \item[$\bullet$]  La condición (a) nos dice que $d$ es un común divisor de $a$ y $b$.
+            \vskip .4cm \pause
+            
+            \item[$\bullet$] La condición (b) nos dice que cualquier divisor común de
+            $a$ y $b$ es mayor o igual a $d$. 
+        \end{itemize}
+        
+        \vskip .4cm 
+        
+    \end{frame}
     
     
-    \vskip .8cm    
-    {\color{blue}5. }               si $a|b$ y $a|c$, entonces $a|(rb+sc)$ para cualesquiera $r,s \in \mathbb Z$.
-        \vskip .3cm\pause
-        {\color{blue}Demostración. } \pause
-        \vskip .3cm
-    \;\textbullet\; $a|b$ y $a|c$ $\;\Rightarrow\;$ $b = a \cdot q$ y $c = a \cdot q'$ $\;\Rightarrow\;$ 
-    \vskip .2cm
-    \quad\; $rb+sc =  a \cdot rq +   a \cdot sq' =  a \cdot(rq + sq')$  $\;\Rightarrow\;$  $a|(rb+sc)$.
-\end{frame}
-
-
-\begin{frame}\frametitle{Propiedades básicas 3}
-    {\color{blue}6. }           si $a|b + c$ y $a|c$, entonces $a|b$;\pause
-    \vskip .3cm 
-    {\color{blue}Demostración. } \pause
-    \vskip .3cm
-    
-    \;\textbullet\; $a|b+c$ y $a|c$ $\;\Rightarrow\;$ $b + c = a \cdot q$ y $c = a \cdot q'$ $\;\Rightarrow\;$ 
-    \vskip .2cm
-    \quad\; $ b = (b+c) -c  =  a \cdot q -   a \cdot q' =  a \cdot(q -q')$  $\;\Rightarrow\;$  $a|b$.
-    
-    \vskip 0.4cm \pause
-
-    {\color{blue}7. }           si $a|b$, entonces $\pm a| \pm b$;\pause
-    \vskip .3cm 
-    {\color{blue}Demostración. } \pause
-    \vskip .3cm
-    
-    \;\textbullet\; $a|b$\;$\Rightarrow$\; $b = a \cdot q$\;$\Rightarrow$\;
-    \vskip .2cm
-    \qquad$\begin{matrix}
-        -b = a \cdot (-q ) \;\Rightarrow\; a|-b, &\quad &b = -a \cdot (-q ) \;\Rightarrow\; -a|b\\-b = -a \cdot q  \;\Rightarrow\; -a|-b. & &
-    \end{matrix}$
-
-    \qed
-
-\end{frame}
-
-\begin{frame}
-    
-    
-{\color{blue}Proposición }
-\vskip .3cm
-{\it Sean $a,b \in \mathbb{N}$. Entonces} 
-$$ab = 1\quad \Rightarrow \quad a=1 \wedge b=1.
-$$
- \pause
-{\color{blue}Demostración.}  \pause 
-\vskip .2cm
-Como  $a,b \in \mathbb{N}$, entonces  $a\ge 1$ y $b\ge 1$. 
-\vskip .2cm
-Si $a=1$, como $ab =1$, obtenemos  $1 = ab = 1\cdot b = b$. 
-\vskip .2cm
-Si $a>1$, como  $b>0$ por compatibilidad de $<$ con el producto tenemos que $ab>b$, es decir $1 > b$, lo cual no es cierto ($b \in \mathbb{N}$). \qed
-\vskip .5cm
-{\color{blue}Observación}
-\vskip .2cm
-A partir de la proposición no es difícil probar que si $a,b \in \mathbb{Z}$ y $ab = 1$, tenemos que $a=1$ y $b= 1$ o $a=-1$ y $b= -1$. 
-\end{frame}
-
-
-\begin{frame}
-    
-{\color{blue}Proposición }
-\vskip .3cm
-{\it Sean $a,b,c \in \mathbb{N}$, entonces 
-\begin{enumerate}
-    \item[(D1)] $a | a$ (reflexividad);
-    \item[(D2)]  si $a | b$ y $b | a$, entonces $a = b$ (antisimetría);
-    \item[(D3)]  si $a | b$ y $b | c$, entonces $a | c$ (transitividad).
-\end{enumerate} }
-\vskip .3cm
-{\color{blue}Demostración. }
-\vskip .3cm\pause
-(D1) Esto ya fue probado antes.
-\vskip .3cm\pause
-(D2) $a|b \Rightarrow$ existe $q \in \mathbb N$ tal que $b = aq$.  \pause
-
-\quad\quad\,\,$b|a\Rightarrow$ existe $q' \in \mathbb N$ tal que $a = bq'$. 
-
-\pause
-Luego $$b = aq = (bq')q = b(q'q).$$
-\pause
-Por el axioma de cancelación (cancelando $b$) obtenemos que $1 = q'q \Rightarrow q = q' =1$. \pause Luego $a = b$.
-\end{frame}
-
-
-\begin{frame}
-    
-    
-    (D3) $a|b \Rightarrow$ existe $q \in \mathbb N$ tal que $b = aq$.  \pause
-    \vskip .3cm
-    \quad\quad\,$b|c\Rightarrow$ existe $q' \in \mathbb N$ tal que $c = bq'$. 
-    \vskip .3cm
-    \pause
-    Luego $$c =bq' = aqq' =a(qq').$$
-    \pause
-    Luego $a|c$. \qed\pause
-    \vskip .6cm
-    {\color{blue}Observación. }
-    \vskip .3cm
-    Las propiedades (D1), (D2) y (D3) nos dicen que ``divide a'' es una \textit{relación de orden}.
-    \vskip .3cm
-    Habíamos visto que ``$\le$'' también era una relación de orden.
-    
-    \vskip 1cm
-\end{frame}
-
-
-\begin{frame}\frametitle{Ejercicios}
-    
-    {\color{blue}Ejercicio}
-        \vskip .3cm 
-        ¿Es cierto que si $a | bc$, entonces $a | b$ ó $a | c$?
-        \vskip .3cm
+    \begin{frame}
+        
+        \begin{ejemplo}
+            ¿Cuál es el mcd entre $60$ y $84$?
+        \end{ejemplo}
         \pause
-    {\color{blue}Solución. } No necesariamente (es decir la respuesta es NO).
-    \vskip .3cm
-        \;\textbullet\; Es cierto, por ejemplo que  $3 | 6 \cdot 2$ y que $3 | 6$.
-        \vskip .3cm
-        \;\textbullet\; Pero $6|4 \cdot 3$ y $6\not|4$, $6\not|3 $.
+        \begin{solucion}
+            \pause
+            \begin{itemize}
+                \item[$\bullet$] $6$ es un divisor común de $60$ y $84$, pero no es el mayor divisor común, porque
+                $12|60$ y $12|84$ pero $12 < 6$.
+                \vskip .2cm 
+                \item[$\bullet$] Los divisores positivos comunes de 60  y 84 son 1, 2, 3, 6 y 12, luego aunque 6  es un divisor común, no satisface (2) de la definición. 
+                \vskip .2cm 
+                \item[$\bullet$] En este caso, 12  claramente es  el  \textbf{máximo común divisor}.
+            \end{itemize}
+        \end{solucion}
+
+        
+        
+    \end{frame}
+    
+        
+    \begin{frame}
+        
+        
+        \begin{ejemplo}
+            Hallar   $\mcd(174,72)$.
+        \end{ejemplo}
+        \pause    
+        \begin{solucion}
+            \pause
+        Divisores de 174: 1, 2, 3, 6, 29, 58, 87, 174\pause
+        \vskip .2cm         
+        Divisores de 72: 1, 2, 3, 4, 6, 8, 9, 12, 18, 24, 36, 72 \pause
+        \vskip .2cm         
+        Luego, $6$ es divisor común de 174 y 72, y todos los demás divisores comunes ($1$, $2$ y $3$) dividen a $6$. 
+        \vskip .2cm     
+        
+        Por lo tanto $\mcd(174,72) =6$.\qed
+        \end{solucion} 
+        
+    \end{frame}
+    
+        
+    \begin{frame}
+        
+        \begin{proposicion} Sean $a,b$ enteros con $a \not = 0$, entonces
+            \begin{enumerate}
+                \item[1.] $\mcd(b,a) = \mcd(a,b) = \mcd(\pm a, \pm b)$,\pause
+                \item[2.] si $a>0$,  $\mcd(a,0) = a$ y $\mcd(a,a) = a$,\pause
+                \item[3.] $\mcd(1,b) = 1$.
+            \end{enumerate}
+        \end{proposicion}
+        \pause
+        \begin{proof}
+            Estas propiedades son de demostración casi trivial, por ejemplo para demostrar que  $\mcd(1,b) = 1$ comprobamos que 1 cumple con la definición:
+            \begin{enumerate}
+                \item[({a})] $ 1|1$ y $1|b$;
+                \item[({b})] si $ c|1 $ y $c|b$ entonces $ c|1$,
+            \end{enumerate}
+            propiedades que son obviamente verdaderas.
+            
+            1. y 2.  se dejan a cargo del lector. \qed
+        \end{proof}
         \vskip .8cm
         
-        {\color{blue}Ejercicio}
-        \vskip .3cm 
-        Determinar todos los divisores de 12.
-        \vskip .3cm
+        
+    \end{frame}
+    
+    
+    \begin{frame}
+        La siguiente propiedad no es tan obvia y resulta muy importante. 
+        \vskip .2cm
+        \begin{propiedad}
+            Si $a \not=0, b \in \mathbb Z$, entonces $\mcd(a,b) = \mcd(a,b-a)$. 
+        \end{propiedad}\pause
+        \begin{proof}
+            Sea $d =  \mcd(a,b)$, luego 
+            \vskip .2cm
+            (a) $ d|a$ y $d|b$ \; \quad \;\,\, y \; (b) si $ c|a $ y $c|b$ entonces $ c|d$.\pause
+            \vskip .2cm
+            Debemos probar que 
+            \vskip .2cm
+            (a') $ d|a$ y $d|b -a$ \; y \; (b') si $ c|a $ y $c|b -a$ entonces $ c|d$.\pause
+            \vskip .6cm
+            Por (a),  $ d|a$ y $d|b$ $\Rightarrow$  $d|b -a$  $\Rightarrow$ (a').\pause
+            \vskip .2cm
+            Si $ c|a $ y $c|b -a$ $\Rightarrow$  $c|a +(b -a) = b$ $\stackrel{(b)}{\Rightarrow}$ $ c|d$ $\Rightarrow$  (b').
+
+            \qed
+
+        \end{proof}
+        
+    \end{frame}
+    
+    
+    \begin{frame}
+        \begin{ejemplo} Encontrar el mcd entre $174$ y $72$.
+        \end{ejemplo} \pause\vskip -.6cm
+        $$
+        \begin{matrix*}[l]
+            \text{{\color{blue}Solución:}\qquad} & (174, 72)     &= (72, 174) =  (72,174-72) =  (72,102)\qquad\qquad\qquad{}^{}\\
+            &&=  (72,102 - 72) = (72,30)\\
+            &&= (30,72) = (30,72 -30) = (42, 30) \\
+            &&=  (30,42)= (30,42 -30) =(30,12) \\
+            &&= (12,30) = (12, 30-12)\\ 
+            &&= (12,18)=  (12, 18-12)= (12,6)\\
+            &&= (6,12) = (6,12-6) \\
+            &&=(6,6)= (6, 6-6) \\
+            &&=(6,0) \\
+            &&= 6. \qquad\qquad\qquad\qquad\qquad\qquad\qed 
+        \end{matrix*}
+        $$
+        
+    \end{frame}
+
+    
+
+    
+    \begin{frame}
+        
+        $\bullet$ En  general no es sencillo encontrar todos los divisores de un número entero grande. 
+        \vskip .2cm
+        $\bullet$ No es factible calcular el  mcd de números grandes revisando todos los divisores comunes.  
+        \vskip .2cm
+        $\bullet$ El algoritmo anterior  nos da un método práctico y relativamente eficiente para calcular el mcd. 
+        \vskip .6cm
         \pause
-        {\color{blue}Solución. }
-        \vskip .3cm
-        \;\textbullet\; $\pm1$, $\pm2$, $\pm3$, $\pm4$, $\pm6$, $\pm12$, (12 divisores).
-    
-\end{frame}
-
-
-\begin{frame}\frametitle{Ejercicios}
-        {\color{blue}Ejercicio.}
-        \vskip .3cm 
-           Mostrar que $4^n -1$ es divisible por 3 para todo $n \in \mathbb{N}$.
-    \pause\vskip .3cm 
-    
-    {\color{blue}Solución. } 
-    \vskip .3cm 
-    Este ejercicio se puede hacer de dos formas.
-    \vskip .3cm 
-    \textbf{1° demostración.} Por inducción sobre $n$.
-    \vskip .3cm 
-    Caso base $n=1$. $4^n -1 = 4^1- 1 = 4-1 = 3$ que obviamente es divisible por 3.
-    \vskip .3cm 
-    Paso  inductivo.  Debemos probar que  $3 | 4^k -1$ para $k \ge 1$ (HI) entonces, se deduce que $3 | 4^{k+1} -1$.
-    \vskip .3cm
-    Ahora bien,
-    \begin{equation*}
-        4^{k+1} -1 = 4 \cdot 4^k - 1 = 3 \cdot 4^k + (4^k -1).
-    \end{equation*} 
-\end{frame}
-
-
-\begin{frame}
-    \textbf{Opción a)} Ahora bien,
-    \begin{equation*}
-        4^{k+1} -1 = 4 \cdot 4^k - 1 = 3 \cdot 4^k + (4^k -1).
-    \end{equation*} 
-        Como $3| 3 \cdot 4^k$ y por (HI) $3|4^k -1$    , tenemos
-        \begin{equation*}
-            3| 3 \cdot 4^k+ 4^k -1 =4^{k+1} -1.
-        \end{equation*}
-    \vskip .3cm 
-    \textbf{Opción b)} Ahora bien, como por (HI) $3 | 4^k -1$, existe $q$ tal que $4^k -1 = 3q$. Entonces,
-    \begin{equation*}
-        4^{k+1} -1 = 4 \cdot (4^k - 1) + 3 = 4 \cdot 3q + 3 = 3(4  q +1).
-    \end{equation*} 
-    Luego 
-    \begin{equation*}
-        3 | 3(4q +1) =4^{k+1} -1 .
-    \end{equation*}
+        La próxima proposición nos provee una herramienta aún mejor para calcular el mcd.
+        \pause
+        \begin{proposicion}\label{prop-alg-eucl} Sean  $a,b$ enteros no negativos con $b \not=0$, entonces 
+            \begin{equation}\label{bec}
+                a=bq+r\quad \Rightarrow \quad\mcd(a,b)=\mcd(b,r).
+            \end{equation}
+        \end{proposicion}
+    \end{frame}
     
     
-\end{frame}
-
-
-\begin{frame}
-    \textbf{2° demostración.} 
-    Observemos que $4 = 3 +1$, luego $4^n -1 = (3+1)^n -1$.
-    \begin{align*}
-        4^n -1 = (3+1)^n -1 &= \sum_{i=0}^{n} \binom{n}{i} 3^i 1^{n-i}- 1&&(\text{binomio de Newton}) \\
-        &= \sum_{i=0}^{n} \binom{n}{i} 3^i- 1 &&\\
-    &= 1 + \sum_{i=1}^{n} \binom{n}{i} 3^i - 1 &&\\
-    &= 1 + 3 (\sum_{i=1}^{n} \binom{n}{i} 3^{i-1}) - 1 &&(\text{$i > 0$ en la sumatoria})\\
-    &=  3 (\sum_{i=1}^{n} \binom{n}{i} 3^{i-1}) &&
-    \end{align*}
-    Luego $4^n -1 = 3 \cdot q$. 
-    \vskip .3cm 
-    Por lo tanto, $3|4^n -1$.
-
-    \qed
-\end{frame}
-
-
-\begin{frame}\frametitle{Ejercicios}
+    \begin{frame}
+        \begin{ejemplo} Encuentre el mcd de 174 y 72.
+        \end{ejemplo}\pause
+        \begin{solucion}\pause Con el uso repetido de la proposición anterior, obtenemos
+            \begin{alignat*}3
+                174&=72\cdot 2+30,&\quad&\text{ entonces  }& \quad(174,72)&= (72,30)\\
+                72&=30\cdot 2+12,&\quad&\text{ entonces  }& (72,30)&= (30,12)\\
+                30&=12\cdot 2+6,&\quad&\text{ entonces  }& (30,12)&= (12,6)\\
+                12&=6\cdot 2+0,&\quad&\text{ entonces  }&(12,6)&= (6,0)=6.\\
+            \end{alignat*}
+            
+            Por lo tanto $(174,72) = 6$. \qed
+            
+        \end{solucion}
+    \end{frame}
     
-    {\color{blue}Ejercicio}
-    \vskip .3cm 
-¿Cuál es el menor natural que es divisible por 6 y por 15?
+    
+    
+    \begin{frame}\frametitle{Algoritmo de Euclides}\label{film-alg-eucl}
+        Para calcular el mcd de enteros $a$ y $b$, con $b >0$, 
+        definimos $q_i$ y $r_i$ recursivamente  de la siguiente manera: $r_0 = a$, $r_1 = b$,  y \pause
+        \begin{align*}
+            &\text{($e_{1}$)}\qquad& r_0&=r_1 q_1 + r_2& &(0 < r_2<r_1)\\
+            &\text{($e_{2}$)}\qquad& r_1&=r_2q_2 + r_3\quad{}\quad{}\quad{}& &(0 < r_3<r_2)  \\
+            &\text{($e_{3}$)}\qquad& r_2&=r_3q_3 + r_4\quad{}\quad{}\quad{}& &(0 < r_4<r_3)  \\
+            &\cdots&&\\
+            &\text{($e_{i}$)}\qquad& r_{i-1}&=r_{i}q_{i} + r_{i+1}& &(0 < r_{i+1} <r_{i}) \\
+            &\cdots&& \\
+            &\text{($e_{k-1}$)}\qquad& r_{k-2}&=r_{k-1}q_{k-1} + r_{k}& &(0 < r_{k} <r_{k-1}) \\
+            &\text{($e_{k}$)}\qquad& r_{k-1}&=r_{k}q_{k} + 0 ,&&  
+        \end{align*}\pause
+        
+        Entonces $r_k = \mcd(a,b)$.
+    \end{frame}
 
-    \vskip .3cm
-    \pause
-    {\color{blue}Solución. } Hagamos una lista de múltiplos de 6 y 15.
-    \vskip .3cm
-    \;\textbullet\; Múltiplos de 6: 6, 12, 18, 24, 30, 36, 42, 48, 54, 60, ...
-    \vskip .3cm
-    \;\textbullet\; Múltiplos de 15: 15, 30, 45, 60 , 75, ...
-    \vskip .3cm
-    \;\textbullet\; Luego, el menor natural que es divisible por 6 y por 15 es 30.
-    \vskip .8cm
-\end{frame}
+    
 
+    
+    \begin{frame}
+        
+        \begin{itemize}
+            \item[$\bullet$] El proceso se detiene en el primer resto $r_i$  igual a $0$.
+            \vskip .4cm\pause
+            \item[$\bullet$]  El proceso debe detenerse, porque cada resto no nulo es positivo y estrictamente menor que el anterior.
+            \vskip .4cm\pause
+            \item[$\bullet$]  Este procedimiento es conocido como el {\em algoritmo de Euclides}.
+        \end{itemize}
+        \pause
+        
+        \vskip .4cm
+        \begin{teorema} Sean  $a$ y $b$ enteros con $b >0$, entonces el máximo común divisor  es el último resto no nulo obtenido en el algoritmo de Euclides ($r_k$ de la filmina anterior). 
+        \end{teorema}
+        \pause
+        \begin{idea}
+            $r_{i-1}=r_{i}q_{i} + r_{i+1} \Rightarrow \mcd(r_{i-1},r_{i}) = \mcd(r_{i} , r_{i+1})$. Luego,
+            \begin{multline*}
+                \mcd(a,b) = \mcd(r_{0},r_{1}) = \mcd(r_{1},r_{2}) = \cdots \\
+                \cdots = \mcd(r_{k-1},r_{k})  = \mcd(r_{k},0) = r_k. \qed
+            \end{multline*}
+            
+            
+        \end{idea}
+    \end{frame}
+    
+    \begin{frame}
+        
+        
+        Ejemplifiquemos el algoritmo de Euclides.\pause
+        
+        \vskip .4cm
+        
+        \begin{ejemplo} Encuentre el mcd de 2406 y 654.
+        \end{ejemplo}\pause
+        \begin{solucion}\pause Tenemos
+            \begin{alignat*}3
+                2406&=654\cdot3+444,&\quad&\text{ entonces  }&\quad (2406,654)&= (654,444) \\
+                654&=444\cdot1+210, &\quad&\text{ entonces  }&(654,444)&= (444,210)\\
+                444&=210\cdot2+24,&\quad&\text{ entonces  }&(444,210)&= (210,24)\\
+                210&=24\cdot8+18,&\quad&\text{ entonces  }&(210,24)&= (24,18)\\
+                24 &=18\cdot1+6,&\quad&\text{ entonces  }&(24,18)&= (18,6)\\
+                18&=6\cdot3 + 0&\quad&\text{ entonces  }& (18,6) &= (6,0) = 6 
+            \end{alignat*}\pause
+            Por lo tanto $(2406,654)=6$.
+            
+            
+            
+        \end{solucion}
+        
+    \end{frame}
+    
 
-
+    
 \end{document}
-
 
