--- a/2023-1/beamer/C04_md1.tex
+++ b/2023-1/beamer/C04_md1.tex
@@ -100,7 +100,7 @@
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[23/03/2023]{23 de marzo   de 2023}
+\date[28/03/2023]{28 de marzo   de 2023}
 
 
 
@@ -386,105 +386,135 @@
 	
 \end{frame}
 
+
+\begin{frame}\frametitle{} 
+
+    \begin{ejercicio}[(Serie aritmética)]\label{serie-aritmetica}
+        Probar que 
+        $$
+        1 + 2+ 3 + \cdots + n = \frac{n(n+1)}{2},
+        $$
+        para $n \in \N$.
+    \end{ejercicio}
+
+    \vskip .2cm\pause
+    \begin{proof}
+        \vskip .4cm \pause
+        \noindent({\it Caso  base}) El resultado es verdadero
+            cuando $n=1$ pues $ 1 = \frac{1 \cdot (1+1)}{2}$.
+        
+        \vskip .4cm 
+
+    \end{proof}
+	
+\end{frame}
+
+
 \begin{frame}
+    \frametitle{}
+
+		\noindent ({\it Paso  inductivo}) 
+        \pause \vskip .4cm
 		
-	Existen varias formas modificadas del principio de inducción. A veces es conveniente tomar como base inductiva el valor $n=0$, por otro lado puede ser apropiado tomar un valor como $2$ o $3$ porque los primeros casos pueden ser excepcionales. 
-	\pause
-	\medskip
-	
-	Cada problema debe ser tratado según sus características. 
-	\pause
-	\medskip
-	
-	Otra modificación útil es tomar como hipótesis inductiva la suposición de que el resultado es verdadero para todos los valores $n\le k$, más que para $n=k$ solamente.
-	\pause
-	\medskip
-	
-	Esta formulación es llamada a veces el {\it principio de inducción completa}. Todas esas modificaciones pueden justificarse con cambios triviales en la demostración del principio de inducción.
-	
+        Supongamos que el resultado verdadero cuando $n=k$, o
+		sea, que 
+        $$
+        \sum_{i=1}^{k} i = \frac{k(k+1)}{2}\quad \text{hipótesis inductiva (HI).}
+        $$
+        \vskip .4cm\pause
+        En el paso inductivo queremos probar que 
+        $$
+        \sum_{i=1}^{k} i = \frac{k(k+1)}{2} \quad \Rightarrow \quad    \sum_{i=1}^{k+1} i =\frac{(k+1)(k+2)}{2}.
+        $$
+\vskip 1cm
+
 \end{frame}
 
-\begin{frame}	
-	El siguiente teorema incorpora muchas de las modificaciones del principio de inducción mencionadas más arriba.
+\begin{frame}
+    \frametitle{}
 
+    Entonces
+
+    \medskip
+    
+    
+    \begin{tabular}{lllll}
+        $\displaystyle\sum_{i=1}^{k+1} i$ &$=$& $\displaystyle\sum_{i=0}^{k} i + (k+1)$ &\qquad &$\text{(por la definición recursiva de $\sum$)}$ \\[0.6cm]
+    &$=$& $\displaystyle\frac{k(k+1)}{2}+(k+1)$ &\qquad &$\text{(por hipótesis inductiva)}$ \\[0.6cm]
+    &$=$& $\displaystyle(k+1)(\frac{k}{2}+1))$ &\qquad &$\text{($(k+1)$ factor común)}$ \\[0.6cm]
+    &$=$& $\displaystyle(k+1)\frac{(k+2)}{2}.$&\qquad &\\[0.6cm]
+    &$=$& $\displaystyle\frac{(k+1)(k+2)}{2}.$&\qquad &
+    \end{tabular}
+    \medskip
     \pause
-	\medskip
-	
+    
+    Luego el resultado es verdadero cuando $n=k+1$ y por el principio de inducción, es verdadero para todos los enteros positivos $n$.\qed
 
-	
-	%\begin{teorema}[Inducción completa]\label{ind-completa} 
-	{\color{blue} Teorema (Inducción completa)}
-	\vskip .2cm	
-		Sea $n_0$ número entero y sea $P(n)$ una propiedad para $n \ge n_0$ tal que:
-		\begin{enumerate}
-			\item[a)] $P(n_0)$ es verdadera.
-			\item[b)] Si $P(h)$ verdadera para toda $h$ tal que $n_0 \le h \le k$ implica $P(k + 1)$ verdadera.
-		\end{enumerate}
-		Entonces $P(n)$ es verdadera para todo $n \ge n_0$.
-	%\end{teorema}
-
-	
 \end{frame}
 
+\begin{frame}\frametitle{} 
 
+    \begin{ejercicio}[(Serie geométrica)]\label{serie-geometrica}
+        Probar que 
+        $$
+        1 + q+ q^2 + \cdots + q^n = \sum_{i=0}^{n} q^i = \frac{q^{n+1}-1}{q -1},
+        $$
+        para $n \in \N_0$, $q >0$ y $q \ne 1$.
+    \end{ejercicio}
 
-\begin{frame}		
-	
-	\begin{ejemplo}
-		$$u_1 = 3,\qquad u_2 = 5,\qquad u_n = 3u_{n-1}- 2u_{n-2},\qquad  n \ge 3.$$
-		Probemos que $u_n = 2^n + 1$, para todo $n \in  \mathbb N$.
-	\end{ejemplo}
-		{\color{blue} Solución.}
-		\vskip .2cm	
-		\pause
-			
-			\noindent({\it Caso  base})
-            
-            \setbeamercolor{postit}{fg=black,bg=example text.fg!75!black!10!bg}
-        \hskip 2.5cm\begin{beamercolorbox}[wd=0.65\textwidth,rounded=true,shadow=true]{postit}
-            $n= 1$ :  $3 = 2^1+1$ \checkmark, \qquad   $n=2$ :  $ 5 =2^2+1$ \checkmark.
-            \end{beamercolorbox} \pause
-			
-			\vskip.4cm
-			
-			\noindent ({\it Paso  inductivo}) Hipótesis inductiva:
-            \vskip.2cm
-            \setbeamercolor{postit}{fg=black,bg=example text.fg!75!black!10!bg}
-            \hskip 2.5cm\begin{beamercolorbox}[wd=0.65\textwidth,rounded=true,shadow=true]{postit}
-			\quad $u_h = 2^h+1$  para  $1 \le h \le k$   y  $k \ge 2$  (HI),  
-        \end{beamercolorbox}
-			\pause
-            \vskip.2cm
-			 Luego debemos probar que:
-			
-		
+    \vskip .2cm\pause
+    \begin{proof} \pause
+        \vskip .2cm 
+        \noindent({\it Caso  base}) El resultado es verdadero
+            cuando $n=0$ pues 
+            $$q^0 = 1 =  \frac{q^{0+1}-1}{q -1}.$$
+        
+        \vskip .4cm 
 
-		%\end{proof}
-	
+    \end{proof}
 	
 \end{frame}
 
 \begin{frame}
     \frametitle{}
-    \setbeamercolor{postit}{fg=black,bg=example text.fg!75!black!10!bg}
-    \hskip 0.5cm\begin{beamercolorbox}[wd=0.9\textwidth,rounded=true,shadow=true]{postit}
-        \quad $u_h = 2^h+1$  para  $1 \le h \le k$  (HI) \quad $\Rightarrow$ \quad
-        $u_{k+1}=2^{k+1}+1.$  
-    \end{beamercolorbox}	\pause
-    \vskip.5cm
-    Se  comienza con el término izquierdo de lo que se quiere probar y  se obtiene el derecho. 	\pause
-    \vskip.4cm
-    \begin{tabular}{llll}
-        $u_{k+1}$ &$= 3u_k -2u_{k-1}$ &\qquad &{(por definición recursiva)}  \\[0.2cm].
-            &$= 3(2^k+1)-2(2^{k-1}+1)$  &\qquad &{(por hipótesis inductiva)} \\[0.2cm]
-            &= $3\cdot 2^k+3-2\cdot 2^{k-1}-2$ &\qquad & \\[0.2cm]
-            &= $3\cdot 2^k+1- 2^{k}$  &\qquad & \\[0.2cm]
-            &= $2\cdot 2^k+1$  &\qquad & \\[0.2cm]
-            &= $2^{k+1}+1.$  &\qquad & 
-        \end{tabular}
 
-\qed
+		\noindent ({\it Paso  inductivo})
+		Supongamos que el resultado verdadero cuando $n=k$, o
+		sea, que 
+        $$
+        \sum_{i=0}^{k} q^i = \frac{q^{k+1}-1}{q -1},\quad \text{hipótesis inductiva (HI).}
+        $$
+        \vskip .4cm\pause
+        En el paso inductivo queremos probar que 
+        $$
+        \sum_{i=0}^{k} q^i = \frac{q^{k+1}-1}{q -1} \quad \Rightarrow \quad   \sum_{i=0}^{k+1} q^i = \frac{q^{k+2}-1}{q -1}.
+        $$
+\vskip 1cm
+
 \end{frame}
+
+\begin{frame}
+    \frametitle{}
+
+    Entonces
+
+    \medskip
+    
+    
+    \begin{tabular}{lllll}
+        $\displaystyle\sum_{i=0}^{k+1} q^i $ &$=$& $\displaystyle\sum_{i=0}^{k} q^i  + q^{k+1}$ &\qquad &$\text{(por la definición recursiva)}$ \\[0.6cm]
+    &$=$& $\displaystyle\ \frac{q^{k+1}-1}{q -1}+ q^{k+1}$ &\qquad &$\text{(por hipótesis inductiva)}$ \\[0.6cm]
+    &$=$& $\displaystyle\ \frac{q^{k+1}-1+ (q-1) q^{k+1}}{q -1}$ &\qquad & \\[0.6cm]
+    &$=$& $\displaystyle\ \frac{q^{k+1}-1+ q\cdot q^{k+1}- q^{k+1}}{q -1}$ &\qquad &\\[0.6cm]
+    &$=$& $\displaystyle\ \frac{q^{k+2}-1}{q -1}$ &\qquad &
+    \end{tabular}
+    \medskip
+    \pause
+    
+    Luego el resultado es verdadero cuando $n=k+1$ y por el principio de inducción, es verdadero para todos los enteros positivos $n$.\qed
+
+\end{frame}
+
 
 \end{document}
 
