--- a/2023-1/beamer/C07_md1.tex
+++ b/2023-1/beamer/C07_md1.tex
@@ -24,10 +24,10 @@
 \usetikzlibrary{arrows}
 \usetikzlibrary{matrix}
 \tikzset{
-    every picture/.append style={
-        execute at begin picture={\deactivatequoting},
-        execute at end picture={\activatequoting}
-    }
+	every picture/.append style={
+		execute at begin picture={\deactivatequoting},
+		execute at end picture={\activatequoting}
+	}
 }
 \usetikzlibrary{decorations.pathreplacing,angles,quotes}
 \usetikzlibrary{shapes.geometric}
@@ -38,12 +38,13 @@
 \usepackage{tkz-graph}
 \usepackage{polynom}
 \polyset{%
-    style=B,
-    delims={(}{)},
-    div=:
+	style=B,
+	delims={(}{)},
+	div=:
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
+
 \setbeamertemplate{itemize item}{$\circ$}
 \setbeamertemplate{enumerate items}[default]
 \definecolor{links}{HTML}{2A1B81}
@@ -94,359 +95,344 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%LETRAS
 
 
-\title[Clase 7 - Conteo 2]{Matemática Discreta I \\ Clase 7 - Conteo ($2^{\circ}$ parte)}
+\title[Clase 8 - Conteo 3]{Matemática Discreta I \\ Clase 8 - Conteo ($3^\circ$ parte)}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
-    \\[\baselineskip] ${}^{}$
-    \\[\baselineskip]
+	\\[\baselineskip] ${}^{}$
+	\\[\baselineskip]
 }
-\date[04/04/2023]{4 de abril  de 2023}
-
+\date[11/04/2023]{11 de abril  de 2023}
 
 
 
 \begin{document}
-
-\frame{\titlepage} 
-
-
-
-\begin{frame}    \frametitle{Selecciones ordenadas sin repetición}
-    Sea $X$ un conjunto finito de $n$ elementos. 
-    
-    \vskip .2cm
-    \begin{center}
-        {\it ¿De cuántas formas podemos elegir $m$  de $X$ en forma ordenada?}
-    \end{center}
-    \vskip .3cm        \pause 
-    %\begin{proposicion} 
-    {\color{blue}Ejemplo}
-    \vskip .2cm
-    Elegir en forma ordenada y sin repetición 2 elementos del conjunto $X = \{ a,b,c\}$,\pause {} tenemos \quad $ ab,\quad ac,\quad ba,\quad bc,\quad ca,\quad cb,$ \quad 
-    6  elecciones.
-    
-    \vskip .5cm    \pause
-    
-    Es decir si  el conjunto es $X= \{a_1,a_2,\ldots,a_n\}$, las selecciones deben ser del tipo 
-    $$
-    a_{i_1} a_{i_2} \cdots a_{i_m}
-    $$
-    donde  $a_{i_j} \not= a_{i_k}$ si $i\not=k$. 
-\end{frame}
-
-
-
-
-
-\begin{frame}        
-    Por ejemplo, las selecciones de $3$ elementos en forma ordenada y sin repetición de $\{1, 2,3\}$  son exactamente \pause
-    $$
-    1 2 3,\; 1 3 2,\; 2 1 3,\; 2 3 1,\; 3 1 2,\; 3 2 1
-    $$
-    (son las ternas donde los tres números son distintos). 
-    
-    \vskip .3cm    
-    \pause
-    O sea hay $6$ selecciones ordenadas y sin repetición de  elementos de $\{1, 2,3\}$.
-    \vskip .3cm    
-    Notemos que: 
-    \vskip .3cm    
-    \begin{tabular}{lll}
-        $1^{\circ}$ elemento &$\to$ & 3 posibilidades: 1, 2, 3 \\
-        $2^{\circ}$ elemento &$\to$ & 2 posibilidades: distinto  al elegido en $1^{\circ}$ \\
-        $3^{\circ}$ elemento &$\to$ & 1 posibilidades: distinto  a los elegidos en $1^{\circ}$  y $2^{\circ}$
-    \end{tabular}
-    \vskip .3cm    
-    Tenemos entonces  $3 \cdot 2 \cdot 1 = 3!$ selecciones posibles.
-    \vskip .2cm    \vskip .2cm    
-\end{frame}
-
-
-\begin{frame}    
-    Pensemos ahora que queremos elegir en forma ordenada y sin repetición $3$ elementos entre $5$. Entonces para la primera elección tenemos $5$ posibilidades, para la segunda $4$ posibilidades y para la tercera $3$ posibilidades haciendo un total de 
-    $$
-    5 \cdot 4 \cdot 3
-    $$
-    selecciones posibles. 
-    
-
-    \pause
-    \vskip .5cm    
-    %\begin{proposicion} 
-    {\color{blue}Proposición}\label{ordsinrep}
-    \vskip .2cm
-    {\it Si $n \ge m$ entonces existen
-        \begin{equation*}
-        n \cdot (n - 1) \cdots (n - m + 1), \qquad \text{($m$ - factores)}
-        \end{equation*}
-        selecciones ordenadas y sin repetición de $m$ elementos de un conjunto de $n$ elementos.}
-    %\end{proposicion}
-\end{frame}
-
-
-
-\begin{frame}    
-    
-    
-    {\color{blue}Ejemplo}
-    \vskip .2cm
-    
-    Si  hay 10 personas ¿De cuántas formas puedo  hacer una fila de 7 personas?
-    \vskip .2cm\pause
-    {\color{blue}Solución.}\pause
-    \vskip .2cm
-    Razonando,
-    \vskip .3cm    
-    \begin{tabular}{llrl}
-        $1^{\circ}$ puesto &$\to$ & 10 &posibilidades \\\pause
-        $2^{\circ}$ puesto &$\to$ & 9 &posibilidades\\\pause
-        $3^{\circ}$ puesto &$\to$ & 8 &posibilidades \\\pause
-        $4^{\circ}$ puesto &$\to$ & 7 &posibilidades \\\pause
-        $5^{\circ}$ puesto &$\to$ & 6 &posibilidades\\\pause
-        $6^{\circ}$ puesto &$\to$ & 5 &posibilidades \\\pause
-        $7^{\circ}$ puesto &$\to$ & 4 &posibilidades \\\pause
-    \end{tabular}
-    \vskip .3cm    
-    La solución es entonces $10 \cdot 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4$.\qed
-    
-\end{frame}
-
-
-\begin{frame}    
-    
-    
-    {\color{blue}Ejemplo (repetido)}
-    \vskip .2cm
-    
-    Si  hay 10 personas ¿De cuántas formas puedo  hacer una fila de 7 personas?
-    \vskip .2cm\pause
-    {\color{blue}Solución (aplicando la proposición de p. \ref{ordsinrep}).}\pause
-    \vskip .2cm
-    \begin{tabular}{llr}
-        Cantidad  de elementos: &$\to$ & $n = 10$ \\\pause
-        Cantidad  de elecciones: &$\to$ & $m = 7$
-    \end{tabular}
-    \vskip .3cm    \pause
-    Por lo tanto, $n-m+1 = 10 - 7 +1  = 4$.
-    \vskip .3cm    \pause
-    La solución es entonces: $10 \cdot 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4$.
-    
-    \vskip .5cm     \pause
-    
-    Observar que
-    \begin{align*}
-    10 \cdot 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4 &= \frac{10 \cdot 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4\cdot 3\cdot 2\cdot1}{3\cdot 2\cdot1} = \frac{10!}{3!} \\
-    &= \frac{10!}{(10 -7)!}.
-    \end{align*}\qed
-    
-\end{frame}
-
-
-\begin{frame}    
-
-    {\color{blue}Ejemplo}
-    \vskip .2cm
-    ¿Cómo elegir 4 elementos entre $n$?
-    \vskip .2cm\pause
-    {\color{blue}Solución.}\pause
-    \vskip .2cm
-    Razonando,
-    \vskip .3cm    
-    \begin{tabular}{llrl}
-        $1^{\circ}$ puesto &$\to$ & n-1 &posibilidades \\\pause
-        $2^{\circ}$ puesto &$\to$ & n-2 &posibilidades\\\pause
-        $3^{\circ}$ puesto &$\to$ & n-3 &posibilidades \\\pause
-        $4^{\circ}$ puesto &$\to$ & n-4 &posibilidades \\\pause
-    \end{tabular}
-
-    La solución es entonces 
-    \begin{align*}
-        (n-1)  (n-2)  (n-3) (n-4) &= \frac{(n-1) (n-2)  (n-3)(n-4) (n-5)!}{(n-5)!}\\
-        &=\frac{n!}{(n-5)!}
-    \end{align*}
-    \qed
-
-\end{frame}
-
-\begin{frame}
-    En general
-    \begin{equation*}
-    n \cdot (n-1)  \cdots (n - m +1) = \frac{    n \cdot (n-1)\cdots (n - m + 1) \cdot (n-m) \cdots 2 \cdot 1 }{(n-m) \cdots 2 \cdot  1 }.
-    \end{equation*}
-    \vskip .5cm    \pause
-    Es decir 
-
-    \setbeamercolor{postit}{fg=black,bg=example text.fg!75!black!10!bg}
-    \hskip 1.8cm \begin{beamercolorbox}[wd=0.65\textwidth,rounded=true,shadow=true]{postit}
-        \begin{equation*}
-        n \cdot (n-1)  \cdots (n - m +1) =  \frac{n!}{(n-m)!}.
-    \end{equation*}
-    \end{beamercolorbox}    
-
-
-    \vskip 1cm    \pause
-    Por lo tanto podemos reescribir la proposición en forma mas compacta:
-
-    
-\end{frame}
-
-
-
-\begin{frame}
-
-
-    {\color{blue}Proposición}
-    \vskip .2cm
-    {\it Si $n \ge m$ entonces existen
-        \begin{equation*}\label{ordenadas_sin_rep_compacta} 
-        \frac{n!}{(n-m)!}
-        \end{equation*}
-        selecciones ordenadas y sin repetición de $m$ elementos de un conjunto de $n$ elementos.}
-    %\end{proposicion}
-\end{frame}
-
-
-
-\begin{frame}
-    
-    %\begin{ejemplo}
-    {\color{blue}Ejemplo}
-    \vskip .2cm
-    Si en un colectivo hay $9$ asientos vacíos. 
-    
-    \vskip .2cm
-    
-    ¿De cuántas formas se pueden distribuir $3$ pasajeros? 
-    
-    Lo que se está preguntando es cuantas posibles distribuciones de $3$  asientos existen (no importa quien se sienta  en cada asiento). 
-    
-    
-    \vskip .2cm\pause
-    {\color{blue}Solución}\pause
-    \vskip .2cm
-    Se trata de ver cuantas selecciones ordenadas y sin repetición hay de $3$ asientos entre $9$. 
-    \vskip .2cm\pause
-    Primero hagámoslo usando el principio de multiplicación:\pause
-    \vskip .2cm
-    \begin{itemize}
-        \item 1° persona: 9 lugares posibles. Total: 9\pause
-        \item 2° persona: 8 lugares posibles. Total: $9 \times 8$\pause
-        \item 3° persona: 7 lugares posibles. Total: $9\times 8\times 7$.
-    \end{itemize}
-    
-\end{frame}
-
-
-
-\begin{frame}        
-    Este número es
-    $$
-    9 \cdot 8 \cdot 7 , \qquad \text{$3$ - factores.}
-    $$
-    %\end{ejemplo}
-    \vskip .2cm
-    \pause
-    Podríamos haberlo hecho directamente por la proposición de la p. \ref{ordenadas_sin_rep_compacta}: elegir  3 elementos entre 9 son
-    \vskip .2cm
-    \begin{align*}
-    \frac{9!}{(9-3)!} &= \frac{9!}{6!} \\
-    &= \frac{ 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4\cdot 3\cdot 2\cdot1}{6\cdot 5\cdot 4\cdot 3\cdot 2\cdot1} \\
-    &= 9  \cdot 8\cdot 7
-    \end{align*}
-    posibilidades.
-    \qed
-\end{frame}
-
-
-
-
-\begin{frame}\frametitle{Permutaciones}
-    
-
-    Hay 
-    $$
-    \frac{n!}{0!}= n!
-    $$
-    selecciones ordenadas y sin repetición de  $n$ elementos en un conjunto con $n$ elementos. 
-    \vskip .4cm\pause
-    
-    Las selecciones ordenadas y sin repetición de  $n$ elementos en un conjunto con $n$ elementos se denominan {\em permutaciones} de grado $n$.
-        \vskip .4cm\pause
-    Hay, pues, $n!$ permutaciones de grado $n$.
-    \vskip .4cm
-
-
-\end{frame}
-
-\begin{frame}\frametitle{Permutaciones}
-
-Respondamos la siguiente pregunta:
-\vskip .4cm
-¿De cuantas formas puedo ordenar $n$ objetos? \pause
-\vskip .4cm
-Observemos que, ordenar $n$ objetos es equivalente a seleccionar ordenadamente y sin repetición los  $n$ objetos (de un conjunto con $n$ objetos). 
-\vskip .4cm
-Por lo tanto,  la respuesta es $n!$. \pause
-\vskip .4cm
-{\color{blue}Ejemplo.}
-\vskip .2cm
-Dado el conjunto $\mathbb I_4 = \{1,2,3,4 \}$ ¿cuántas permutaciones de los elementos de $\mathbb I_4 $ hay?
-\vskip .2cm\pause
-{\color{blue}Solución.}\pause $4!$.\qed
-\end{frame}
-
-
-
-\begin{frame}
-    
-    {\color{blue}Ejemplo}
-    \vskip .2cm
-        ¿Cuántas permutaciones pueden formarse con las letras de
-        {\em silvia}?
-        \pause
-        \vskip .2cm
-        {\color{blue}Solución}\pause
-        \vskip .2cm
-        Afirmamos que se pueden formar  $\displaystyle{\frac{6!}{2!}}$ palabras usando las letras de {\em silvia}.
-        
-        Si escribo en lugar de {\em silvia},
-        $$
-        \text{\em s i l v i' a}
-        $$
-        Es decir si cambio la segunda {\em i } por {\em i'}, todas las letras son distintas, luego hay $6!$ permutaciones, pero
-        cada par de permutaciones del tipo
-        \begin{align*}
-        \cdots \text{\em i } \cdots  \text{\em i' }  \cdots \\
-        \cdots \text{\em i' } \cdots  \text{\em i } \cdots
+	
+	\frame{\titlepage} 
+	
+	
+	
+	\begin{frame}\frametitle{Selecciones sin orden}
+		
+		$X$ finito de $n$ elementos. 
+		\begin{center}
+			{\it ¿Cuántos subconjuntos de $m$ elementos hay en $X$?}
+		\end{center} \pause
+		
+		\vskip .4cm
+		{\color{blue}Ejemplo}
+		\vskip .2cm
+		%\begin{ejemplo}
+		Por ejemplo, sea $\mathbb I_5 = \{ 1, 2, 3, 4, 5 \}$ y nos interesan los
+		subconjuntos de tres ele\-men\-tos. ¿Cuántos habrá? 
+		
+		\vskip .2cm \pause
+		
+		{\color{blue}Solución.} \pause
+		\vskip .2cm
+		Contemos directamente: 
+		
+		$\{1,2,3\}$, $\{1,2,4\}$, $\{1,2,5\}$, $\{1,3,4\}$, $\{1,3,5\}$, $\{1,4,5\}$,
+		
+		$\{2,3,4\}$, $\{2,3,5\}$, $\{2,4,5\}$,
+		
+		$\{3,4,5\}$.
+		\vskip .2cm \pause
+		La respuesta, entonces, es 10. 
+		
+	\end{frame}
+	
+	
+	
+	
+	
+	
+	
+	\begin{frame}	
+		
+		¿Cómo podemos calcular este número sin contar caso por caso?
+		\vskip .2cm \pause
+		
+		Una forma de individualizar un subconjunto de tres elementos en $\mathbb I_5$, consiste
+		en, primero, seleccionar  ordenadamente $3$ elementos.
+		
+		\vskip .2cm \pause
+		
+		Habría, a priori, $5 \cdot 4 \cdot 3$ subconjuntos pues ese es el número
+		de selecciones ordenadas y sin repetición de $3$ elementos de $\mathbb I_5$. 
+		
+		\vskip .2cm
+		Es claro que algunas de las selecciones ordenadas pueden determinar el mismo subconjunto. En efecto, por ejemplo, cualesquiera de las selecciones
+		\begin{align*}
+			1 2 3, \qquad  1 3 2, \qquad  2 1 3, \qquad 2 3 1, \qquad  3 1 2, \qquad  3 2 1
+		\end{align*}
+		determina el subconjunto $\{ 1, 2, 3\}$. 
+		
+		\vskip .2cm \pause
+		
+		Es decir las permutaciones de $\{ 1, 2, 3\}$ determinan el mismo subconjunto.  
+		
+		\vskip .2cm 
+		
+		Veamos todos los casos: 
+		
+		
+	\end{frame}
+	
+	
+	
+	
+	
+	\begin{frame}	
+		
+		\pause
+		\begin{align*}
+			&1 2 3 \qquad  1 3 2  \qquad  2 1 3  \qquad 2 3 1  \qquad  3 1 2  \qquad  3 2 1 \qquad	&\to \qquad &\{1,2,3\}\\
+			&1 2 4  \qquad  1 4 2  \qquad  2 1 4  \qquad 2 4 1  \qquad  4 1 2  \qquad  4 2 1  \qquad	&\to \qquad &\{1,2,4\}\\
+			&1 2 5  \qquad  1 5 2  \qquad  2 1 5  \qquad 2 5 1  \qquad  3 1 2  \qquad  5 2 1  \qquad	&\to \qquad &\{1,2,5\}\\
+			&1 3 4  \qquad  1 43  \qquad  3 1 4  \qquad 34 1  \qquad  4 1 3  \qquad  431  \qquad	&\to \qquad &\{1,3,4\}\\
+			&1 3 5  \qquad  1 53  \qquad  3 1 5  \qquad 35 1  \qquad  5 1 3  \qquad  531  \qquad	&\to \qquad &\{1,3,5\}\\
+			&1 45  \qquad  1 54  \qquad  4 1 5  \qquad 45 1  \qquad  5 1 4  \qquad  541  \qquad	&\to \qquad &\{1,4,5\}\\
+			&234  \qquad  243  \qquad  324  \qquad 342  \qquad  423  \qquad  432  \qquad	&\to \qquad &\{2,3,4\}\\
+			&235  \qquad  253  \qquad  325  \qquad 352  \qquad  523  \qquad  532  \qquad	&\to \qquad &\{2,3,5\}\\
+			&245  \qquad  254  \qquad  425  \qquad 452  \qquad  524  \qquad  542  \qquad	&\to \qquad &\{2,4,5\}\\
+			&345  \qquad  354  \qquad  435 \qquad 453  \qquad  534  \qquad  543  \qquad	&\to \qquad &\{3,4,5\}
+		\end{align*}	
+		
+	\end{frame}
+	
+	
+	
+	\begin{frame}
+		
+		Es decir  $3! = 6$ selecciones ordenadas nos determinan un subconjunto de tres elementos. Por lo tanto, el número total de
+		subconjuntos de $3$ elementos es
+		
+		$$
+		\frac{5 \cdot 4 \cdot 3}{3!} =  \frac{5!}{3! (5 - 3)!}
+		$$
+		\vskip .4cm \pause
+		
+		Podemos  hacer el mismo razonamiento, si tuviéramos que elegir subconjuntos de 2 elementos:
+		
+		\vskip .4cm \pause
+		
+		\begin{itemize}
+			\item Tenemos $5 \cdot 4 = \displaystyle \frac{5!}{3!}$  selecciones ordenadas de 2 elementos.
+			\item La cantidad de permutaciones de dos elementos es $2!$, luego,
+			\item hay  $\displaystyle \frac{5!}{3!2!} = 10$ subconjuntos de 2 elementos. 
+		\end{itemize}
+		
+		
+		
+	\end{frame}
+	
+	\begin{frame}
+		En el caso general de subconjuntos de $m$ elementos de un
+		conjunto de $n$ elementos ($m \le n$) podemos razonar en forma análoga. 
+		
+		\vskip .4cm \pause
+		
+		\begin{itemize}
+			\item Tenemos $\displaystyle \frac{n!}{(n-m)!}$  selecciones ordenadas de $m$ elementos entre $n$. \pause
+			\item La cantidad de permutaciones de $m$ elementos es $m!$, luego, \pause
+			\item hay  $\displaystyle \frac{n!}{(n-m)!m!}$ subconjuntos de $m$ elementos. 
+		\end{itemize}
+		
+		
+		
+		\vskip .4cm \pause
+		
+		
+		
+		{\color{blue}Teorema}
+		\vskip .2cm
+		{\it Sea $X$ un conjunto de $n$ elementos. Entonces   el número total de subconjuntos de $m$ elementos
+			de $X$ es
+			$$
+			\frac{n!}{(n - m)!\; m!}
+			$$}
+		
+		\vskip .4cm
+	\end{frame}
+	
+	
+	\begin{frame}	\frametitle{Número combinatorio}
+		
+		Sean $n, m \in \mathbb N_0$, $m \le n$. Definimos
+		$$
+		\binom{n}{m} = \frac{n!}{(n - m)! \; m!}
+		$$
+		el  {\em número combinatorio} asociado al par $n$, $m$  o {\em número combinatorio $n$, $m$}.
+		
+		\vskip .4cm \pause
+		Por razones que se verán más adelante se denomina también el {\em coeficiente binomial} asociado al par $n$, $m$ con $m \le n$.
+		
+		\vskip .4cm  \pause
+		Definimos también
+		$$
+		\binom{n}{m} = 0,\qquad \text{ si } m > n.
+		$$
+		
+	\end{frame}
+	
+	
+	
+	\begin{frame}
+		Hay unos pocos números combinatorios que son fácilmente calculables: 
+		$$
+		\binom{n}{0} = \binom{0}{0} = 1 \qquad \text{ y }\qquad  \binom{n}{1} = \binom{n}{n-1} = n. 
+		$$
+		Estos resultados se obtienen por aplicación directa de la definición (recordar que  $0! =1$). 
+		
+		
+		\vskip .4cm  \pause
+		
+		Con el número combinatorio podemos reescribir el resultado visto más arriba:
+		
+		\vskip .4cm 
+		{\color{blue}Teorema}
+		\vskip .2cm
+		{\it Sean $n, m \in \mathbb N_0$, $m \le n$, y supongamos que el conjunto $X$ tiene $n$ elementos.
+			Entonces la cantidad de subconjuntos de $X$ con $m$ elementos es
+			$
+			\displaystyle\binom{n}{m}
+			$.}
+		
+	\end{frame}
+	
+	
+	\begin{frame}
+		
+		
+		{\color{blue}Ejemplo}
+		\vskip .3cm
+		¿Cuántos comités pueden formarse de un conjunto de $6$ mujeres y $4$ hombres, si el comité debe estar compuesto por $4$ mujeres y $2$ hombres?
+		\vskip .3cm \pause
+		{\color{blue}Solución} \pause
+		\vskip .2cm Debemos elegir $4$ mujeres entre $6$, y la cantidad de elecciones posibles es   $\displaystyle\binom{6}{4}$. Por otro lado, hay $ \displaystyle\binom{4}{2}$ formas de elegir $2$ hombres entre $4$. Luego, por el principio de multiplicación,  el resultado es
+		\begin{align*}
+            \binom{6}{4}\cdot \binom{4}{2} &= \frac{6!}{(6-4)!4!}\cdot\frac{4!}{(4-2)!2!}= \frac{6!}{2!4!}\cdot\frac{4!}{2!2!} = \frac{6\cdot 5}{2}\cdot\frac{4\cdot 3}{2} \\[0.3cm] & = 15 \cdot 6= 90.
         \end{align*}
-        coinciden, por lo tanto tengo que dividir por $2$ el número total de permutaciones: $6! / 2! = 360$.\qed
-        
-\end{frame}
+        \qed
+		
+	
+		\vskip .3cm
+	\end{frame}
+	
+	
+	\begin{frame}\frametitle{Simetría del número combinatorio}
+		
+		
+		{\color{blue} Proposición}
+		\vskip .2cm
+		{\it	Sean $m,n \in \mathbb N_0$, tal que $m \le n$. Entonces
+			$$
+			\binom{n}{m} = \binom{n}{n-m}.
+			$$} \pause  
+		{\color{blue} Demostración.} \pause  
+		\begin{align*}
+			\binom{n}{n-m} &= \frac{n!}{(n-(n-m))!\,(n-m)!} \\
+			&=  \frac{n!}{m!\,(n-m)!} \\
+			&=    \frac{n!}{(n-m)!\,m!}=  \binom{n}{m}.
+		\end{align*}
+		\qed
+		
+		
+		
+	\end{frame}
+	
+	
+	\begin{frame}	
+		
+		El hecho  de que 
+		$$
+		\binom{n}{m} = \binom{n}{n-m}.
+		$$
+		se puede interpretar en términos de conteo:  $\displaystyle\binom{n}{m}$ es el número de subconjuntos de $m$ ele\-men\-tos de un conjunto de $n$ elementos. 
+		\vskip .2cm\pause  
+		
+		Puesto que con cada subconjunto de $m$ ele\-men\-tos hay unívocamente asociado un subconjunto de $n - m$ elementos, su complemento en $X$, es claro que $$\displaystyle\binom{n}{m} = \binom{n}{n-m}.$$
+		
+		
+	\end{frame}
+	
+	
+	\begin{frame}\frametitle{Triángulo de Pascal}
+		
+		
+		{\color{blue} Teorema}
+		\vskip .2cm
+		{\it
+			Sean $m,n \in \mathbb N$, tal que $m \le n$. Entonces
+			$$
+			\binom{n}{m-1} + \binom{n}{m}   = \binom{n+1}{m} 
+			$$
+		}\pause  
+		
+		{\color{blue} Demostración.}\pause  
+		\vskip .2cm
+		
+		El enunciado nos dice que debemos demostrar que 
+		\begin{equation*}
+			\frac{n!}{(n-m+1)!\,(m-1)!} +  \frac{n!}{(n-m)!\,m!} = \frac{(n+1)!}{(n-m+1)!\,m!}
+		\end{equation*}
+		
+		y lo dejamos como ejercicio.\qed
+		
+	\end{frame}
+	
+	\begin{frame}
+		
+		Veamos unos pocos ejemplos de la fórmula $\displaystyle\binom{n}{m-1} + \binom{n}{m}   = \binom{n+1}{m}$ o  equivalentemente (dando vuelta la igualdad).
+		$$
+		\binom{n+1}{m} = \binom{n}{m-1} + \binom{n}{m} .
+		$$
+		\vskip .3cm \pause  
 
-
-\begin{frame}        Tomemos la palabra
-        $$
-        \text{\em ramanathan}
-        $$
-        el número total de permutaciones es $$\displaystyle{\frac{10!}{ 4!2!}}.$$
-        \pause
-        En efecto, escribiendo el nombre anterior así 
-        $$
-        r_1\;a_1\;m_1\;a_2\;n_1\;a_3\;t_1\;h_1\;a_4\;n_2
-        $$
-        el número total de permutaciones es $10!$ Pero
-        permutando las $a_i$ y las $n_i$ sin mover las otras letras obtenemos
-        la misma permutación de {\em ramanathan}.
-        \vskip .2cm
-        Como hay $4!$ permutaciones de las letras $a_1$, $a_2$, $a_3$, $a_4$, y
-        $2!$ de $n_1$, $n_2$ el número buscado es 
-        $$
-        \frac{10!}{ 4!2!}.
-        $$
-        
-
-\end{frame}
-
-
+        \begin{block}{Ejemplos}
+        \begin{align*}
+            \binom{4}{2} &= \binom{3}{1} + \binom{3}{2} = 3+3 =6. \\[.5cm]
+            \binom{5}{2} &= \binom{4}{1} + \binom{4}{2} = 4 + 6 = 10, \\[.3cm]
+            \binom{5}{3} &= \binom{4}{2} + \binom{4}{3} = 6 + 4 = 10.
+        \end{align*}
+    \end{block}
+		
+	\end{frame}
+	
+	\begin{frame}
+		El teorema precedente permite calcular los coeficientes binomiales:
+		\pause  
+		\begin{align*}
+			&& && && && && &\binom{0}{0}& && && && && &&  \\
+			&& && && && &\binom{1}{0}& && &\binom{1}{1}& && && && &&  \\
+			&& && && &\binom{2}{0}& && &\binom{2}{1}& && &\binom{2}{2}& && && &&  \\
+			&& && &\binom{3}{0}& && &\binom{3}{1}& && &\binom{3}{2}& && &\binom{3}{3}& && &&  \\
+			&& &\binom{4}{0}& && &\binom{4}{1}& && &\binom{4}{2}& && &\binom{4}{3}& && &\binom{4}{4}& && 
+		\end{align*}\pause  
+		Cada término interior es suma de los dos términos inmediatos superiores. 
+		
+		Los elementos en los lados valen 1.
+		
+	\end{frame}
+	
+	
+	\begin{frame}
+		Escribamos los valores de cada fila:\pause  
+		\begin{align*}
+			&& && && && && &1& && && && && &&  \\
+			&& && && && &1& && &1& && && && &&  \\
+			&& && && &1& && &2& && &1& && && &&  \\
+			&& && &1& && &3& && &3& && &1& && &&  \\
+			&& &1& && &4& && &6& && &4& && &1& &&  
+		\end{align*}
+		
+		\vskip .2cm
+		El  triángulo es denominado \emph{triángulo de Pascal}. 
+		\vskip .2cm\pause  
+		Entre las propiedades que cuenta el triángulo de Pascal está la de ser simétrico respecto al eje vertical central, como consecuencia de la simetría de los números combinatorios. 
+	\end{frame}
+	
+	
+	
 \end{document}
 
