--- a/2023-1/beamer/C08_md1.tex
+++ b/2023-1/beamer/C08_md1.tex
@@ -44,7 +44,6 @@
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
-
 \setbeamertemplate{itemize item}{$\circ$}
 \setbeamertemplate{enumerate items}[default]
 \definecolor{links}{HTML}{2A1B81}
@@ -95,13 +94,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%LETRAS
 
 
-\title[Clase 8 - Conteo 3]{Matemática Discreta I \\ Clase 8 - Conteo ($3^\circ$ parte)}
+\title[Clase 9 - Conteo 4]{Matemática Discreta I \\ Clase 9 - Conteo ($4^\circ$ parte)}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[11/04/2023]{11 de abril  de 2023}
+\date[13/04/2023]{13 de abril  de 2023}
 
 
 
@@ -110,328 +109,233 @@
 	\frame{\titlepage} 
 	
 	
-	
-	\begin{frame}\frametitle{Selecciones sin orden}
-		
-		$X$ finito de $n$ elementos. 
-		\begin{center}
-			{\it ¿Cuántos subconjuntos de $m$ elementos hay en $X$?}
-		\end{center} \pause
-		
-		\vskip .4cm
-		{\color{blue}Ejemplo}
-		\vskip .2cm
-		%\begin{ejemplo}
-		Por ejemplo, sea $\mathbb I_5 = \{ 1, 2, 3, 4, 5 \}$ y nos interesan los
-		subconjuntos de tres ele\-men\-tos. ¿Cuántos habrá? 
-		
-		\vskip .2cm \pause
-		
-		{\color{blue}Solución.} \pause
-		\vskip .2cm
-		Contemos directamente: 
-		
-		$\{1,2,3\}$, $\{1,2,4\}$, $\{1,2,5\}$, $\{1,3,4\}$, $\{1,3,5\}$, $\{1,4,5\}$,
-		
-		$\{2,3,4\}$, $\{2,3,5\}$, $\{2,4,5\}$,
-		
-		$\{3,4,5\}$.
-		\vskip .2cm \pause
-		La respuesta, entonces, es 10. 
-		
-	\end{frame}
-	
-	
-	
-	
-	
-	
-	
-	\begin{frame}	
-		
-		¿Cómo podemos calcular este número sin contar caso por caso?
-		\vskip .2cm \pause
-		
-		Una forma de individualizar un subconjunto de tres elementos en $\mathbb I_5$, consiste
-		en, primero, seleccionar  ordenadamente $3$ elementos.
-		
-		\vskip .2cm \pause
-		
-		Habría, a priori, $5 \cdot 4 \cdot 3$ subconjuntos pues ese es el número
-		de selecciones ordenadas y sin repetición de $3$ elementos de $\mathbb I_5$. 
-		
-		\vskip .2cm
-		Es claro que algunas de las selecciones ordenadas pueden determinar el mismo subconjunto. En efecto, por ejemplo, cualesquiera de las selecciones
-		\begin{align*}
-			1 2 3, \qquad  1 3 2, \qquad  2 1 3, \qquad 2 3 1, \qquad  3 1 2, \qquad  3 2 1
-		\end{align*}
-		determina el subconjunto $\{ 1, 2, 3\}$. 
-		
-		\vskip .2cm \pause
-		
-		Es decir las permutaciones de $\{ 1, 2, 3\}$ determinan el mismo subconjunto.  
-		
-		\vskip .2cm 
-		
-		Veamos todos los casos: 
-		
-		
-	\end{frame}
-	
-	
-	
-	
-	
-	\begin{frame}	
-		
-		\pause
-		\begin{align*}
-			&1 2 3 \qquad  1 3 2  \qquad  2 1 3  \qquad 2 3 1  \qquad  3 1 2  \qquad  3 2 1 \qquad	&\to \qquad &\{1,2,3\}\\
-			&1 2 4  \qquad  1 4 2  \qquad  2 1 4  \qquad 2 4 1  \qquad  4 1 2  \qquad  4 2 1  \qquad	&\to \qquad &\{1,2,4\}\\
-			&1 2 5  \qquad  1 5 2  \qquad  2 1 5  \qquad 2 5 1  \qquad  3 1 2  \qquad  5 2 1  \qquad	&\to \qquad &\{1,2,5\}\\
-			&1 3 4  \qquad  1 43  \qquad  3 1 4  \qquad 34 1  \qquad  4 1 3  \qquad  431  \qquad	&\to \qquad &\{1,3,4\}\\
-			&1 3 5  \qquad  1 53  \qquad  3 1 5  \qquad 35 1  \qquad  5 1 3  \qquad  531  \qquad	&\to \qquad &\{1,3,5\}\\
-			&1 45  \qquad  1 54  \qquad  4 1 5  \qquad 45 1  \qquad  5 1 4  \qquad  541  \qquad	&\to \qquad &\{1,4,5\}\\
-			&234  \qquad  243  \qquad  324  \qquad 342  \qquad  423  \qquad  432  \qquad	&\to \qquad &\{2,3,4\}\\
-			&235  \qquad  253  \qquad  325  \qquad 352  \qquad  523  \qquad  532  \qquad	&\to \qquad &\{2,3,5\}\\
-			&245  \qquad  254  \qquad  425  \qquad 452  \qquad  524  \qquad  542  \qquad	&\to \qquad &\{2,4,5\}\\
-			&345  \qquad  354  \qquad  435 \qquad 453  \qquad  534  \qquad  543  \qquad	&\to \qquad &\{3,4,5\}
-		\end{align*}	
-		
-	\end{frame}
-	
-	
-	
-	\begin{frame}
-		
-		Es decir  $3! = 6$ selecciones ordenadas nos determinan un subconjunto de tres elementos. Por lo tanto, el número total de
-		subconjuntos de $3$ elementos es
-		
+	\begin{frame}\frametitle{El teorema del binomio}
+		En álgebra elemental aprendemos las fórmulas
 		$$
-		\frac{5 \cdot 4 \cdot 3}{3!} =  \frac{5!}{3! (5 - 3)!}
+		(a+b)^2 = a^2 +2ab +b^2, \qquad (a+b)^3 = a^3 + 3 a^2b +3ab^2 +
+		b^3.
 		$$
-		\vskip .4cm \pause
-		
-		Podemos  hacer el mismo razonamiento, si tuviéramos que elegir subconjuntos de 2 elementos:
-		
-		\vskip .4cm \pause
-		
-		\begin{itemize}
-			\item Tenemos $5 \cdot 4 = \displaystyle \frac{5!}{3!}$  selecciones ordenadas de 2 elementos.
-			\item La cantidad de permutaciones de dos elementos es $2!$, luego,
-			\item hay  $\displaystyle \frac{5!}{3!2!} = 10$ subconjuntos de 2 elementos. 
-		\end{itemize}
-		
-		
-		
-	\end{frame}
-	
-	\begin{frame}
-		En el caso general de subconjuntos de $m$ elementos de un
-		conjunto de $n$ elementos ($m \le n$) podemos razonar en forma análoga. 
-		
-		\vskip .4cm \pause
-		
-		\begin{itemize}
-			\item Tenemos $\displaystyle \frac{n!}{(n-m)!}$  selecciones ordenadas de $m$ elementos entre $n$. \pause
-			\item La cantidad de permutaciones de $m$ elementos es $m!$, luego, \pause
-			\item hay  $\displaystyle \frac{n!}{(n-m)!m!}$ subconjuntos de $m$ elementos. 
-		\end{itemize}
-		
-		
-		
-		\vskip .4cm \pause
-		
-		
-		
-		{\color{blue}Teorema}
-		\vskip .2cm
-		{\it Sea $X$ un conjunto de $n$ elementos. Entonces   el número total de subconjuntos de $m$ elementos
-			de $X$ es
-			$$
-			\frac{n!}{(n - m)!\; m!}
-			$$}
-		
+		\vskip .4cm\pause
+		A veces nos piden desarrollar la formula para $(a+b)^4$ y
+		potencias mayores de $a+b$. 
+		\vskip .4cm\pause
+		El resultado general que da una formula para $(a+b)^n$ es conocido como el
+		{\it {teorema del binomio}} o {\it binomio de Newton}.  
 		\vskip .4cm
 	\end{frame}
 	
 	
-	\begin{frame}	\frametitle{Número combinatorio}
-		
-		Sean $n, m \in \mathbb N_0$, $m \le n$. Definimos
-		$$
-		\binom{n}{m} = \frac{n!}{(n - m)! \; m!}
-		$$
-		el  {\em número combinatorio} asociado al par $n$, $m$  o {\em número combinatorio $n$, $m$}.
-		
-		\vskip .4cm \pause
-		Por razones que se verán más adelante se denomina también el {\em coeficiente binomial} asociado al par $n$, $m$ con $m \le n$.
-		
-		\vskip .4cm  \pause
-		Definimos también
-		$$
-		\binom{n}{m} = 0,\qquad \text{ si } m > n.
-		$$
-		
-	\end{frame}
-	
-	
-	
-	\begin{frame}
-		Hay unos pocos números combinatorios que son fácilmente calculables: 
-		$$
-		\binom{n}{0} = \binom{0}{0} = 1 \qquad \text{ y }\qquad  \binom{n}{1} = \binom{n}{n-1} = n. 
-		$$
-		Estos resultados se obtienen por aplicación directa de la definición (recordar que  $0! =1$). 
-		
-		
-		\vskip .4cm  \pause
-		
-		Con el número combinatorio podemos reescribir el resultado visto más arriba:
-		
-		\vskip .4cm 
-		{\color{blue}Teorema}
-		\vskip .2cm
-		{\it Sean $n, m \in \mathbb N_0$, $m \le n$, y supongamos que el conjunto $X$ tiene $n$ elementos.
-			Entonces la cantidad de subconjuntos de $X$ con $m$ elementos es
-			$
-			\displaystyle\binom{n}{m}
-			$.}
-		
-	\end{frame}
-	
-	
-	\begin{frame}
-		
-		
-		{\color{blue}Ejemplo}
-		\vskip .3cm
-		¿Cuántos comités pueden formarse de un conjunto de $6$ mujeres y $4$ hombres, si el comité debe estar compuesto por $4$ mujeres y $2$ hombres?
-		\vskip .3cm \pause
-		{\color{blue}Solución} \pause
-		\vskip .2cm Debemos elegir $4$ mujeres entre $6$, y la cantidad de elecciones posibles es   $\displaystyle\binom{6}{4}$. Por otro lado, hay $ \displaystyle\binom{4}{2}$ formas de elegir $2$ hombres entre $4$. Luego, por el principio de multiplicación,  el resultado es
-		\begin{align*}
-            \binom{6}{4}\cdot \binom{4}{2} &= \frac{6!}{(6-4)!4!}\cdot\frac{4!}{(4-2)!2!}= \frac{6!}{2!4!}\cdot\frac{4!}{2!2!} = \frac{6\cdot 5}{2}\cdot\frac{4\cdot 3}{2} \\[0.3cm] & = 15 \cdot 6= 90.
-        \end{align*}
-        \qed
-		
-	
-		\vskip .3cm
-	\end{frame}
-	
-	
-	\begin{frame}\frametitle{Simetría del número combinatorio}
-		
-		
-		{\color{blue} Proposición}
-		\vskip .2cm
-		{\it	Sean $m,n \in \mathbb N_0$, tal que $m \le n$. Entonces
-			$$
-			\binom{n}{m} = \binom{n}{n-m}.
-			$$} \pause  
-		{\color{blue} Demostración.} \pause  
-		\begin{align*}
-			\binom{n}{n-m} &= \frac{n!}{(n-(n-m))!\,(n-m)!} \\
-			&=  \frac{n!}{m!\,(n-m)!} \\
-			&=    \frac{n!}{(n-m)!\,m!}=  \binom{n}{m}.
-		\end{align*}
-		\qed
-		
-		
-		
-	\end{frame}
-	
-	
-	\begin{frame}	
-		
-		El hecho  de que 
-		$$
-		\binom{n}{m} = \binom{n}{n-m}.
-		$$
-		se puede interpretar en términos de conteo:  $\displaystyle\binom{n}{m}$ es el número de subconjuntos de $m$ ele\-men\-tos de un conjunto de $n$ elementos. 
-		\vskip .2cm\pause  
-		
-		Puesto que con cada subconjunto de $m$ ele\-men\-tos hay unívocamente asociado un subconjunto de $n - m$ elementos, su complemento en $X$, es claro que $$\displaystyle\binom{n}{m} = \binom{n}{n-m}.$$
-		
-		
-	\end{frame}
-	
-	
-	\begin{frame}\frametitle{Triángulo de Pascal}
+	\begin{frame}\frametitle{El teorema del binomio}
 		
 		
 		{\color{blue} Teorema}
 		\vskip .2cm
 		{\it
-			Sean $m,n \in \mathbb N$, tal que $m \le n$. Entonces
+			Sea $n$ un entero positivo. El coeficiente del termino
+			$a^{n-r}b^r$ en el desarrollo de $(a+b)^n$ es el número binomial
+			$\binom{n}{r}$.\pause Explícitamente, tenemos
 			$$
-			\binom{n}{m-1} + \binom{n}{m}   = \binom{n+1}{m} 
-			$$
-		}\pause  
-		
-		{\color{blue} Demostración.}\pause  
-		\vskip .2cm
-		
-		El enunciado nos dice que debemos demostrar que 
+			(a+b)^n= \binom{n}{0} a^n + \binom{n}{1} a^{n-1}b+ \binom{n}{2}
+			a^{n-2}b^2 + \cdots + \binom{n}{n} b^n.$$
+		}
+		\vskip .2cm		\pause
+		Escrito de otra forma:
+		\vskip .2cm	
+		Si $n >0$, 
 		\begin{equation*}
-			\frac{n!}{(n-m+1)!\,(m-1)!} +  \frac{n!}{(n-m)!\,m!} = \frac{(n+1)!}{(n-m+1)!\,m!}
+			(a+b)^n= \sum_{i=0}^n \binom{n}{i} 	a^{n-i}b^i.
 		\end{equation*}
 		
-		y lo dejamos como ejercicio.\qed
-		
 	\end{frame}
+	
 	
 	\begin{frame}
 		
-		Veamos unos pocos ejemplos de la fórmula $\displaystyle\binom{n}{m-1} + \binom{n}{m}   = \binom{n+1}{m}$ o  equivalentemente (dando vuelta la igualdad).
-		$$
-		\binom{n+1}{m} = \binom{n}{m-1} + \binom{n}{m} .
-		$$
-		\vskip .3cm \pause  
-
-        \begin{block}{Ejemplos}
-        \begin{align*}
-            \binom{4}{2} &= \binom{3}{1} + \binom{3}{2} = 3+3 =6. \\[.5cm]
-            \binom{5}{2} &= \binom{4}{1} + \binom{4}{2} = 4 + 6 = 10, \\[.3cm]
-            \binom{5}{3} &= \binom{4}{2} + \binom{4}{3} = 6 + 4 = 10.
-        \end{align*}
-    \end{block}
 		
-	\end{frame}
-	
-	\begin{frame}
-		El teorema precedente permite calcular los coeficientes binomiales:
-		\pause  
+		{\color{blue}Observación}
+		\vskip .2cm
+		Los coeficientes binomiales que intervienen en la fórmula de $(a+b)^n$ forman una fila del triángulo de Pascal:\pause
 		\begin{align*}
-			&& && && && && &\binom{0}{0}& && && && && &&  \\
-			&& && && && &\binom{1}{0}& && &\binom{1}{1}& && && && &&  \\
-			&& && && &\binom{2}{0}& && &\binom{2}{1}& && &\binom{2}{2}& && && &&  \\
-			&& && &\binom{3}{0}& && &\binom{3}{1}& && &\binom{3}{2}& && &\binom{3}{3}& && &&  \\
-			&& &\binom{4}{0}& && &\binom{4}{1}& && &\binom{4}{2}& && &\binom{4}{3}& && &\binom{4}{4}& && 
-		\end{align*}\pause  
-		Cada término interior es suma de los dos términos inmediatos superiores. 
-		
-		Los elementos en los lados valen 1.
-		
-	\end{frame}
-	
-	
-	\begin{frame}
-		Escribamos los valores de cada fila:\pause  
-		\begin{align*}
-			&& && && && && &1& && && && && &&  \\
-			&& && && && &1& && &1& && && && &&  \\
-			&& && && &1& && &2& && &1& && && &&  \\
-			&& && &1& && &3& && &3& && &1& && &&  \\
-			&& &1& && &4& && &6& && &4& && &1& &&  
+			&\binom{n}{0}&&\binom{n}{1}& \binom{n}{2} && &\cdots && &\binom{n}{n-2}&&&\binom{n}{n-1}&&\binom{n}{n}& && 
 		\end{align*}
 		
-		\vskip .2cm
-		El  triángulo es denominado \emph{triángulo de Pascal}. 
-		\vskip .2cm\pause  
-		Entre las propiedades que cuenta el triángulo de Pascal está la de ser simétrico respecto al eje vertical central, como consecuencia de la simetría de los números combinatorios. 
+		\vskip .4cm\pause
+		{\color{blue}Ejemplo}
+		\begin{align*}
+			(a+ b)^4 &= \binom{4}{0} a^4 + \binom{4}{1} a^{3}b+ \binom{4}{2} a^{2}b^2 + \binom{4}{3} ab^3 + \binom{4}{4} b^4 \\
+			&{}\\
+			&=  a^4 \;+\; 4 a^{3}b\;+\; 6 a^{2}b^2\; +\; 4 ab^3 \;+\; b^4.
+		\end{align*}
 	\end{frame}
 	
+	
+	\begin{frame}
+		El teorema del binomio puede usarse para deducir identidades en
+		que estén involucrados los números binomiales.\pause
+		
+		\vskip .4cm
+		{\color{blue}Ejemplo}
+		\vskip .2cm
+		Probemos que
+		\begin{equation*}
+			\binom{n}{0}+\binom{n}{1}+\binom{n}{2}+\cdots+\binom{n}{n}= 2^n.
+		\end{equation*}
+		
+		\vskip .2cm\pause 
+		{\color{blue}Demostración.}\pause
+		
+		\vskip .2cm
+		Observemos que $2^n = (1 + 1)^n$. Por el  teorema del binomio sabemos que 
+		\begin{align*}
+			(1+1)^n &= \binom{n}{0} 1^n + \binom{n}{1} 1^{n-1}1+ \binom{n}{2}
+			1^{n-2}1^2 + \cdots + \binom{n}{n} 1^n \\
+			&= \binom{n}{0}  + \binom{n}{1} + \binom{n}{2}+ \cdots + \binom{n}{n}. \qed
+		\end{align*}
+		
+	\end{frame}
+	
+	
+	\begin{frame}
+		{\color{blue}Observación}
+		\vskip .2cm
+		La fórmula 
+		\begin{equation*}
+			\binom{n}{0}+\binom{n}{1}+\binom{n}{2}+\cdots+\binom{n}{n}= 2^n. \tag{$*$}
+		\end{equation*}
+		tiene una interpretación combinatoria: nos permite calcular nuevamente la cantidad de subconjuntos de un conjuntos de $n$ elementos. 
+		\pause
+		\vskip .2cm 
+		
+		{\color{blue}1.} Es claro  que la cantidad de subconjuntos de $k$ elementos de un conjunto de $n$ elementos es $\binom{n}{k}$. 
+		
+		\vskip .2cm 
+		\pause
+		{\color{blue}2.} Los subconjuntos de un conjunto son los subconjuntos de 0  elementos, unión los subconjuntos de $1$ elemento, unión los subconjuntos de $2$ elementos, unión los subconjuntos de $3$ elementos, etc.
+		
+		\vskip .2cm 
+		\pause
+		{\color{blue}3 .} Por  el principio de adición y la fórmula $(*)$ obtenemos  que la cantidad de subconjuntos de un conjuntos de $n$ elementos es $2^n$.
+		
+		
+	\end{frame}
+	
+	
+	\begin{frame}\frametitle{Ejercicios de conteo}
+		{\color{blue}Ejercicio}
+		\vskip .2cm
+		¿Cuántos números naturales existen menores que $10^5$, cuyos dígitos sean todos distintos?
+		\vskip .2cm \pause
+		{\color{blue}Solución.}\pause
+		\vskip .2cm
+		Los números naturales menores de $10^5$ son todos aquellos que tienen como máximo 5 dígitos.
+		\pause
+		\begin{enumerate}
+			\item[1.] 1 dígito $\to$ $9$ posibilidades,
+			\item[2.] 2 dígitos $\to$ $9 \times 9$ posibilidades (81),
+			\item[3.] 3 dígitos $\to$ $9 \times 9 \times 8$ posibilidades (648),
+			\item[4.] 4 dígitos $\to$ $9 \times 9 \times  8\times 7$ posibilidades (4536),
+			\item[5.] 5 dígitos $\to$ $9 \times 9 \times  8\times  7\times 6$ posibilidades (27216),
+		\end{enumerate} 
+		\vskip .2cm
+		\textbf{Total:} $9 +81+ 648+4536+27216 = 32490$.\qed
+	\end{frame}
+	
+	
+	\begin{frame}
+		
+		
+		{\color{blue}Ejercicio}
+		\vskip .2cm
+		Extrayendo 5 cartas de una baraja de 40 cartas ¿cuántos resultados diferentes pueden obtenerse? (no importa el orden)
+		\vskip .2cm \pause
+		{\color{blue}Solución.}\pause
+		\vskip .2cm
+		Las cuarenta caretas son diferentes y no nos importa el orden en que recibimos las cartas. 
+		\vskip .2cm
+		El problema es entonces elegir 5 entre 40, por lo tanto la respuesta es
+		\begin{equation*}
+			\binom{40}{5}.
+		\end{equation*}
+        \qed
+		\vskip 2cm
+		
+	\end{frame}
+	
+	\begin{frame}
+		
+		{\color{blue}Ejercicio}
+		\vskip .2cm
+		¿De cuántas formas diferentes pueden repartirse 5 bolas blancas, 3 rojas y 2 negras en 10 urnas
+		distintas (etiquetadas) de forma que cada urna contenga una bola?
+		\vskip .2cm \pause
+		{\color{blue}Solución.}
+		\vskip .2cm
+		Primero nos preguntamos ¿de cuántas forma puedo poner las 5 bolas blancas en  las 10 urnas? 
+		\vskip .3cm
+		Este problema es equivalente a elegir 5 urnas entre 10 (las urnas donde pondremos las bolas blancas) y sabemos que las posibilidades son $\binom{10}{5}$.
+		\vskip .3cm
+		Ahora quedan 5 lugares y  queremos ver de cuántas formas ponemos 3 bolas rojas en 5 urnas y la respuesta es $\binom{5}{3}$ 
+		\vskip 1cm
+		
+	\end{frame}
+	
+	\begin{frame}
+		
+		Finalmente,  hay dos lugares para las dos bolas negras y hay una sola forma de ponerlas.
+		\vskip .2cm
+		El resultado es entonces
+		
+		\begin{equation*}
+			\binom{10}{5}\binom{5}{3} = \frac{10!}{5!5!}\frac{5!}{2!3!} = \frac{10!}{5!2!3!} .
+		\end{equation*}\qed
+		\vskip 4cm
+	\end{frame}
+	
+	
+	
+	
+	\begin{frame}
+		
+		
+		{\color{blue}Ejercicio}
+		\vskip .2cm
+		Un ascensor de un centro comercial parte del sótano con 5 pasajeros y se detiene en 7 pisos. 
+		¿De cuántas maneras distintas pueden descender los pasajeros? ¿Y con la condición de que dos 
+		pasajeros no bajen en el mismo piso?
+		\vskip .2cm \pause
+		{\color{blue}Solución.}\pause
+		\vskip .3cm
+		Hagamos un poco de  abstracción del problema y pensemos las  posibilidades que tiene 5 personas para ubicarse en 7 lugares: la primera persona tiene 7 posibilidades, la segunda también y así sucesivamente, luego el total de posibilidades es 
+		\begin{equation*}
+			7 \times 	7 \times 	7 \times 	7 \times 	7  = 7^5.
+		\end{equation*}
+		
+		
+		
+		\vskip 5cm
+		
+		
+	\end{frame}
+	
+	
+	\begin{frame}
+		
+		
+		Si  no estás convencido del razonamiento, lo podemos ver de la siguiente manera: supongamos  que tenemos 5 posiciones (que representan los 5 pasajeros) y  en cada posición podemos poner un número del 1 al 7 (el piso en que baja), entonces la pregunta se reduce a ¿cuántos números de 5 dígitos se pueden formar con los dígitos del 1 al 7?
+		\vskip .2cm \pause
+		Claramente, la respuesta es también $7^5$.
+		
+		\vskip 1cm\pause
+		
+		Para la segunda pregunta, simplemente hay que modificar la pregunta anterior ¿cuántos números de 5 dígitos con todos los dígitos diferentes se pueden formar con los dígitos del 1 al 7?
+		\vskip .2cm 
+		La respuesta es:
+		\begin{equation*}
+			7 \times 6 \times 5 \times 4 \times 3 = \frac{7!}{(7-5)!}=\frac{7!}{2!}.
+		\end{equation*}
+		\qed
+		
+	\end{frame}
 	
 	
 \end{document}
