--- a/2023-1/beamer/C10_md1.tex
+++ b/2023-1/beamer/C10_md1.tex
@@ -12,7 +12,7 @@
 \usepackage{multicol}
 \usepackage{amsgen,amsmath,amstext,amsbsy,amsopn,amsfonts,amssymb}
 \usepackage{amsthm}
-\usepackage{calc}         % From LaTeX distribution
+\usepackage{calc}        % From LaTeX distribution
 \usepackage{graphicx}     % From LaTeX distribution
 \usepackage{ifthen}
 %\usepackage{makeidx}
@@ -23,10 +23,10 @@
 \usetikzlibrary{arrows}
 \usetikzlibrary{matrix}
 \tikzset{
-	every picture/.append style={
-		execute at begin picture={\deactivatequoting},
-		execute at end picture={\activatequoting}
-	}
+    every picture/.append style={
+        execute at begin picture={\deactivatequoting},
+        execute at end picture={\activatequoting}
+    }
 }
 \usetikzlibrary{decorations.pathreplacing,angles,quotes}
 \usetikzlibrary{shapes.geometric}
@@ -37,12 +37,13 @@
 \usepackage{tkz-graph}
 \usepackage{polynom}
 \polyset{%
-	style=B,
-	delims={(}{)},
-	div=:
+    style=B,
+    delims={(}{)},
+    div=:
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
+
 \setbeamertemplate{itemize item}{$\circ$}
 \setbeamertemplate{enumerate items}[default]
 \definecolor{links}{HTML}{2A1B81}
@@ -93,16 +94,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%LETRAS
 
 
-
-\title[Clase 10 - Cociente y resto]{Matemática Discreta I \\ Clase 10 - Cociente y resto}
+\title[Clase 11 - Divisibilidad]{Matemática Discreta I \\ Clase 11 - Divisibilidad}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
-	\\[\baselineskip] ${}^{}$
-	\\[\baselineskip]
+    \\[\baselineskip] ${}^{}$
+    \\[\baselineskip]
 }
-\date[18/04/2023]{18 de abril  de 2023}
-
-
+\date[25/04/2023]{25 de abril  de 2023}
 
 
 
@@ -112,356 +110,340 @@
 \frame{\titlepage} 
 
 
-\begin{frame}\frametitle{Cociente y resto}
-Cuando somos chicos aprendemos que $6$ ``cabe'' cuatro veces en $27$ y
-el resto es $3$, o sea
-$$
-27=6 \cdot 4 + 3.
-$$\pause
-Un punto importante es que el resto debe ser menor que 6. Aunque,
-también es verdadero que, por ejemplo
-$$
-27=6 \cdot 3 + 9.
-$$\pause
-
-En la división debemos tomar el menor valor para el resto, de forma que ``lo que
-queda'' sea un número no negativo lo más chico posible. 
-\vskip .2cm\pause
-El hecho de que el conjunto de
-posibles ``restos'' tenga un mínimo es una consecuencia del \textit{axioma
-del buen orden.}
-
-
-\end{frame}
-
-
 \begin{frame}
-	
-
-\vskip .4cm
-{\color{blue}Teorema (Algoritmo de división)}
-\vskip .2cm
-{\it Sean $a$ y $b$ números enteros
-	cualesquiera con $b \in \mathbb N$, entonces existen enteros únicos $q$ y
-	$r$ tales que
-	$$
-	a=b \cdot q + r\qquad\text{ y }\qquad 0\le r<b.
-	$$
- }\pause
-\vskip 0.4cm
-A la $q$ del teorema anterior lo llamaremos el \textit{cociente de $b$  por $a$}.
-\vskip .4cm
-A $r$ lo llamamos el \textit{resto de dividir $b$ por $a$.}
-\vskip 2cm
-
-\end{frame}
-
-
-\begin{frame}
-
-{\color{blue}Idea de la prueba.}
-\vskip .2cm
-Debemos aplicar el axioma del buen orden al
-conjunto de los ``restos''
-$$ R=\{x \in \mathbb N_0 | a = by + x \ \text{ para algún }\ y \in \mathbb Z\}.
-$$
-\pause
-Primero se demuestra que $R$ no es vacío \pause  (si $a \ge 0$, $a \in R$ tomando  $y=0$).  
-\pause
-\vskip .4cm 
-Entonces, por el axioma del buen orden se encuentra un  mínimo $r \in R$. Es decir existe $q \in \mathbb{Z}$ tal que 
-$$
-a=b \cdot q + r\qquad\text{ y $r$ es mínimo de R} .
-$$\pause  
-Luego se prueba  que $0\le r<b$.
-\qed
-\end{frame}
-
-
-\begin{frame}
-	
-	
-	{\color{blue}Ejemplos}
-	\vskip .2cm
-		\begin{enumerate}
-			\item[1. ] Si $a=10$ y $b=3$, entonces $10 = 3 \cdot 3 +1$. Es decir $q= 3$, $r=1$. \pause\vskip .3cm
-			\item[2. ] Si $a=2$ y $b=5$, entonces $2 = 5 \cdot 0 +2$. Es decir $q= 0$, $r=2$.  \pause\vskip .3cm
-			\item[3. ] Si $a=-10$ y $b=3$, entonces $-10 = 3 \cdot (-4) +2$. Es decir $q= -4$, $r=2$.    \pause\vskip .3cm 
-			\item[4. ] Si $a=-2$ y $b=3$, entonces $-2 = 3 \cdot (-1) +1$. Es decir $q= -1$, $r=1$. 
-		\end{enumerate}
-
-\end{frame}
-
-
-\begin{frame}\frametitle{ Desarrollos en base $b$, ($b \ge 2$)}
-	
-	
-	Los números tal como los escribimos se encuentran en \textit{base 10.} 
-	\vskip .2cm
-	¿Qué significa  esto?
-	\vskip .4cm\pause
-	{\color{blue}Ejemplo}
-	\vskip .2cm
-	El número 407 se puede escribir como 
-	$$
-	407 = 4 \cdot 10^2 +0 \cdot 10^{1}+ 7 \cdot 10^0,
-	$$
-	\vskip .2cm\pause
-	El número 23827 se puede escribir como 
-	$$
-	23827 = 2 \cdot 10^4 +3 \cdot 10^3 +8 \cdot 10^2 +2 \cdot 10^{1}+ 7 \cdot 10^0,
-	$$
-
-
-	
-\end{frame}
-
-
-\begin{frame}
-	
-	En  general:
-	\vskip .4cm
-	{\color{blue}Teorema }
-	\vskip .2cm
-	{\it Todo número natural $x$  se puede escribir de una única forma como  
-		$$
-		x = r_n10^n +r_{n-1} 10^{n-1}+\cdots + r_1 10 + r_0,
-		$$
-		donde $ r_n \not= 0$ y  $0 \le r_i < 10$ para $i= 0, 1, \ldots, {n}$.}
-	
-	\vskip .8cm\pause
-	
-	Podemos decir entonces que
-		\vskip .4cm
-
-	\begin{center}
-		{\it $x$ se representa como la cadena $ r_n r_{n-1}  \ldots  r_1   r_0$ en base 10.}
-	\end{center}
-		\vskip .2cm
-	o también que 
-	
-	\begin{equation*}
-		x = ( r_n r_{n-1}  \ldots  r_1   r_0)_{10}.
-	\end{equation*}
-	\vskip 4cm
-	\end{frame}
-	
-
-\begin{frame}
-	Este teorema es	una consecuencia importante del algoritmo de división  y es el que
-	justifica nuestro método usual de representación de enteros. 
-	
-	\vskip .2cm
-	
-	También podemos desarrollar en potencias de $b$ con $b$ cualquier entero $\ge 2$ (y vale el teorema anterior reemplazando $10$ por $b$).
-	
- \vskip .8cm\pause
- {\color{blue}Ejemplo (base 5)}
- \vskip .2cm
- Deseamos escribir el número $407$ con una expresión de la forma 
-		$$
-		407 = r_n5^n +r_{n-1} 5^{n-1}+\cdots + r_1 5 + r_0,
-		$$
-		con $0 \le r_i < 5$. Veamos que esto es posible y se puede hacer de forma algorítmica. 
-
-\end{frame}
-
-
-\begin{frame}
-	La forma de hacerlo  es, primero, dividir el número original y los sucesivos cocientes por $5$:   \pause
-	\begin{alignat}2
-	407 &=5\cdot 81 &\;+\;& 2 \label{ib3}\\
-	81 & = 5\cdot 16 &\;+\;& 1  \label{ib4}\\
-	16 & = 5\cdot 3 &\;+\;& 1  \label{ibi5}\\
-	3 & = 5\cdot 0 &\;+\;& 3.
-	\end{alignat} \pause
-	Observar entonces que
-
-\begin{center}
-    \begin{tabular}{rll}
-        $407$&$=5\cdot 81 + 2$  \qquad \qquad&{por (\ref{ib3})} \\ \pause
-        &= $5\cdot (5\cdot 16 + 1) + 2$  \qquad& \text{por (\ref{ib4})}\\ \pause
-        &= $5^2 \cdot 16+ 5\cdot 1 + 2$ \qquad& \text{}\\ \pause
-        &= $5^2 \cdot (5\cdot 3 + 1)+ 5\cdot 1 + 2$    \qquad\qquad& \text{por (\ref{ibi5})}\\ \pause
-        &= $5^3 \cdot 3+ 5^2 \cdot 1 + 5\cdot 1 + 2$.  \qquad& \text{}
-        \end{tabular} 
-\end{center}
-	\pause
-	En este caso diremos que el desarrollo en base $5$ de $407$ es $3112$ o, resumidamente, $407 = (3112)_5$.  
-\end{frame}
-
-
-\begin{frame}
-	Observar que 
-	\begin{alignat*}2
-	407 &=5\cdot 81 &\;+\;& \textbf{2} \\
-	81 & = 5\cdot 16 &\;+\;& \textbf{1} \\
-	16 & = 5\cdot 3 &\;+\;& \textbf{1}  \\
-	3 & = 5\cdot 0 &\;+\;& \textbf{3}.
-	\end{alignat*} \pause
-	
-	y  que 
-	
-	$$407 = (\textbf{3112})_5.$$ 
-	 \pause
-	 
-	Es decir los restos leídos de abajo hacia arriba forman la escritura en base 5 de 407. Esto es general. 
-\end{frame}
-
-\begin{frame}
-	Sea
-	$b \ge 2$ un número entero, llamado {\em base}\index{base (de un sistema de numeración)} para los cálculos.
-	Para cualquier entero positivo $x$ tenemos, por la aplicación
-	repetida del algoritmo de división,
-	\begin{alignat*}3
-	x&=bq_0 &+\;&r_0 &\qquad&(0 \le r_0 < b)\\
-	q_0 & = bq_1 &+\;&r_1&& (0 \le r_1 < b)\\
-	\cdots &&&&& \\
-	q_{n-2} & = bq_{n-1} &+\;&r_{n-1} &&(0 \le r_{n-1} < b)\\
-	q_{n-1} & = bq_n &+\;&r_n.&&(0 < r_n < b)
-	\end{alignat*} \pause
-	Este procedimiento se detiene en el primer $q_{n-1} < b$ (es decir, $q_n=0$). 
-    \vskip .2cm \pause
-    Reemplazando sucesivamente los cocientes $q_i$, como lo hicimos en el ejemplo, obtenemos
-	$$
-	x=r_nb^n +r_{n-1} b^{n-1}+\cdots + r_1 b + r_0.
-	$$
-\end{frame}
-
-
-\begin{frame}
-	Hemos representado $x$ (con respecto a la base $b$) por la
-	secuencia de los restos, y escribimos 	\vskip .2cm
-	$$x=(r_nr_{n-1}\dots r_1
-	r_0)_b.$$
-		\vskip .2cm \pause
-	Convencionalmente $b=10$ es la base para los cálculos
-	hechos ``a mano'' y omitimos ponerle el subíndice, entonces
-	tenemos la notación usual
-		\vskip .2cm\vskip .2cm \pause
-	Por ejemplo,
-		
-	$$
-	1984=1\cdot 10^3  + 9\cdot 10^2 + 8\cdot 10  + 4.
-	$$ \pause
-    o lo que es lo mismo
+    
+{\color{blue}Definición}
+\vskip .2cm Dados dos enteros $x$ e $y$ decimos que $y$ {\em divide a } $x$, y escribimos $y|x$, si
     $$
-	(1984)_{10}=1\cdot 10^3  + 9\cdot 10^2 + 8\cdot 10  + 4.
-	$$
-\end{frame}
+    x=yq\quad\text{ para algún }\quad q\in \mathbb Z.
+    $$
+    También decimos que $y$ es un {\em factor} de $x$, que $y$ es un {\em divisor} de $x$, que $x$ es {\em divisible} por $y$, y que $x$ es {\em múltiplo}\index{múltiplo} de $y$.
 
+\vskip .8cm\pause
 
-\begin{frame}
-	
-	
-	La base $b=2$ es particularmente adaptable para
-	los cálculos en computadoras. 
-	
-\vskip .2cm\pause
-{\color{blue}Ejemplo}
-\vskip .2cm ?`Cuál es la representación en base $2$ de
-		$(109)_{10}$?
-\vskip .2cm\pause
-{\color{blue}Solución.}  \pause	Dividiendo repetidamente por $2$ obtenemos
-		\begin{alignat*}2
-		109&=2\cdot 54&\;+\;&\textbf{1}\\ 54&=2\cdot 27&\;+\;&\textbf{0}\\ 27&=2\cdot 13&\;+\;&\textbf{1}\\ 13&=2\cdot 6&\;+\;&\textbf{1}\\
-		6&=2\cdot 3&\;+\;&\textbf{0} \\ 3&=2\cdot 1&\;+\;&\textbf{1} \\1&=2\cdot 0&\;+\;&\textbf{1}
-		\end{alignat*}
-		\pause
-		Por lo tanto: \quad $ (109)_{10} = (1101101)_2$.\qed
-		
-\end{frame}
-
-
-\begin{frame}
-	La base $16$ también es  muy usada en computación.
-	\vskip .2cm\pause
-	Los dígitos disponibles (del $0$  al $9$) no nos alcanzan  para representar un  número en base $16$, pues se requieren $16$ símbolos. La convención usada es 
-	$${\tt A}=10,\quad {\tt B}=11,\quad {\tt C} =12,\quad {\tt D} = 13,\quad {\tt E} = 14,\quad {\tt F} = 15.$$
-\vskip .2cm\pause
-{\color{blue}Ejemplo}
-\vskip .2cm
-
- Representemos  $12488$ en  base $16$. \pause
-		\begin{alignat*}2
-		12488 &= 16 \cdot 780 &\;+\;&  8\\
-		780 & = 16 \cdot 48 &\;+\;& 12\\
-		48 & = 16\cdot 3 &\;+\;& 0\\
-		3 & = 16 \cdot 0  &\;+\;& 3.
-		\end{alignat*}
-		Luego $12488 = (30{\tt C}8)_{16}$. 
-
-	
-\end{frame}
-
-
-
-\begin{frame}\frametitle{Conversiones de base}
-	¿Cómo convertimos un número en  base $b$  a base 10?
-	\vskip .2cm
-	Lo \textit{calculamos}.
-	\vskip .5cm\pause
-	{\color{blue}Ejemplo}
-	\vskip .2cm
-	Convertir $(1304)_6$  a base 10.
-	\vskip .2cm\pause
-	{\color{blue}Solución.}  \pause
-	\begin{align*}
-		(1304)_6 &= 1 \cdot 6^3 + 3 \cdot 6^2 + 0 \cdot 6^1 + 4 \cdot 6^0 \\ 
-		&= 1 \cdot 216 + 3 \cdot 36 + 0 \cdot 6 + 4  \\
-		&= 216 + 108 +  4  \\
-		&= 328. \\
-	\end{align*}
-	Luego $(1304)_6 = 328$.\qed
-	
-\end{frame}
-
-
-\begin{frame}\frametitle{Conversiones de base}
-	
-		¿Cómo convertimos un número en  base $b$  a base $b'$?
-	\vskip .2cm
-	
-	\begin{enumerate}
-	\item[1. ] Convertimos el número de base $b$  a  base 10 .
-	\item[2. ] Convertimos el número obtenido a  base $b'$.
-	\end{enumerate}
-
-	\vskip .4cm\pause
-{\color{blue}Ejemplo}
-\vskip .2cm
-Convertir $(1304)_6$  a base 5.
-\vskip .2cm\pause
-{\color{blue}Solución.}  \pause
+{\color{blue}Observación.}
 \vskip .2cm 
-Primero calculemos $(1304)_6$  en base $10$ (el sistema que sabemos manejar).
-\pause
-\begin{align*}
-    (1304)_6 &= 1 \cdot 6^3 + 3 \cdot 6^2 + 0 \cdot 6 + 4\\
-    &= 1 \cdot 216 + 3 \cdot 36 + 0 \cdot 6 + 4\\ 
-    &= 216 + 108 + 0 + 4\\ 
-    &= 328
-    \end{align*}
+
+1. Si $y|x$, es decir si $y$ es divisor de $x$, existe $q$ tal que $x = yq$. Luego $q$ es
+también un divisor de $x$.\pause
+
+\vskip .2cm 
+2. Si $y|x$ e $y \not=0$, denotamos $\frac{x}{y}$ al cociente de $x$ dividido  $y$, es decir 
+$$
+x = \frac{x}{y}\cdot y
+$$
+
 \end{frame}
 
 
 \begin{frame}
+    
+    {\color{blue}Notación. }
+    \vskip .3cm
+    Si $y$ no  divide a $x$ escribimos $y  \not| x$.
+\vskip .8cm\pause
+{\color{blue}Ejemplos. }
+\vskip .3cm
 
-Ahora debemos ver como se escribe $328$  en base $5$.
+(1) $3 | 12$, pues $12 = 3 \cdot 4$. Es decir, 3 es divisor de 12 y luego 4 es otro divisor de 12.
+\vskip .3cm\pause
+(2) $12 \not| 3$, pues no existe ningún entero $q$ tal que $3 = q \cdot 12$. 
+\vskip .3cm\pause
+(3) $6 | 18$, pues $18 = 6 \cdot 3$. Luego también vale que $18 = (-6) \cdot (-3)$ y que $ -18 = (-6) \cdot 3 $ y $ -18 = 6 \cdot (-3)$.  De esto se sigue que
 \begin{align*}
-328 &= 5 \cdot 65   + 3\\ 
-65 &= 5 \cdot 13   + 0\\ 
-13 &= 5 \cdot 2   + 3\\ 
-2 &= 5 \cdot 0   + 2
+    6 &| 18,& -6 &| 18,& -6 &| -18,& 6 &| -18,\\
+    3 &| 18,& -3 &| 18,& 3 &| -18,& -3 &| -18.
 \end{align*}
 
-Luego  $328 = (2303)_5$ y como $(1304)_6 = 328$, tenemos  
-$$(1304)_6 = (2303)_5.$$ \qed
 
-\vskip 3cm
+
 \end{frame}
 
+
+\begin{frame}\frametitle{Propiedades básicas 1}
+    
+Veamos ahora alguna propiedades básicas de la relación ``divide a''. \pause
+
+\vskip .3cm
+
+Sean $a,b,c$ enteros, entonces\pause
+
+\vskip .3cm
+
+{\color{blue}1. }        $1|a$\quad $a|\pm a$;
+        
+        \vskip .3cm \pause
+{\color{blue}Demostración. }\pause
+\vskip .3cm        
+        \;\textbullet\; $a = 1 \cdot a$.
+\vskip .3cm    
+        \;\textbullet\; $ a =     a \cdot 1$.     
+\vskip .3cm    
+        \;\textbullet\; $ - a =     a \cdot (-1)$.    
+\vskip .3cm            
+
+
+
+\end{frame}
+
+
+
+
+\begin{frame}\frametitle{Propiedades básicas 2}
+    
+        
+    {\color{blue}2. }             $a|0$ y $0$ sólo divide a $0$;
+    \vskip .3cm  \pause
+    {\color{blue}Demostración. }\pause
+    \vskip .3cm
+    \;\textbullet\; $0 = a\cdot 0$.
+    \vskip .3cm    
+    \;\textbullet\; Si $0|a$ entonces existe $q$ tal que $a = 0 \cdot q =0$. 
+    \vskip .8cm    
+
+    {\color{blue}3. }            si $a|b$, entonces $a|bc$ para cualquier $c$;\pause
+    \vskip .3cm
+    {\color{blue}Demostración. } \pause
+    \vskip .3cm
+    \;\textbullet\; $a | b \;\Rightarrow\; b = a \cdot q \;\Rightarrow\;  bc = a \cdot qc \;\Rightarrow\; a|bc$. 
+    
+
+    
+    
+\end{frame}
+
+
+
+
+\begin{frame}\frametitle{Propiedades básicas 2}
+        {\color{blue}4. }           si $a|b$ y $a|c$, entonces $a|(b+c)$;\pause
+        \vskip .3cm
+        {\color{blue}Demostración. } \pause
+    \vskip .3cm
+    \;\textbullet\; $a|b$ y $a|c$ $\;\Rightarrow\;$ $b = a \cdot q$ y $c = a \cdot q'$ $\;\Rightarrow\;$ 
+    \vskip .2cm
+    \quad\; $b+c =  a \cdot q +   a \cdot q' =  a \cdot(q + q')$  $\;\Rightarrow\;$  $a|(b+c)$.
+    
+    
+    \vskip .8cm    
+    {\color{blue}5. }               si $a|b$ y $a|c$, entonces $a|(rb+sc)$ para cualesquiera $r,s \in \mathbb Z$.
+        \vskip .3cm\pause
+        {\color{blue}Demostración. } \pause
+        \vskip .3cm
+    \;\textbullet\; $a|b$ y $a|c$ $\;\Rightarrow\;$ $b = a \cdot q$ y $c = a \cdot q'$ $\;\Rightarrow\;$ 
+    \vskip .2cm
+    \quad\; $rb+sc =  a \cdot rq +   a \cdot sq' =  a \cdot(rq + sq')$  $\;\Rightarrow\;$  $a|(rb+sc)$.
+\end{frame}
+
+
+\begin{frame}\frametitle{Propiedades básicas 3}
+    {\color{blue}6. }           si $a|b + c$ y $a|c$, entonces $a|b$;\pause
+    \vskip .3cm 
+    {\color{blue}Demostración. } \pause
+    \vskip .3cm
+    
+    \;\textbullet\; $a|b+c$ y $a|c$ $\;\Rightarrow\;$ $b + c = a \cdot q$ y $c = a \cdot q'$ $\;\Rightarrow\;$ 
+    \vskip .2cm
+    \quad\; $ b = (b+c) -c  =  a \cdot q -   a \cdot q' =  a \cdot(q -q')$  $\;\Rightarrow\;$  $a|b$.
+    
+    \vskip 0.4cm \pause
+
+    {\color{blue}7. }           si $a|b$, entonces $\pm a| \pm b$;\pause
+    \vskip .3cm 
+    {\color{blue}Demostración. } \pause
+    \vskip .3cm
+    
+    \;\textbullet\; $a|b$\;$\Rightarrow$\; $b = a \cdot q$\;$\Rightarrow$\;
+    \vskip .2cm
+    \qquad$\begin{matrix}
+        -b = a \cdot (-q ) \;\Rightarrow\; a|-b, &\quad &b = -a \cdot (-q ) \;\Rightarrow\; -a|b\\-b = -a \cdot q  \;\Rightarrow\; -a|-b. & &
+    \end{matrix}$
+
+    \qed
+
+\end{frame}
+
+\begin{frame}
+    
+    
+{\color{blue}Proposición }
+\vskip .3cm
+{\it Sean $a,b \in \mathbb{N}$. Entonces} 
+$$ab = 1\quad \Rightarrow \quad a=1 \wedge b=1.
+$$
+ \pause
+{\color{blue}Demostración.}  \pause 
+\vskip .2cm
+Como  $a,b \in \mathbb{N}$, entonces  $a\ge 1$ y $b\ge 1$. 
+\vskip .2cm
+Si $a=1$, como $ab =1$, obtenemos  $1 = ab = 1\cdot b = b$. 
+\vskip .2cm
+Si $a>1$, como  $b>0$ por compatibilidad de $<$ con el producto tenemos que $ab>b$, es decir $1 > b$, lo cual no es cierto ($b \in \mathbb{N}$). \qed
+\vskip .5cm
+{\color{blue}Observación}
+\vskip .2cm
+A partir de la proposición no es difícil probar que si $a,b \in \mathbb{Z}$ y $ab = 1$, tenemos que $a=1$ y $b= 1$ o $a=-1$ y $b= -1$. 
+\end{frame}
+
+
+\begin{frame}
+    
+{\color{blue}Proposición }
+\vskip .3cm
+{\it Sean $a,b,c \in \mathbb{N}$, entonces 
+\begin{enumerate}
+    \item[(D1)] $a | a$ (reflexividad);
+    \item[(D2)]  si $a | b$ y $b | a$, entonces $a = b$ (antisimetría);
+    \item[(D3)]  si $a | b$ y $b | c$, entonces $a | c$ (transitividad).
+\end{enumerate} }
+\vskip .3cm
+{\color{blue}Demostración. }
+\vskip .3cm\pause
+(D1) Esto ya fue probado antes.
+\vskip .3cm\pause
+(D2) $a|b \Rightarrow$ existe $q \in \mathbb N$ tal que $b = aq$.  \pause
+
+\quad\quad\,\,$b|a\Rightarrow$ existe $q' \in \mathbb N$ tal que $a = bq'$. 
+
+\pause
+Luego $$b = aq = (bq')q = b(q'q).$$
+\pause
+Por el axioma de cancelación (cancelando $b$) obtenemos que $1 = q'q \Rightarrow q = q' =1$. \pause Luego $a = b$.
+\end{frame}
+
+
+\begin{frame}
+    
+    
+    (D3) $a|b \Rightarrow$ existe $q \in \mathbb N$ tal que $b = aq$.  \pause
+    \vskip .3cm
+    \quad\quad\,$b|c\Rightarrow$ existe $q' \in \mathbb N$ tal que $c = bq'$. 
+    \vskip .3cm
+    \pause
+    Luego $$c =bq' = aqq' =a(qq').$$
+    \pause
+    Luego $a|c$. \qed\pause
+    \vskip .6cm
+    {\color{blue}Observación. }
+    \vskip .3cm
+    Las propiedades (D1), (D2) y (D3) nos dicen que ``divide a'' es una \textit{relación de orden}.
+    \vskip .3cm
+    Habíamos visto que ``$\le$'' también era una relación de orden.
+    
+    \vskip 1cm
+\end{frame}
+
+
+\begin{frame}\frametitle{Ejercicios}
+    
+    {\color{blue}Ejercicio}
+        \vskip .3cm 
+        ¿Es cierto que si $a | bc$, entonces $a | b$ ó $a | c$?
+        \vskip .3cm
+        \pause
+    {\color{blue}Solución. } No necesariamente (es decir la respuesta es NO).
+    \vskip .3cm
+        \;\textbullet\; Es cierto, por ejemplo que  $3 | 6 \cdot 2$ y que $3 | 6$.
+        \vskip .3cm
+        \;\textbullet\; Pero $6|4 \cdot 3$ y $6\not|4$, $6\not|3 $.
+        \vskip .8cm
+        
+        {\color{blue}Ejercicio}
+        \vskip .3cm 
+        Determinar todos los divisores de 12.
+        \vskip .3cm
+        \pause
+        {\color{blue}Solución. }
+        \vskip .3cm
+        \;\textbullet\; $\pm1$, $\pm2$, $\pm3$, $\pm4$, $\pm6$, $\pm12$, (12 divisores).
+    
+\end{frame}
+
+
+\begin{frame}\frametitle{Ejercicios}
+        {\color{blue}Ejercicio.}
+        \vskip .3cm 
+           Mostrar que $4^n -1$ es divisible por 3 para todo $n \in \mathbb{N}$.
+    \pause\vskip .3cm 
+    
+    {\color{blue}Solución. } 
+    \vskip .3cm 
+    Este ejercicio se puede hacer de dos formas.
+    \vskip .3cm 
+    \textbf{1° demostración.} Por inducción sobre $n$.
+    \vskip .3cm 
+    Caso base $n=1$. $4^n -1 = 4^1- 1 = 4-1 = 3$ que obviamente es divisible por 3.
+    \vskip .3cm 
+    Paso  inductivo.  Debemos probar que  $3 | 4^k -1$ para $k \ge 1$ (HI) entonces, se deduce que $3 | 4^{k+1} -1$.
+    \vskip .3cm
+    Ahora bien,
+    \begin{equation*}
+        4^{k+1} -1 = 4 \cdot 4^k - 1 = 3 \cdot 4^k + (4^k -1).
+    \end{equation*} 
+\end{frame}
+
+
+\begin{frame}
+    \textbf{Opción a)} Ahora bien,
+    \begin{equation*}
+        4^{k+1} -1 = 4 \cdot 4^k - 1 = 3 \cdot 4^k + (4^k -1).
+    \end{equation*} 
+        Como $3| 3 \cdot 4^k$ y por (HI) $3|4^k -1$    , tenemos
+        \begin{equation*}
+            3| 3 \cdot 4^k+ 4^k -1 =4^{k+1} -1.
+        \end{equation*}
+    \vskip .3cm 
+    \textbf{Opción b)} Ahora bien, como por (HI) $3 | 4^k -1$, existe $q$ tal que $4^k -1 = 3q$. Entonces,
+    \begin{equation*}
+        4^{k+1} -1 = 4 \cdot (4^k - 1) + 3 = 4 \cdot 3q + 3 = 3(4  q +1).
+    \end{equation*} 
+    Luego 
+    \begin{equation*}
+        3 | 3(4q +1) =4^{k+1} -1 .
+    \end{equation*}
+    
+    
+\end{frame}
+
+
+\begin{frame}
+    \textbf{2° demostración.} 
+    Observemos que $4 = 3 +1$, luego $4^n -1 = (3+1)^n -1$.
+    \begin{align*}
+        4^n -1 = (3+1)^n -1 &= \sum_{i=0}^{n} \binom{n}{i} 3^i 1^{n-i}- 1&&(\text{binomio de Newton}) \\
+        &= \sum_{i=0}^{n} \binom{n}{i} 3^i- 1 &&\\
+    &= 1 + \sum_{i=1}^{n} \binom{n}{i} 3^i - 1 &&\\
+    &= 1 + 3 (\sum_{i=1}^{n} \binom{n}{i} 3^{i-1}) - 1 &&(\text{$i > 0$ en la sumatoria})\\
+    &=  3 (\sum_{i=1}^{n} \binom{n}{i} 3^{i-1}) &&
+    \end{align*}
+    Luego $4^n -1 = 3 \cdot q$. 
+    \vskip .3cm 
+    Por lo tanto, $3|4^n -1$.
+
+    \qed
+\end{frame}
+
+
+\begin{frame}\frametitle{Ejercicios}
+    
+    {\color{blue}Ejercicio}
+    \vskip .3cm 
+¿Cuál es el menor natural que es divisible por 6 y por 15?
+
+    \vskip .3cm
+    \pause
+    {\color{blue}Solución. } Hagamos una lista de múltiplos de 6 y 15.
+    \vskip .3cm
+    \;\textbullet\; Múltiplos de 6: 6, 12, 18, 24, 30, 36, 42, 48, 54, 60, ...
+    \vskip .3cm
+    \;\textbullet\; Múltiplos de 15: 15, 30, 45, 60 , 75, ...
+    \vskip .3cm
+    \;\textbullet\; Luego, el menor natural que es divisible por 6 y por 15 es 30.
+    \vskip .8cm
+\end{frame}
 
 
 
 \end{document}
+
+
