--- a/2023-1/beamer/C12_md1.tex
+++ b/2023-1/beamer/C12_md1.tex
@@ -43,7 +43,6 @@
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
-
 \setbeamertemplate{itemize item}{$\circ$}
 \setbeamertemplate{enumerate items}[default]
 \definecolor{links}{HTML}{2A1B81}
@@ -70,7 +69,7 @@
 \renewcommand{\t}{{\operatorname{t}}}
 \renewcommand{\figurename }{Figura}
 
-\include{definiciones} % definiciones propias
+\include{definiciones}
 
 \newcommand{\nc}{\newcommand}
 
@@ -96,200 +95,21 @@
 
 
 
-\title[Clase 12 - MCD (1)]{Matemática Discreta I \\ Clase 12 - Máximo común divisor (1)}
+\title[Clase 13 - MCD (2)]{Matemática Discreta I \\ Clase 13 - Máximo común divisor (2)}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[27/04/2023]{27 de abril de 2023}
+\date[02/05/2023]{2 de mayo  de 2023}
 
 \newcommand{\mcd}{\operatorname{mcd}}
+\newcommand{\mcm}{\operatorname{mcm}}
 
 
 \begin{document}
     
     \frame{\titlepage} 
-    
-    
-    \begin{frame}\frametitle{Definición de MCD}
-        
-        
-        \begin{definicion}
-        Si $a$ y $b$ son enteros algunos de ellos no nulo, decimos que un entero positivo $d$ es un {\em máximo común divisor}\index{máximo común divisor}, o {\em mcd}, de $a$ y $b$ si
-        \begin{enumerate}
-            \item[{\color{blue} a)}] $ d|a$  y $d|b$;
-            \item[{\color{blue} b)}]  si $ c|a $ y $c|b$ entonces $ c\le d$.
-        \end{enumerate}
-        \end{definicion}\pause
-        \vskip .4cm 
-        \begin{itemize}
-            \item[$\bullet$]  La condición (a) nos dice que $d$ es un común divisor de $a$ y $b$.
-            \vskip .4cm \pause
-            
-            \item[$\bullet$] La condición (b) nos dice que cualquier divisor común de
-            $a$ y $b$ es mayor o igual a $d$. 
-        \end{itemize}
-        
-        \vskip .4cm 
-        
-    \end{frame}
-    
-    
-    \begin{frame}
-        
-        \begin{ejemplo}
-            ¿Cuál es el mcd entre $60$ y $84$?
-        \end{ejemplo}
-        \pause
-        \begin{solucion}
-            \pause
-            \begin{itemize}
-                \item[$\bullet$] $6$ es un divisor común de $60$ y $84$, pero no es el mayor divisor común, porque
-                $12|60$ y $12|84$ pero $12 < 6$.
-                \vskip .2cm 
-                \item[$\bullet$] Los divisores positivos comunes de 60  y 84 son 1, 2, 3, 6 y 12, luego aunque 6  es un divisor común, no satisface (2) de la definición. 
-                \vskip .2cm 
-                \item[$\bullet$] En este caso, 12  claramente es  el  \textbf{máximo común divisor}.
-            \end{itemize}
-        \end{solucion}
-
-        
-        
-    \end{frame}
-    
-        
-    \begin{frame}
-        
-        
-        \begin{ejemplo}
-            Hallar   $\mcd(174,72)$.
-        \end{ejemplo}
-        \pause    
-        \begin{solucion}
-            \pause
-        Divisores de 174: 1, 2, 3, 6, 29, 58, 87, 174\pause
-        \vskip .2cm         
-        Divisores de 72: 1, 2, 3, 4, 6, 8, 9, 12, 18, 24, 36, 72 \pause
-        \vskip .2cm         
-        Luego, $6$ es divisor común de 174 y 72, y todos los demás divisores comunes ($1$, $2$ y $3$) dividen a $6$. 
-        \vskip .2cm     
-        
-        Por lo tanto $\mcd(174,72) =6$.\qed
-        \end{solucion} 
-        
-    \end{frame}
-    
-        
-    \begin{frame}
-        
-        \begin{proposicion} Sean $a,b$ enteros con $a \not = 0$, entonces
-            \begin{enumerate}
-                \item[1.] $\mcd(b,a) = \mcd(a,b) = \mcd(\pm a, \pm b)$,\pause
-                \item[2.] si $a>0$,  $\mcd(a,0) = a$ y $\mcd(a,a) = a$,\pause
-                \item[3.] $\mcd(1,b) = 1$.
-            \end{enumerate}
-        \end{proposicion}
-        \pause
-        \begin{proof}
-            Estas propiedades son de demostración casi trivial, por ejemplo para demostrar que  $\mcd(1,b) = 1$ comprobamos que 1 cumple con la definición:
-            \begin{enumerate}
-                \item[({a})] $ 1|1$ y $1|b$;
-                \item[({b})] si $ c|1 $ y $c|b$ entonces $ c|1$,
-            \end{enumerate}
-            propiedades que son obviamente verdaderas.
-            
-            1. y 2.  se dejan a cargo del lector. \qed
-        \end{proof}
-        \vskip .8cm
-        
-        
-    \end{frame}
-    
-    
-    \begin{frame}
-        La siguiente propiedad no es tan obvia y resulta muy importante. 
-        \vskip .2cm
-        \begin{propiedad}
-            Si $a \not=0, b \in \mathbb Z$, entonces $\mcd(a,b) = \mcd(a,b-a)$. 
-        \end{propiedad}\pause
-        \begin{proof}
-            Sea $d =  \mcd(a,b)$, luego 
-            \vskip .2cm
-            (a) $ d|a$ y $d|b$ \; \quad \;\,\, y \; (b) si $ c|a $ y $c|b$ entonces $ c|d$.\pause
-            \vskip .2cm
-            Debemos probar que 
-            \vskip .2cm
-            (a') $ d|a$ y $d|b -a$ \; y \; (b') si $ c|a $ y $c|b -a$ entonces $ c|d$.\pause
-            \vskip .6cm
-            Por (a),  $ d|a$ y $d|b$ $\Rightarrow$  $d|b -a$  $\Rightarrow$ (a').\pause
-            \vskip .2cm
-            Si $ c|a $ y $c|b -a$ $\Rightarrow$  $c|a +(b -a) = b$ $\stackrel{(b)}{\Rightarrow}$ $ c|d$ $\Rightarrow$  (b').
-
-            \qed
-
-        \end{proof}
-        
-    \end{frame}
-    
-    
-    \begin{frame}
-        \begin{ejemplo} Encontrar el mcd entre $174$ y $72$.
-        \end{ejemplo} \pause\vskip -.6cm
-        $$
-        \begin{matrix*}[l]
-            \text{{\color{blue}Solución:}\qquad} & (174, 72)     &= (72, 174) =  (72,174-72) =  (72,102)\qquad\qquad\qquad{}^{}\\
-            &&=  (72,102 - 72) = (72,30)\\
-            &&= (30,72) = (30,72 -30) = (42, 30) \\
-            &&=  (30,42)= (30,42 -30) =(30,12) \\
-            &&= (12,30) = (12, 30-12)\\ 
-            &&= (12,18)=  (12, 18-12)= (12,6)\\
-            &&= (6,12) = (6,12-6) \\
-            &&=(6,6)= (6, 6-6) \\
-            &&=(6,0) \\
-            &&= 6. \qquad\qquad\qquad\qquad\qquad\qquad\qed 
-        \end{matrix*}
-        $$
-        
-    \end{frame}
-
-    
-
-    
-    \begin{frame}
-        
-        $\bullet$ En  general no es sencillo encontrar todos los divisores de un número entero grande. 
-        \vskip .2cm
-        $\bullet$ No es factible calcular el  mcd de números grandes revisando todos los divisores comunes.  
-        \vskip .2cm
-        $\bullet$ El algoritmo anterior  nos da un método práctico y relativamente eficiente para calcular el mcd. 
-        \vskip .6cm
-        \pause
-        La próxima proposición nos provee una herramienta aún mejor para calcular el mcd.
-        \pause
-        \begin{proposicion}\label{prop-alg-eucl} Sean  $a,b$ enteros no negativos con $b \not=0$, entonces 
-            \begin{equation}\label{bec}
-                a=bq+r\quad \Rightarrow \quad\mcd(a,b)=\mcd(b,r).
-            \end{equation}
-        \end{proposicion}
-    \end{frame}
-    
-    
-    \begin{frame}
-        \begin{ejemplo} Encuentre el mcd de 174 y 72.
-        \end{ejemplo}\pause
-        \begin{solucion}\pause Con el uso repetido de la proposición anterior, obtenemos
-            \begin{alignat*}3
-                174&=72\cdot 2+30,&\quad&\text{ entonces  }& \quad(174,72)&= (72,30)\\
-                72&=30\cdot 2+12,&\quad&\text{ entonces  }& (72,30)&= (30,12)\\
-                30&=12\cdot 2+6,&\quad&\text{ entonces  }& (30,12)&= (12,6)\\
-                12&=6\cdot 2+0,&\quad&\text{ entonces  }&(12,6)&= (6,0)=6.\\
-            \end{alignat*}
-            
-            Por lo tanto $(174,72) = 6$. \qed
-            
-        \end{solucion}
-    \end{frame}
     
     
     
@@ -307,41 +127,12 @@
             &\text{($e_{k}$)}\qquad& r_{k-1}&=r_{k}q_{k} + 0 ,&&  
         \end{align*}\pause
         
-        Entonces $r_k = \mcd(a,b)$.
+        Entonces $r_k = \mcd(a,b)$ {\color{gray} \qquad (Se usa en filmina \ref{film-alg-eucl-2})}
     \end{frame}
 
     
 
-    
     \begin{frame}
-        
-        \begin{itemize}
-            \item[$\bullet$] El proceso se detiene en el primer resto $r_i$  igual a $0$.
-            \vskip .4cm\pause
-            \item[$\bullet$]  El proceso debe detenerse, porque cada resto no nulo es positivo y estrictamente menor que el anterior.
-            \vskip .4cm\pause
-            \item[$\bullet$]  Este procedimiento es conocido como el {\em algoritmo de Euclides}.
-        \end{itemize}
-        \pause
-        
-        \vskip .4cm
-        \begin{teorema} Sean  $a$ y $b$ enteros con $b >0$, entonces el máximo común divisor  es el último resto no nulo obtenido en el algoritmo de Euclides ($r_k$ de la filmina anterior). 
-        \end{teorema}
-        \pause
-        \begin{idea}
-            $r_{i-1}=r_{i}q_{i} + r_{i+1} \Rightarrow \mcd(r_{i-1},r_{i}) = \mcd(r_{i} , r_{i+1})$. Luego,
-            \begin{multline*}
-                \mcd(a,b) = \mcd(r_{0},r_{1}) = \mcd(r_{1},r_{2}) = \cdots \\
-                \cdots = \mcd(r_{k-1},r_{k})  = \mcd(r_{k},0) = r_k. \qed
-            \end{multline*}
-            
-            
-        \end{idea}
-    \end{frame}
-    
-    \begin{frame}
-        
-        
         Ejemplifiquemos el algoritmo de Euclides.\pause
         
         \vskip .4cm
@@ -358,14 +149,296 @@
                 18&=6\cdot3 + 0&\quad&\text{ entonces  }& (18,6) &= (6,0) = 6 
             \end{alignat*}\pause
             Por lo tanto $(2406,654)=6$.
-            
-            
-            
         \end{solucion}
+    \end{frame}
+
+    
+    \begin{frame}[fragile=singleslide]
+        
+        \begin{itemize}
+            \item[$\bullet$] El algoritmo de Euclides es fácilmente implementable en un lenguaje de programación.
+            \vskip .4cm
+            \item[$\bullet$]  A continuación una versión del mismo en pseudocódigo (estilo Python).
+        \end{itemize}
+        
+        
+        \vskip .6cm
+        
+        {\quad\color{blue} Algoritmo de Euclides }
+        %\vskip .2cm
+        \begin{verbatim}
+        # pre: a y b son números positivos
+        # post: obtenemos d = mcd(a,b)
+        i, j = a, b
+        while j != 0:
+            # invariante: mcd(a, b) = mcd(i, j)
+            resto = i % j  # i = q * j + resto
+            i, j = j, resto
+        d = i
+        \end{verbatim}
+        
+        
+    \end{frame}
+    
+    \begin{frame}\label{film-alg-eucl-2}
+        
+        \begin{teorema}\label{prop-d-comb-lin}
+            Sean $a,b \in \Z$, alguno de ellos no nulo. Entonces,  existen $s, t \in \Z$ tal que 
+            \begin{equation*}
+                \operatorname{mcd}(a,b) = sa +tb.
+            \end{equation*}
+        \end{teorema}
+        \vskip -.5cm
+        {\color{blue}Demostración.}\pause 
+        \vskip .2cm
+        Supongamos que $b>0$ y sea $d=\mcd(a,b)$. Entonces, $d$ es el último resto no nulo del algoritmo (ver p. \ref{film-alg-eucl}).
+        \vskip .2cm \pause
+        Cada resto puede ser calculado en base a los dos anteriores:
+        \begin{equation}\label{eq-alg-euclides}
+            (e_{i-1})\quad r_{i-2}=r_{i-1}q_{i-1} + r_{i}\quad \Rightarrow \quad  r_{i} = r_{i-2} - r_{i-1}q_{i-1}.
+        \end{equation}
+        \vskip .2cm \pause
+        Aplicando repetidamente (\ref{eq-alg-euclides}) a los restos correpondientes, $\Rightarrow$  cada resto puede ser escrito como combinación lineal entera de $r_0=a$ y $r_1=b$.
+        \vskip .2cm \pause
+        En particular,  $d=r_k$ puede ser escrito como combinación lineal entera de $r_0=a$ y $r_1=b$.
+    \end{frame}
+
+    
+    \begin{frame}\label{fil-obtencion-de-r-s}
+        
+    Más precisamente, de la filmina \ref{film-alg-eucl} :
+    \begin{equation*}
+        (e_{i-1})\quad r_{i-2}=r_{i-1}q_{i-1} + r_{i}.
+    \end{equation*}\pause
+        Esto implica que 
+        $$
+        ({i})\quad r_{i} = r_{i-2} - r_{i-1}q_{i-1}.
+        $$\pause
+        Lo cual nos dice que $r_{i}$  puede ser calculado usando $r_{i-1}$ y $r_{i-2}$.
+        \pause
+        \begin{align*}
+            d = r_{k} &\stackrel{(k)}{=} r_{k-2}-r_{k-1}q_{i} = s_kr_{k-2}+ t_k r_{k-1} \\
+            &\stackrel{(k-1)}{=} s_kr_{k-2}+ t_k (r_{k-3}-r_{k-2}q_{k-2}) =s_{k-1}r_{k-3}+ t_{k-1} r_{k-2} \\
+            &\;\cdots\;\cdots\\
+            &\stackrel{(3)}{=} s_4r_{2}+ t_k (r_{1}-r_{2}q_{2}) =s_{3}r_{1}+ t_{3} r_{2} \\
+            &\stackrel{(2)}{=} s_3r_{1}+ t_3 (r_{0}-r_{1}q_{1}) =s_{2}r_{0}+ t_{2} r_{1} =s_{2}a+ t_{2}b.
+        \end{align*}
+        
+        \qed
+        
+    \end{frame}
+
+
+    \begin{frame}
+        \frametitle{}
+
+        \begin{corolario}
+            Sean $a$ y $b$ enteros, $b$ no nulo, entonces
+            $$
+            (a,b) = 1 \Leftrightarrow \text{existen $s,t \in \mathbb Z$ tales que $1 = sa+tb$.}
+            $$
+        \end{corolario}
+        \pause
+        
+    \begin{definicion}
+        Si  $(a,b)=1$ entonces decimos que $a$ y $ b$ son {\em coprimos}\index{coprimos}.
+    \end{definicion}
+
+
+    \begin{observacion}
+        \textit{NO} es cierto  que si existen $s,t \in \mathbb Z$ tales que $d = sa+tb$ $\Rightarrow$ $d = (a,b)$.
+\vskip .4cm
+        Por ejemplo, $4 = 2 \cdot 6 + (-2) \cdot 4$ y $(6,4) =2$. 
+    \end{observacion}
+        
+        
+    
+    \end{frame}
+
+        
+    \begin{frame}
+        \begin{ejemplo} Encuentre $d$, el mcd de 174 y 72 y  escribir $d = s \cdot 174 + t \cdot 72$.
+        \end{ejemplo}\pause
+        {\color{blue} Solución}
+        \pause 
+        \begin{alignat*}5
+            174&=72\cdot 2+30,& \;\quad&\Rightarrow&  \;\quad 30 &=     174-72\cdot 2& &\; &\quad\quad\quad&(1)\\
+            72&=30\cdot 2+12,& \;&\Rightarrow& 12&=72-30\cdot 2& \; & \; &&(2) \\
+            30&=12\cdot 2+6,& \;&\Rightarrow& 6&=    30-12\cdot 2& \; & \; &&(3)\\
+            12&=6\cdot 2+0.& \;&&  && &&\\
+        \end{alignat*} \pause \vskip -1.0cm
+        Por lo tanto,     $(174,72) = 6$ y,
+    \end{frame}
+    
+    
+    
+    \begin{frame}
+        \begin{align*}
+            6&\stackrel{(3)}{=}    30-12\cdot 2\\
+            &\stackrel{(2)}{=}    30-(72-30\cdot 2)\cdot 2 \\  
+            &=    5 \cdot 30 + (-2) \cdot 72\\  
+            &\stackrel{(1)}{=} 5 \cdot (    174-72\cdot 2) + (-2) \cdot 72\\   
+            &=  5\cdot 174+ (-12) \cdot 72  
+        \end{align*}
+        \pause
+        Concluyendo: 
+        \begin{itemize}
+            \item     $(174,72) = 6$ y,
+            \item  $6= 5\cdot 174+ (-12) \cdot 72$.
+        \end{itemize}
+        \qed
+        
+        \vskip 2cm
+        %    72&=30\cdot 2+12,& \;&\Rightarrow& 12&=72-30\cdot 2& \; &\Rightarrow&  \; 12&= (-2)\cdot 174+ 5 \cdot 72 \\
+        %30&=12\cdot 2+6,& \;&\Rightarrow& 6&=    30-12\cdot 2& \; &\Rightarrow&  \; 6&= 5\cdot 174+ (-12) \cdot 72\\
+        
+    \end{frame}
+    
+    \begin{frame}
+        \begin{ejemplo} Encuentre $d$, el mcd de 470 y 55 y escribir $d = s \cdot 470 + t \cdot 55$.
+        \end{ejemplo} \pause
+        \begin{solucion}\pause
+            Por el algoritmo de Euclides obtenemos
+            \begin{alignat*}4
+                470&=55 \cdot 8 +30&\quad\Rightarrow\quad &30 &=&470 + (-8)\cdot 55&\qquad (1)&\\
+                55&=30 \cdot 1 + 25&\quad\Rightarrow\quad &25 &=&55 +(-1)\cdot 30&\qquad (2)&\\
+                30&=25 \cdot 1+5&\quad\Rightarrow\quad &5 &=&30 +(-1) \cdot 25&\qquad (3)& \\
+                25&=5\cdot 5+0.&&&&&&
+            \end{alignat*}\pause
+            Luego
+            \begin{align*}
+                5 &\stackrel{(3)}{=} 30 +(-1) \cdot 25\\
+                &\stackrel{(2)}{=} 30 + (-1) \cdot (55 +(-1)\cdot 30) = 2 \cdot 30 + (-1) \cdot 55 \\   
+                &\stackrel{(1)}{=}  2 \cdot (470 + (-8)\cdot 55) + (-1) \cdot 55 = 2 \cdot 470 +(-17)\cdot 55    \qed\\    
+            \end{align*}
+        
+        \end{solucion}    
+        
+    \end{frame}
+    
+    
+    \begin{frame}\frametitle{Mínimo común múltiplo}
+        
+        
+        \begin{definicion}
+            Si $a$ y $b$ son enteros decimos que un entero no negativo $m$ es el {\em
+                mínimo común múltiplo}\index{mínimo común múltiplo}, o {\em mcm}, de $a$ y $b$ si
+            \begin{enumerate}
+                \item[a)] $ a|m$ y $b|m$;
+                \item[b)] si $ a|n $ y $b|n$ entonces $ m|n$.
+            \end{enumerate}
+        \end{definicion}\pause
+        \vskip 0.6cm
+        \begin{itemize}
+            \item La condición (a) nos dice que $m$ es múl\-ti\-plo común de $a$ y $b$. 
+            \item La condición (b) nos dice que cualquier otro múltiplo de $a$ y $b$ también debe ser múltiplo de $m$.
+        \end{itemize}
+        
+    \end{frame}
+    
+    
+    \begin{frame}
+        
+        \begin{ejemplo}
+            Hallemos el mínimo común múltiplo entre $8$ y $14$.
+        \end{ejemplo}\pause
+        
+        \begin{solucion}\pause
+            Escribamos los múl\-ti\-plos de ambos números y busquemos el menor común a ambos. 
+            
+            \vskip .4cm \pause
+            
+            Los primeros múltiplos de $8$ son: $8,16,24,32,40,48,56,\ldots$. 
+            
+            \vskip .4cm 
+            Los primeros múltiplos de $14$ son: $14,28,42,56,72,\ldots$. 
+            
+            \vskip .4cm \pause
+            
+            Luego se tiene $\mcm(8,14)=56$. Nos faltaría  comprobar que cualquier múltiplo de $8$ y $14$ es múltiplo de 56, pero eso se deduce fácilmente de los resultados que veremos a continuación.
+        \end{solucion}
+        
+        
+        
         
     \end{frame}
     
 
+
+    
+    
+    \begin{frame}
+        \begin{teorema}\label{t1.7.2} Sean $a$ y $b$ enteros no nulos, entonces
+            $$
+            \mcm(a,b)=\frac{|a b|}{\mcd(a,b)}.
+            $$
+        \end{teorema}\pause
+        
+        En particular este resultado implica que si $a$ y $b$ son naturales coprimos, entonces $\mcm(a,b)=ab$.
+        \pause
+        \vskip .5cm
+        
+        \begin{ejemplo} Encontrar el  mcm de $8$ y $14$.\pause
+            \begin{solucion}\pause
+                Es claro que $2 = \mcd(8,14)$, luego $\mcm(8,14) = 8 \cdot 14 / 2 = 56$. 
+            \end{solucion}
+        \end{ejemplo}
+        
+    \end{frame}
+    
+    
+    
+    \begin{frame}
+        \begin{ejercicio}
+            Demostrar que si $a$, $b$ y $n$ son enteros no nulos, entonces
+            $\mcd(na,nb)=n\mcd(a,b)$.
+        \end{ejercicio}\pause
+        \begin{solucion}\pause
+            Sea $d = (a,b)$, debemos probar que $ nd = (na,nb)$. Es decir, \pause
+            \vskip .2cm
+            \begin{enumerate}
+                \item[{\color{blue}a)}] $ d|a$  y $d|b$;
+                \item[{\color{blue}b)}]  si $ c|a $ y $c|b$ entonces $ c|d$.
+            \end{enumerate}\pause
+            
+            \qquad\qquad $\Downarrow$
+            
+            \begin{enumerate}\pause
+                \item[{\color{blue}a')}] $ nd|na$  y $nd|nb$;
+                \item[{\color{blue}b')}]  si $ c|na $ y $c|nb$ entonces $ c|nd$.
+            \end{enumerate}
+        \end{solucion}
+    \end{frame}
+    
+    
+    
+    \begin{frame}
+        
+        {\color{blue}a')}  
+        
+        Por {\color{blue}a)}, $a = d \cdot q_1$, $b = d \cdot q_2$ , luego
+        $$na = d \cdot nq_1, \quad nb = d \cdot nq_2,$$ es decir
+        $$ nd|na, \quad nd|nb.$$\pause
+        
+        \vskip .2cm
+        {\color{blue}b')}  
+        
+        Sea $c$ tal que  $ c|na $ y $c|nb$.  
+        \vskip .2cm
+        Ahora bien
+        $$
+        d = ra +sb \Rightarrow nd = s(na) +t(nb),
+        $$\pause
+        Luego,
+        $$
+        c|na ,c|nb  \Rightarrow  c|s(na) +t(nb) = nd.
+        $$
+        Esto prueba     {\color{blue}b')}. \qed
+    \end{frame}
+    
+    
+    
+    
     
 \end{document}
 
