--- a/2023-1/beamer/C13_md1.tex
+++ b/2023-1/beamer/C13_md1.tex
@@ -94,17 +94,15 @@
 
 
 
-
-\title[Clase 13 - MCD (2)]{Matemática Discreta I \\ Clase 13 - Máximo común divisor (2)}
+\title[Clase 14 - Factorización prima]{Matemática Discreta I \\ Clase 14 - Factorización prima 1}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[02/05/2023]{2 de mayo  de 2023}
+\date[04/05/2023]{4 de mayo de 2023}
 
-\newcommand{\mcd}{\operatorname{mcd}}
-\newcommand{\mcm}{\operatorname{mcm}}
+
 
 
 \begin{document}
@@ -112,330 +110,262 @@
     \frame{\titlepage} 
     
     
-    
-    \begin{frame}\frametitle{Algoritmo de Euclides}\label{film-alg-eucl}
-        Para calcular el mcd de enteros $a$ y $b$, con $b >0$, 
-        definimos $q_i$ y $r_i$ recursivamente  de la siguiente manera: $r_0 = a$, $r_1 = b$,  y \pause
-        \begin{align*}
-            &\text{($e_{1}$)}\qquad& r_0&=r_1 q_1 + r_2& &(0 < r_2<r_1)\\
-            &\text{($e_{2}$)}\qquad& r_1&=r_2q_2 + r_3\quad{}\quad{}\quad{}& &(0 < r_3<r_2)  \\
-            &\text{($e_{3}$)}\qquad& r_2&=r_3q_3 + r_4\quad{}\quad{}\quad{}& &(0 < r_4<r_3)  \\
-            &\cdots&&\\
-            &\text{($e_{i}$)}\qquad& r_{i-1}&=r_{i}q_{i} + r_{i+1}& &(0 < r_{i+1} <r_{i}) \\
-            &\cdots&& \\
-            &\text{($e_{k-1}$)}\qquad& r_{k-2}&=r_{k-1}q_{k-1} + r_{k}& &(0 < r_{k} <r_{k-1}) \\
-            &\text{($e_{k}$)}\qquad& r_{k-1}&=r_{k}q_{k} + 0 ,&&  
-        \end{align*}\pause
-        
-        Entonces $r_k = \mcd(a,b)$ {\color{gray} \qquad (Se usa en filmina \ref{film-alg-eucl-2})}
-    \end{frame}
-
-    
-
     \begin{frame}
-        Ejemplifiquemos el algoritmo de Euclides.\pause
+        \begin{definicion} Se dice que un entero positivo $p$ es {\em primo}\index{número primo} si $p\ge 2$ y
+            los únicos enteros positivos que dividen $p$ son 1 y $p$ mismo.
+        \end{definicion}\pause
+        \vskip .4cm
+        Los primeros primos (los  menores que $100$) son
+        \vskip .4cm
+        2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89 y 97.
+        
+        \vskip .4cm\pause
+        Enfaticemos que de acuerdo a la definición, 1 {\it no} es primo.
         
         \vskip .4cm
         
-        \begin{ejemplo} Encuentre el mcd de 2406 y 654.
-        \end{ejemplo}\pause
-        \begin{solucion}\pause Tenemos
-            \begin{alignat*}3
-                2406&=654\cdot3+444,&\quad&\text{ entonces  }&\quad (2406,654)&= (654,444) \\
-                654&=444\cdot1+210, &\quad&\text{ entonces  }&(654,444)&= (444,210)\\
-                444&=210\cdot2+24,&\quad&\text{ entonces  }&(444,210)&= (210,24)\\
-                210&=24\cdot8+18,&\quad&\text{ entonces  }&(210,24)&= (24,18)\\
-                24 &=18\cdot1+6,&\quad&\text{ entonces  }&(24,18)&= (18,6)\\
-                18&=6\cdot3 + 0&\quad&\text{ entonces  }& (18,6) &= (6,0) = 6 
-            \end{alignat*}\pause
-            Por lo tanto $(2406,654)=6$.
-        \end{solucion}
+        
+        
     \end{frame}
-
     
-    \begin{frame}[fragile=singleslide]
+    
+    \begin{frame}
+        
         
         \begin{itemize}
-            \item[$\bullet$] El algoritmo de Euclides es fácilmente implementable en un lenguaje de programación.
-            \vskip .4cm
-            \item[$\bullet$]  A continuación una versión del mismo en pseudocódigo (estilo Python).
+            \item[$\circ$]  $p$ es primo si y solo si $P = m_1m_2$ $\Rightarrow$ $m_1 = 1, m_2=p$ o  $m_1 = p, m_2=1$. 
+            \vskip .4cm\pause
+            \item[$\circ$]   $m\ge 2$ no es un primo si y sólo si existen $1 < m_1, m_2 < m$, tales que $m=m_1m_2$.
         \end{itemize}
-        
-        
+        \pause
         \vskip .6cm
         
-        {\quad\color{blue} Algoritmo de Euclides }
-        %\vskip .2cm
-        \begin{verbatim}
-        # pre: a y b son números positivos
-        # post: obtenemos d = mcd(a,b)
-        i, j = a, b
-        while j != 0:
-            # invariante: mcd(a, b) = mcd(i, j)
-            resto = i % j  # i = q * j + resto
-            i, j = j, resto
-        d = i
-        \end{verbatim}
+        No son primos:
+        \begin{alignat*}4
+            4 &= 2 \cdot 2,&\qquad 6&= 2\cdot3, &\qquad 8&=2 \cdot 4,&\qquad 9&= 3\cdot 3,\quad \\ 
+            10&= 2\cdot5 ,& 12&= 3\cdot 4,& 14&=2 \cdot 7,& 15&=3 \cdot 5, \\
+            16&= 2\cdot 8,&  18&= 2\cdot 9,& 20&= 4 \cdot 5,& 21 &= 3 \cdot 7.
+        \end{alignat*}
         
         
     \end{frame}
     
-    \begin{frame}\label{film-alg-eucl-2}
-        
-        \begin{teorema}\label{prop-d-comb-lin}
-            Sean $a,b \in \Z$, alguno de ellos no nulo. Entonces,  existen $s, t \in \Z$ tal que 
-            \begin{equation*}
-                \operatorname{mcd}(a,b) = sa +tb.
-            \end{equation*}
-        \end{teorema}
-        \vskip -.5cm
-        {\color{blue}Demostración.}\pause 
-        \vskip .2cm
-        Supongamos que $b>0$ y sea $d=\mcd(a,b)$. Entonces, $d$ es el último resto no nulo del algoritmo (ver p. \ref{film-alg-eucl}).
-        \vskip .2cm \pause
-        Cada resto puede ser calculado en base a los dos anteriores:
-        \begin{equation}\label{eq-alg-euclides}
-            (e_{i-1})\quad r_{i-2}=r_{i-1}q_{i-1} + r_{i}\quad \Rightarrow \quad  r_{i} = r_{i-2} - r_{i-1}q_{i-1}.
-        \end{equation}
-        \vskip .2cm \pause
-        Aplicando repetidamente (\ref{eq-alg-euclides}) a los restos correpondientes, $\Rightarrow$  cada resto puede ser escrito como combinación lineal entera de $r_0=a$ y $r_1=b$.
-        \vskip .2cm \pause
-        En particular,  $d=r_k$ puede ser escrito como combinación lineal entera de $r_0=a$ y $r_1=b$.
-    \end{frame}
-
     
-    \begin{frame}\label{fil-obtencion-de-r-s}
-        
-    Más precisamente, de la filmina \ref{film-alg-eucl} :
-    \begin{equation*}
-        (e_{i-1})\quad r_{i-2}=r_{i-1}q_{i-1} + r_{i}.
-    \end{equation*}\pause
-        Esto implica que 
+    \begin{frame}
+        Veremos que todo número entero positivo puede expresarse como producto de primos. Por ejemplo
         $$
-        ({i})\quad r_{i} = r_{i-2} - r_{i-1}q_{i-1}.
-        $$\pause
-        Lo cual nos dice que $r_{i}$  puede ser calculado usando $r_{i-1}$ y $r_{i-2}$.
-        \pause
-        \begin{align*}
-            d = r_{k} &\stackrel{(k)}{=} r_{k-2}-r_{k-1}q_{i} = s_kr_{k-2}+ t_k r_{k-1} \\
-            &\stackrel{(k-1)}{=} s_kr_{k-2}+ t_k (r_{k-3}-r_{k-2}q_{k-2}) =s_{k-1}r_{k-3}+ t_{k-1} r_{k-2} \\
-            &\;\cdots\;\cdots\\
-            &\stackrel{(3)}{=} s_4r_{2}+ t_k (r_{1}-r_{2}q_{2}) =s_{3}r_{1}+ t_{3} r_{2} \\
-            &\stackrel{(2)}{=} s_3r_{1}+ t_3 (r_{0}-r_{1}q_{1}) =s_{2}r_{0}+ t_{2} r_{1} =s_{2}a+ t_{2}b.
-        \end{align*}
+        825=3\cdot 5\cdot 5\cdot 11.
+        $$ \pause 
+        Si el entero es negativo, es $-1$ por un producto de primos
+        $$
+        -825=-1 \cdot 3\cdot 5\cdot 5\cdot 11.
+        $$ \pause 
         
-        \qed
+        Como consecuencia del axioma del buen orden obtenemos que todo entero positivo es producto de primos (si $p$ es primo, también lo consideramos un {producto de primos.})
         
     \end{frame}
-
-
+    
+    
     \begin{frame}
-        \frametitle{}
-
-        \begin{corolario}
-            Sean $a$ y $b$ enteros, $b$ no nulo, entonces
+        \begin{teorema}
+            Todo  entero  mayor que $1$ es producto de números primos. 
+        \end{teorema}  
+        \pause
+        
+        \begin{idea}\pause
+            \vskip -.4cm
             $$
-            (a,b) = 1 \Leftrightarrow \text{existen $s,t \in \mathbb Z$ tales que $1 = sa+tb$.}
-            $$
-        \end{corolario}
+            B = \{n >0: \text{$n$ no es  producto de primos} \}.
+            $$\pause
+            Si $B \ne \emptyset$, por BO existe $m$ mínimo de $B$. \pause
+            \vskip .3cm
+            $m$ no es primo $\Rightarrow$ $m= m_1m_2$ con $1 < m_1, m_2 < m$. \pause
+            \vskip .3cm
+            Como $ m_1, m_2 < m$, ambos son producto de  primos.\pause
+            \vskip .3cm
+            Luego $m_1m_2 = m$ es producto de primos. Absurdo.\pause
+            \vskip .3cm
+            El absurdo vino de suponer que $B \ne \emptyset$.
+            \qed
+            
+        \end{idea}  
+
+
+
+    \end{frame}
+    
+    
+    \begin{frame}
+
+        \begin{observacion}
+			\begin{itemize}
+				\item[$\circ$] Por el teorema,  decimos que todo número entero \textit{admite una factorización con factores primos}.
+			\end{itemize}
+			
+		\end{observacion}
         \pause
-        
-    \begin{definicion}
-        Si  $(a,b)=1$ entonces decimos que $a$ y $ b$ son {\em coprimos}\index{coprimos}.
-    \end{definicion}
-
-
-    \begin{observacion}
-        \textit{NO} es cierto  que si existen $s,t \in \mathbb Z$ tales que $d = sa+tb$ $\Rightarrow$ $d = (a,b)$.
-\vskip .4cm
-        Por ejemplo, $4 = 2 \cdot 6 + (-2) \cdot 4$ y $(6,4) =2$. 
-    \end{observacion}
-        
-        
-    
-    \end{frame}
-
-        
-    \begin{frame}
-        \begin{ejemplo} Encuentre $d$, el mcd de 174 y 72 y  escribir $d = s \cdot 174 + t \cdot 72$.
-        \end{ejemplo}\pause
-        {\color{blue} Solución}
-        \pause 
-        \begin{alignat*}5
-            174&=72\cdot 2+30,& \;\quad&\Rightarrow&  \;\quad 30 &=     174-72\cdot 2& &\; &\quad\quad\quad&(1)\\
-            72&=30\cdot 2+12,& \;&\Rightarrow& 12&=72-30\cdot 2& \; & \; &&(2) \\
-            30&=12\cdot 2+6,& \;&\Rightarrow& 6&=    30-12\cdot 2& \; & \; &&(3)\\
-            12&=6\cdot 2+0.& \;&&  && &&\\
-        \end{alignat*} \pause \vskip -1.0cm
-        Por lo tanto,     $(174,72) = 6$ y,
-    \end{frame}
-    
-    
-    
-    \begin{frame}
-        \begin{align*}
-            6&\stackrel{(3)}{=}    30-12\cdot 2\\
-            &\stackrel{(2)}{=}    30-(72-30\cdot 2)\cdot 2 \\  
-            &=    5 \cdot 30 + (-2) \cdot 72\\  
-            &\stackrel{(1)}{=} 5 \cdot (    174-72\cdot 2) + (-2) \cdot 72\\   
-            &=  5\cdot 174+ (-12) \cdot 72  
-        \end{align*}
-        \pause
-        Concluyendo: 
-        \begin{itemize}
-            \item     $(174,72) = 6$ y,
-            \item  $6= 5\cdot 174+ (-12) \cdot 72$.
-        \end{itemize}
-        \qed
-        
-        \vskip 2cm
-        %    72&=30\cdot 2+12,& \;&\Rightarrow& 12&=72-30\cdot 2& \; &\Rightarrow&  \; 12&= (-2)\cdot 174+ 5 \cdot 72 \\
-        %30&=12\cdot 2+6,& \;&\Rightarrow& 6&=    30-12\cdot 2& \; &\Rightarrow&  \; 6&= 5\cdot 174+ (-12) \cdot 72\\
-        
-    \end{frame}
-    
-    \begin{frame}
-        \begin{ejemplo} Encuentre $d$, el mcd de 470 y 55 y escribir $d = s \cdot 470 + t \cdot 55$.
-        \end{ejemplo} \pause
-        \begin{solucion}\pause
-            Por el algoritmo de Euclides obtenemos
-            \begin{alignat*}4
-                470&=55 \cdot 8 +30&\quad\Rightarrow\quad &30 &=&470 + (-8)\cdot 55&\qquad (1)&\\
-                55&=30 \cdot 1 + 25&\quad\Rightarrow\quad &25 &=&55 +(-1)\cdot 30&\qquad (2)&\\
-                30&=25 \cdot 1+5&\quad\Rightarrow\quad &5 &=&30 +(-1) \cdot 25&\qquad (3)& \\
-                25&=5\cdot 5+0.&&&&&&
-            \end{alignat*}\pause
-            Luego
+        \begin{ejemplo} 
+            Encontremos la factorización en números primos de $201\,000$. Esto se hace di\-vi\-dien\-do  sucesivamente los números hasta llegar a factores primos:\pause
             \begin{align*}
-                5 &\stackrel{(3)}{=} 30 +(-1) \cdot 25\\
-                &\stackrel{(2)}{=} 30 + (-1) \cdot (55 +(-1)\cdot 30) = 2 \cdot 30 + (-1) \cdot 55 \\   
-                &\stackrel{(1)}{=}  2 \cdot (470 + (-8)\cdot 55) + (-1) \cdot 55 = 2 \cdot 470 +(-17)\cdot 55    \qed\\    
+                201\,000 &= 201\cdot 1000 = 3\cdot 67\cdot 10\cdot 10\cdot 10\\ &=  3\cdot 67\cdot 2\cdot 5 \cdot 2\cdot 5 \cdot 2\cdot 5 \\&= 2^3\cdot 3\cdot 5^3\cdot 67.
             \end{align*}
-        
-        \end{solucion}    
-        
-    \end{frame}
-    
-    
-    \begin{frame}\frametitle{Mínimo común múltiplo}
-        
-        
-        \begin{definicion}
-            Si $a$ y $b$ son enteros decimos que un entero no negativo $m$ es el {\em
-                mínimo común múltiplo}\index{mínimo común múltiplo}, o {\em mcm}, de $a$ y $b$ si
-            \begin{enumerate}
-                \item[a)] $ a|m$ y $b|m$;
-                \item[b)] si $ a|n $ y $b|n$ entonces $ m|n$.
-            \end{enumerate}
-        \end{definicion}\pause
-        \vskip 0.6cm
-        \begin{itemize}
-            \item La condición (a) nos dice que $m$ es múl\-ti\-plo común de $a$ y $b$. 
-            \item La condición (b) nos dice que cualquier otro múltiplo de $a$ y $b$ también debe ser múltiplo de $m$.
-        \end{itemize}
-        
-    \end{frame}
-    
-    
-    \begin{frame}
-        
-        \begin{ejemplo}
-            Hallemos el mínimo común múltiplo entre $8$ y $14$.
-        \end{ejemplo}\pause
-        
-        \begin{solucion}\pause
-            Escribamos los múl\-ti\-plos de ambos números y busquemos el menor común a ambos. 
-            
-            \vskip .4cm \pause
-            
-            Los primeros múltiplos de $8$ son: $8,16,24,32,40,48,56,\ldots$. 
-            
-            \vskip .4cm 
-            Los primeros múltiplos de $14$ son: $14,28,42,56,72,\ldots$. 
-            
-            \vskip .4cm \pause
-            
-            Luego se tiene $\mcm(8,14)=56$. Nos faltaría  comprobar que cualquier múltiplo de $8$ y $14$ es múltiplo de 56, pero eso se deduce fácilmente de los resultados que veremos a continuación.
-        \end{solucion}
-        
-        
-        
-        
-    \end{frame}
-    
-
-
-    
-    
-    \begin{frame}
-        \begin{teorema}\label{t1.7.2} Sean $a$ y $b$ enteros no nulos, entonces
-            $$
-            \mcm(a,b)=\frac{|a b|}{\mcd(a,b)}.
-            $$
-        \end{teorema}\pause
-        
-        En particular este resultado implica que si $a$ y $b$ son naturales coprimos, entonces $\mcm(a,b)=ab$.
-        \pause
-        \vskip .5cm
-        
-        \begin{ejemplo} Encontrar el  mcm de $8$ y $14$.\pause
-            \begin{solucion}\pause
-                Es claro que $2 = \mcd(8,14)$, luego $\mcm(8,14) = 8 \cdot 14 / 2 = 56$. 
-            \end{solucion}
+            Como vimos más arriba $2, 3, 5$ y $67$ son  números primos y por lo tanto hemos obtenido la descomposición prima de $201\,000$.
         \end{ejemplo}
-        
     \end{frame}
     
     
-    
     \begin{frame}
-        \begin{ejercicio}
-            Demostrar que si $a$, $b$ y $n$ son enteros no nulos, entonces
-            $\mcd(na,nb)=n\mcd(a,b)$.
-        \end{ejercicio}\pause
-        \begin{solucion}\pause
-            Sea $d = (a,b)$, debemos probar que $ nd = (na,nb)$. Es decir, \pause
-            \vskip .2cm
+        
+        \begin{observacion}
+            Sea $a \in \mathbb Z$ y $p$ primo. Entonces 
             \begin{enumerate}
-                \item[{\color{blue}a)}] $ d|a$  y $d|b$;
-                \item[{\color{blue}b)}]  si $ c|a $ y $c|b$ entonces $ c|d$.
+                \item[a)]  Si $p{\not|}a$, entonces $\operatorname{mcd}(a,p) = 1$.\pause
+                \item[b)]  Si $p$ y $p'$ son primos y $p|p'$ entonces $p=p'$.
             \end{enumerate}\pause
+        \end{observacion}
+        \begin{proof}
+            \pause
             
-            \qquad\qquad $\Downarrow$
-            
-            \begin{enumerate}\pause
-                \item[{\color{blue}a')}] $ nd|na$  y $nd|nb$;
-                \item[{\color{blue}b')}]  si $ c|na $ y $c|nb$ entonces $ c|nd$.
-            \end{enumerate}
-        \end{solucion}
+            \noindent (a) Como los únicos divisores de $p$ son $p$ y $1$, y $p{\not|}a$, el único  divisor común de $p$ y $a$ es $1$.
+            \vskip .3cm\pause
+            \noindent (b) $p'$ es primo, por lo tanto tiene sólo dos divisores positivos $1$ y $p'$. Como $p$ no es $1$, tenemos que  $p=p'$.  \qed
+        \end{proof}
     \end{frame}
-    
     
     
     \begin{frame}
         
-        {\color{blue}a')}  
+        \begin{lema} Si $n>0$ no es primo, entonces existe $m>0$ tal que $m|n$ y $m \le \sqrt{n}$.  
+        \end{lema}\pause
+        \begin{demostracion}\pause
+            Sea $n > 1$ que no es primo. Entonces existe  $m_1, m_2$ tal que 
+            $$
+            1 < m_1, m_2 < n \quad \text{y} \quad n = m_1 m_2.$$\pause
+            
+            Si $m_1 > \sqrt{n}$ y $m_2 >\sqrt{n}$ entonces 
+            
+            $$
+            n = m_1m_2 > \sqrt{n}\sqrt{n} = \sqrt{n}^2 = n.
+            $$\pause
+            \vskip .2cm
+            Absurdo. Vino de suponer que $m_1 > \sqrt{n}$ y $m_2 >\sqrt{n}$. 
+            \vskip .3cm
+            Luego $m_1 \le \sqrt{n}$ o $m_2 \le \sqrt{n}$\qed
+            
+            
+        \end{demostracion}
         
-        Por {\color{blue}a)}, $a = d \cdot q_1$, $b = d \cdot q_2$ , luego
-        $$na = d \cdot nq_1, \quad nb = d \cdot nq_2,$$ es decir
-        $$ nd|na, \quad nd|nb.$$\pause
-        
-        \vskip .2cm
-        {\color{blue}b')}  
-        
-        Sea $c$ tal que  $ c|na $ y $c|nb$.  
-        \vskip .2cm
-        Ahora bien
-        $$
-        d = ra +sb \Rightarrow nd = s(na) +t(nb),
-        $$\pause
-        Luego,
-        $$
-        c|na ,c|nb  \Rightarrow  c|s(na) +t(nb) = nd.
-        $$
-        Esto prueba     {\color{blue}b')}. \qed
     \end{frame}
     
+    
+    \begin{frame}
+        \vskip .4cm
+        El contrarrecíproco del  lema anterior, es el \textit{criterio de la raíz}:\pause
+        
+        \begin{proposicion}Sea $n\ge 2$. Si para todo $m$ tal que $1<m \le \sqrt{n}$ se cumple que $m{\not|}n$, entonces $n$ es primo.
+        \end{proposicion}\pause
+        \vskip .3cm
+        \begin{corolario}
+            Sea $n\ge 2$. Si para todo $p$ primo tal que $1<p \le \sqrt{n}$ se cumple que $p{\not|}n$, entonces $n$ es primo.
+        \end{corolario}
+    \end{frame}
+    
+    
+    \begin{frame}
+        \begin{ejemplo} Verifiquemos si $467$ es primo o no.
+        \end{ejemplo}\pause
+        \begin{solucion}
+            Si no utilizamos el criterio de la raíz deberíamos hacer 465 divisiones: deberíamos comprobar si $m|467$ con  $1<m <467$. \pause
+            \vskip .2cm
+            Como $\sqrt{467} = 21.61...$, sólo debemos comprobar si $m|467$ para $2\le m \le 21$. \pause
+            \vskip .2cm
+            Un sencilla comprobación (dividiendo) muestra que los números $2,3,\cdots,20,21$ no  dividen a $467$ y por  lo tanto $467$ es primo. 
+        \end{solucion}
+        \pause
+        \begin{observacion}
+            En  el ejemplo anterior podríamos haber solo comprobado si los primos 2, 3, 5, 7, 11, 13, 17, 19 dividen a 467. 
+        \end{observacion}
+        
+    \end{frame}
+    
+    
+    \begin{frame}
+        
+        \begin{teorema} Sea $p$  un número  primo.
+            
+            \begin{enumerate} 
+                \item[a)] Si $p|xy$ entonces $p|x$ o $p|y$.
+                \item[b)] $x_1,x_2,\ldots,x_n$ son enteros tales que
+                $$
+                p|x_1x_2\ldots x_n
+                $$
+                entonces $p|x_i$ para algún $x_i$ ($1\le i \le n$).
+            \end{enumerate}
+        \end{teorema}
+        \vskip .4cm
+        \begin{observacion}
+            La propiedad a) es \textit{muy importante} y podíamos haber definido número primo como aquel  número que cumple esta propiedad.
+        \end{observacion}
+    \end{frame}
+    
+    
+    \begin{frame}
+        Un error común es asumir que la propiedad a) se mantiene
+        verdadera cuando reemplazamos el primo $p$ por un entero
+        arbitrario . Pero esto claramente falso: por ejemplo
+        $$
+        6| 3\cdot 8 \quad \text{ pero } \quad 6{\not|} 3 \quad \text{ y }
+        \quad 6{\not|}8.
+        $$
+        
+        \vskip .4cm
+        
+        \pause
+        
+        La propiedad a)  juega un papel crucial en la demostración del
+        siguiente resultado, que a veces es llamado el {\it Teorema
+            Fundamental de la Aritmética}.
+        \vskip .4cm
+        \begin{teorema}La factorización en primos de un entero
+            positivo $n\ge 2$ es única, salvo el orden de los factores primos.
+        \end{teorema}
+    \end{frame}
+    
+    
+    \begin{frame}
+        Luego todo entero positivo $n$ puede escribirse como
+        $$
+        m = q_{1}\cdot q_{2}\cdot \cdots q_{m-1}\cdot q_{m}
+        $$
+        donde los $q_i$ son  primos no necesariamente distintos.
+        \vskip .8cm
+        En la práctica a menudo reunimos los primos iguales en la
+        factorización de $n$ y escribimos
+        \begin{equation}
+            n=p_1^{e_1}p_2^{e_2}\ldots p_r^{e_r},
+        \end{equation}
+        donde $p_1,p_2,\ldots ,p_r$ son primos distintos y $e_1,e_2,\ldots,e_r$ son enteros positivos.
+    \end{frame}
+    
+    
+    \begin{frame}
+        
+        \begin{ejemplo} Encontrar la descomposición prima de 7000.
+        \end{ejemplo}
+        \begin{solucion}
+            $ 7000 = 1000 \cdot 7 = 10\cdot 10\cdot 10\cdot 7= 2\cdot 5\cdot 2\cdot 5\cdot 2 \cdot 5\cdot 7$, Es decir
+            $$
+            7000 = 2\cdot 5\cdot 2\cdot 5\cdot 2 \cdot 5\cdot 7.
+            $$ 
+            
+            Pero suele ser mejor escribirlo  como
+            $$7000 = 2^3 \cdot 5^3    \cdot 7.$$
+        \end{solucion}
+        
+        
+        
+        
+    \end{frame}
     
     
     
