--- a/2023-1/beamer/C16_md1.tex
+++ b/2023-1/beamer/C16_md1.tex
@@ -3,7 +3,6 @@
 \usetheme{CambridgeUS}
 %\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
-
 \usepackage{etex}
 \usepackage{t1enc}
 \usepackage[spanish,es-nodecimaldot]{babel}
@@ -96,13 +95,13 @@
 
 
 
-\title[Clase 16 - Congruencia ]{Matemática Discreta I \\ Clase 16 - Congruencias / Ecuación lineal de congruencia}
-%\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
+\title[Clase 17 - Teorema de Fermat / RSA]{Matemática Discreta I \\ Clase 17 - Teorema de Fermat / RSA}
+%\author[A. Tiraboschi]{Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[11/05/2023]{11 de mayo de 2023}
+\date[16/05/2023]{16 de mayo de 2023}
 
 
 
@@ -111,424 +110,325 @@
     
     \frame{\titlepage} 
     
-    
-    \begin{frame}
-        La utilidad de las congruencias reside principalmente en el hecho
-        de que son compatibles con las operaciones aritméticas. \pause
-        Específicamente, tenemos el siguiente teorema.
+    \begin{frame}\frametitle{El Teorema (pequeño) de Fermat}
+        El siguiente lema nos sirve de preparación para la demostración
+        del Teorema (o fórmula) de Fermat.
         
-        \begin{teorema}\label{t4.1} Sea $m$ un entero positivo y sean $x_1$, $x_2$,
-            $y_1$, $y_2$ enteros tales que
-            $$
-            x_1 \equiv x_2 \pmod{m}, \qquad y_1 \equiv y_2 \pmod{m}.
-            $$
-            Entonces
+        \vskip .4cm \pause 
+        \begin{lema} \label{l4.3} Sea $p$ un número primo, entonces
             \begin{enumerate}
-                \item[a)] $ x_1+ y_1 \equiv x_2+ y_2 \pmod{m}$,
-                \item[b)] $x_1 y_1 \equiv x_2 y_2 \pmod{m}$,
-                \item[c)] Si $x \equiv y \pmod{m}$  y $j \in  \mathbb N$, entonces $x^j \equiv y^j \pmod{m}$.
+                \item[(a)] $p|\binom{p}{r}$, con $0< r <p$, \vskip .4cm \pause 
+                \item[(b)] $(a+b)^p \equiv a^p+b^p \pmod{p}$. 
             \end{enumerate}
-        \end{teorema}
+        \end{lema}
         
+    \vskip 3cm
     \end{frame}
     
     
     \begin{frame}
-        \begin{proof}
+        {}
+
+        {\color{blue}Demostración}\pause 
+        \vskip .2cm
+
+        \noindent({a})  Escribamos el número binomial de otra forma: 
+            $$
+            \binom{p}{r}=\frac{p!}{r!(p-r)!}=p\cdot\,\frac{(p-1)!}{r!(p-r)!},
+            $$ 
+            luego 
+            \begin{equation*}\label{binp}
+                \binom{p}{r} \cdot r!(p-r)! = p \cdot(p-1)!.
+            \end{equation*}\pause 
+            Por lo tanto, 
+            \vskip .2cm 
+            \begin{enumerate}
+                \item[(1)] $p | \binom{p}{r} \cdot r!(p-r)!$. Además, \pause 
+                \vskip .3cm 
+                
+                \item[(2)] $r < p$ $\Rightarrow$ $p \not| r!$. \vskip .3cm \pause 
+                
+                \item[(3)] $r >0$ $\Rightarrow$ $p-r < p$ $\Rightarrow$ $p \not| (p-r)!$.
+            \end{enumerate}
             
-            \noindent(a) \pause Por hipótesis $\exists x,y$ tq $x_1-x_2=mx$ e $y_1-y_2=my$. Luego, 
-            $$
-            \begin{aligned}
-                (x_1+y_1)-(x_2+y_2) &= (x_1-x_2)+ (y_1 -y_2) \\
-                &= mx +my \\
-                &= m(x+y),
-            \end{aligned}
-            $$
-            y por consiguiente el lado izquierdo es divisible por $m$.
-            \vskip .2cm\pause 
-            \noindent (b)\pause {}  Aquí tenemos
-            $$
-            \begin{aligned}
-                x_1y_1-x_2y_2 &=  x_1y_1-x_2y_1+ x_2y_1-x_2y_2 \\
-                &= (x_1-x_2)y_1+ x_2(y_1 -y_2) \\
-                &= mxy_1 +x_2my \\
-                &= m(xy_1+x_2y),
-            \end{aligned}
-            $$
-            y de nuevo el lado izquierdo es divisible por $m$.
             
-        \end{proof}
     \end{frame}
-    
     
     \begin{frame}
         
-        \noindent (c) \pause   Lo haremos por inducción sobre $j$. 
-        \vskip .2cm
-        Es claro que si $j=1$ el resultado es verdadero. 
-        \vskip .2cm
-        Supongamos ahora que el resultado vale para $j-1$, es decir
+        De (1), (2) y (3),  
+        
+        \begin{equation*}
+            p | \binom{p}{r} \cdot r!(p-r)!\qquad \wedge \qquad p \not| r!(p-r)!
+        \end{equation*}\pause 
+        
+        por lo tanto ($p$ es primo)
+        \begin{equation*}
+            p | \binom{p}{r}.
+        \end{equation*}
+        \vskip .3cm \pause 
+        \noindent({b}) Por el teorema del binomio sabemos que
         $$
-        x^{j-1} \equiv y^{j-1} \pmod{m}.
-        $$
-        Como $x \equiv y \pmod{m}$,  por   { (b)} tenemos que 
-        $$
-        x^{j-1}x \equiv y^{j-1}y  \pmod{m},
-        $$
-        es decir 
-        $$
-        x^j \equiv y^j \pmod{m}.
-        $$
+        (a+b)^p =\sum_{i=0}^{p} \binom{p}{i} a^ib^{p-i}.
+        $$\pause 
+        Por ({a}) es claro que $ \binom{p}{i} a^ib^{p-i}\equiv 0 \pmod{p}$,
+        si $0<i<p$.
+        \vskip .3cm \pause 
+        Luego se deduce el resultado.
         \qed
     \end{frame}
     
-    
-    \begin{frame}\frametitle{Regla del  nueve}\pause 
-        \begin{proposicion}
-            Sea $(x_nx_{n-1}\ldots x_0)_{10}$ la
-            representación del entero positivo $x$ en base $10$, entonces
-            $$
-            x \equiv x_0+x_1+\cdots+x_n \pmod{9}
-            $$
-        \end{proposicion}\pause 
-        \begin{proof}\pause 
-            Observemos:  $10\equiv 1\pmod{9}$ $\Rightarrow$  $10^k\equiv 1^k \equiv 1\pmod{9}$. 
-            \vskip .2cm
-            Por la definición de representación en base $10$, tenemos que 
-            $$x=x_0 + 10x_1+ \cdots+10^nx_n,$$ 
-            \vskip .2cm
-            Luego,  $x_k10^k \equiv x_k \pmod{9}$ y  entonces $x \equiv
-            x_0+x_1+\cdots+x_n \pmod{9}$.
-        \end{proof}
-        \qed
-    \end{frame}
-    
-    
     \begin{frame}
-        \begin{corolario}     Sea $x = (x_nx_{n-1}\ldots x_0)_{10}$, entonces
-            $$
-            9|x\quad  \Leftrightarrow\quad 9|  x_0+x_1+\cdots+x_n.
-            $$
-        \end{corolario}\pause 
-        \begin{proof}\pause 
-            Por la proposición anterior 
-            \begin{equation}
-                x \equiv x_0+x_1+\cdots+x_n \pmod{9} \tag{*}
-            \end{equation}
-            Entonces,
-            \begin{align*}
-                9|x \quad& \Leftrightarrow \quad    x \equiv 0 \pmod{9}& &\text{(por hipótesis)} \\
-                & \Leftrightarrow \quad    x_0+x_1+\cdots+x_n  \equiv 0 \pmod{9}& &\text{(por (*))} \\    
-                & \Leftrightarrow  \quad 9 |    x_0+x_1+\cdots+x_n.  & &\quad\quad\quad\quad\quad\qed
-            \end{align*}
-        \end{proof}
-    \end{frame}
-    
-    
-    \begin{frame}
+        El siguiente es el llamado teorema de Fermat.
         
-        \begin{ejemplo}Probar que \quad $54\,321 \cdot 98\,765\not= 5\,363\,013\,565$.
-        \end{ejemplo}\pause 
-        \begin{proof}\pause 
-            Módulo 9:
-            \begin{equation*}
-                \begin{matrix*}[l]
-                    54\,321 & \equiv& 5 +4 +3+2+1 & \equiv& 15 & \equiv& 6 \pmod{9} \\
-                    98\,765 & \equiv& 9+8+ 7+6+5 & \equiv&  35  & \equiv& 8 \pmod{9} 
-                \end{matrix*}
-            \end{equation*}
-            Entonces 
-            \begin{equation*}
-                54\,321 \cdot 98\,765 \equiv 6\cdot 8  \equiv 48  \equiv 4+8 \equiv 12 \equiv 3 \pmod{9} 
-            \end{equation*}
-            Mientras que 
+        \begin{teorema}\label{t4.3} Sea $p$ un número primo y $a$ número
+            entero. Entonces
             $$
-            5\,363\,013\,565  \equiv 5+3+6+3+0+1+3+5+6+5  \equiv37   \equiv 1 \pmod{9} 
+            a^p\equiv a\pmod{p}.
             $$
-            Luego  $54\,321 \cdot 98\,765\not= 5\,363\,013\,565$. \qed
+        \end{teorema}\pause 
+        \begin{proof} \pause 
             
-        \end{proof}
-        
-    \end{frame}
-    
-    \begin{comment}
-    \begin{frame}
-        \begin{ejemplo}
-            Sea $x = (x_nx_{n-1}\ldots x_0)_{10}$, entonces
-            $$
-            4 |x\quad  \Leftrightarrow\quad 4 |  2x_1 + x_0.
-            $$
-        \end{ejemplo}\vskip -.5cm
-        \begin{proof}
-            Aquí tenemos que $10  \equiv 2 \pmod{4}$, luego  $10^2  \equiv 4  \equiv 0 \pmod{4}$. 
-            \vskip .2cm
-            Por lo tanto $10^k    \equiv 0 \pmod{4}$ para $k > 1$. 
-            \vskip .2cm
-            Luego 
-            \begin{equation*}
-                x \equiv x_n10^n + x_{n-1}10^{n-1}+\cdots+ x_{2}10^{2}+ x_{1}10 + x_0 \equiv 2 x_{1} + x_0 \pmod{4}.
-            \end{equation*}
-            Luego
-            \begin{equation*}
-                4 | x  \;\Leftrightarrow \; x \equiv 0 \pmod{4}  \; \Leftrightarrow  \; 2 x_{1} + x_0  \equiv 0 \pmod{4}   \; \Leftrightarrow  \;4 | 2 x_{1} + x_0 .\qed
-            \end{equation*}
+            Dividiremos la demostración en 2 casos (1) $a\ge 0$, (2)  $a < 0$.
+            \vskip .3cm\pause 
+            {(1) $a\ge 0$.}     Por inducción sobre $a$. 
+            \vskip .3cm
+            \textit{Caso base $a=0$.} $0^p\equiv 0\pmod{p}$,  es trivial.
+            \vskip .3cm
+            
             
         \end{proof}
     \end{frame}
-\end{comment}
-        
-    \begin{frame}\frametitle{Ecuación lineal de congruencia}
-        Estudiaremos el problema de encontrar los $x \in \mathbb Z$ tal que
-        
-        \begin{equation}\label{ecuacionlineal}
-            ax \equiv b \pmod{m}.
+    
+    
+    \begin{frame}
+        \textit{Paso  inductivo.} Si $k \ge 0$, la hipótesis inductiva es:
+        \begin{equation}
+            k^p \equiv k \pmod{p}. \tag{HI}
         \end{equation}
         
-        \pause
+        Debemos probar,
+        \begin{equation}
+            (k+1)^p \equiv k+1 \pmod{p}. \tag{T}
+        \end{equation}
+        \pause 
+        Ahora bien,
+        \begin{align*}
+            (k+1)^p &\equiv   k^p + 1^p \pmod{p}&\quad&(\text{por (b) del  lema}) \\
+            &\equiv k +1 \pmod{p}&\quad&(\text{por HI}).  \\
+        \end{align*}
+        Es  decir $(k+1)^p \equiv  k+1 \pmod{p}$,  que es lo que queríamos probar.
+    \end{frame}
+    
+    
+    
+    
+    
+    \begin{frame}
         
-        Una ecuación como     (\ref{ecuacionlineal}) es llamada una \textit{ecuación lineal de congruencia.}
-        \vskip .4cm\pause
-        El problema no siempre admite solución. 
-        \vskip .4cm
-        \pause
-        Por  ejemplo, \,$2x\equiv 3 \pmod{2}$\, no posee ninguna solución en
-        $\mathbb Z$, pues cualquiera se $k \in \mathbb Z$, $2k-3$ es
-        impar, luego no es divisible por $2$.
-        \vskip .4cm\pause
-        Notemos además que si $x_0$ es solución de la ecuación
-        (\ref{ecuacionlineal}), también lo es $x_0+km$ de manera que si la
-        ecuación posee una solución, posee infinitas soluciones. 
+        
+        {(2) $a<0$.} \pause    Como $a<0$, entonces $-a>0$, luego por (1): 
+        
+        $(-a)^p \equiv -a \pmod{p}$ o,  equivalentemente
+        \begin{equation}\label{eq:fermat-menos-1}
+            (-1)^pa^p \equiv (-1)a \pmod{p}
+        \end{equation}
+        
+        \pause 
+        Ahora bien,
+        \vskip .3cm 
+        
+        $p>2$, entonces $(-1)^p=-1$,  en particular  $(-1)^p \equiv -1 \pmod{p}$.
+        
+        \vskip .3cm 
+        $p=2$, entonces $(-1)^p=1$, pero como $1\equiv -1 \pmod{2}$, $(-1)^p \equiv -1 \pmod{p}$.
+        \vskip .3cm 
+        \pause 
+        Luego  $(-1)^p \equiv -1 \pmod{p}$ para todo $p$ primo y la ecuación (\ref{eq:fermat-menos-1}) es equivalente a:
+        \begin{equation*}\label{eq:fermat-menos}
+            (-1)a^p \equiv (-1)a \pmod{p}
+        \end{equation*}
+        \vskip .3cm \pause 
+        Multiplicando por $-1$ la ecuación  obtenemos $a^p \equiv a \pmod{p}$. \qed
         
         
     \end{frame}
     
     
     \begin{frame}
+        Supongamos que $a$ y $p$ son coprimos, por Fermat 
+        $$
+        p|(a^p     -a)=a(a^{(p-1)} -1).
+        $$
         
-        \begin{ejemplo} La solución general de la ecuación $3x\equiv 7
-            \pmod{11}$ es $6+k11$ con $k \in \mathbb Z$.
-        \end{ejemplo}\vskip .2cm\pause
-        \begin{proof} Si probamos con los enteros $x$ tal que  $0\le x < 11$, veremos que la ecuación admite una única solución, a saber $x=6$. 
-            \vskip .2cm\pause
-            
-            Otras soluciones se obtienen tomando $6+11k$. \pause 
-            \vskip .2cm
-            Por otra parte si $u$ es también solución de la ecuación, se tiene 
+        Como $p$ no divide a $a$, tenemos que $p|(a^{(p-1)} -1)$, \pause es decir 
+        \vskip .4cm 
+        \begin{teorema}
+            Si  $a$ y $p$ coprimos y $p$ es primo, entonces  
+            $$a^{(p-1)}\equiv 1\pmod{p}.
             $$
-            3u \equiv 7 \hskip -.3cm\pmod{11},\quad 3 \cdot 6 \equiv 7\hskip -.3cm \pmod{11} \quad \Rightarrow \quad 3u \equiv 3\cdot 6\hskip -.3cm \pmod{11}.
+        \end{teorema}
+        
+        \vskip .3cm \pause 
+        Este último enunciado es también conocido como teorema de Fermat.
+    \end{frame}
+    
+    \begin{frame}
+        
+        
+        \begin{definicion} Sea $n \ge 1$, La \textit{función de Euler} se define
+            \begin{equation*}
+                \phi(n) := |\{x \in \mathbb N: \operatorname{mcd}(x,n) =1  \wedge  x < n \}|.
+            \end{equation*}
+            donde $|\cdot|$ significa la cardinalidad del conjunto.
+        \end{definicion}
+        \vskip .3cm 
+        El     teorema de Fermat, 2° versión, admite la siguiente generalización, llamada
+        teorema de Euler: 
+        \vskip .3cm 
+        \begin{teorema}
+            Si $n$ un entero
+            positivo y $a$ un número entero coprimo con $n$, entonces
             $$
-            \pause Por lo tanto $3(u-6)$ es múltiplo de $11$. 
-            \vskip .2cm\pause
+            a^{\phi(n)} \equiv 1\pmod{n}.
+            $$
+        \end{teorema}
+        
+        
+    \end{frame}
+    
+    \begin{frame}
+        \begin{ejemplo}
+            Usar el teorema de Fermat, 2° versión, para calcular el resto de dividir $3^{332}$ por $23$.
+        \end{ejemplo}
+        
+        \begin{solucion}
+            \vskip .3cm 
+            Como $23$ es un  número  primo (y  es coprimo con 3), por el teorema de Fermat (2º versión):
+            $$
+            3^{22} \equiv 1 \pmod{23}.
+            $$
+            Ahora bien: $332 = 22 \cdot 15 + 2$, 
+            Luego
+            \begin{equation*}
+                3^{332} \equiv  3^{22\cdot 15 + 2} \equiv  3^{22\cdot 15} 3^2\equiv  ( 3^{22})^{15} 3^2\equiv 1^{15} 3^2\equiv    3^2\equiv   9 \pmod{23}
+            \end{equation*}
+            Luego  el resto de dividir $3^{332}$ por $23$ es $9$. \qed
             
-            Como $11$ no divide a $3$ se tiene que $11|(u-6)$, o sea $u=6+11k$. \qed
-        \end{proof}
+        \end{solucion}
+    \end{frame}
+    
+    \begin{frame}\frametitle{Algoritmo RSA}
+        Dados primos distintos $p$ y $q$ suficientemente grandes tomamos $n = pq$. 
+        \begin{itemize}
+            \item[$\circ$]  Sea $e$ con $1 < e < (p-1)(q-1)$ tal que $$\operatorname{mcd}(e, (p-1)(q-1)) = 1.$$
+            \item[$\circ$]  Sea $d$ tal $0 \le d <(p-1)(q-1)$ y que $$ed \equiv 1 \pmod{(p-1)(q-1)}.$$ 
+        \end{itemize}
+        
+        \begin{proposicion} Si $0 \le m <n$, entonces
+            $$m\equiv m^{ed} \pmod{n}.$$
+        \end{proposicion} 
+        
+        
     \end{frame}
     
     
-    \begin{frame}\label{ejemplo-eq-lineal-cong}
-        \begin{ejemplo} Encontrar $0 \le x < 109$ solución  de la ecuación $74x\equiv 5 \pmod{109}$.
-        \end{ejemplo}\pause
-        \begin{solucion}\pause
+    \begin{frame}\frametitle{Algoritmo RSA - procedimiento}
+        
+        Decimos que:
+        \begin{itemize}
+            \item[$\circ$]  $(e,n)$ es la \textit{clave pública.}
+            \item[$\circ$]  $d$ es la \textit{clave privada.}
+        \end{itemize}
+        
+        \vskip .2cm    
+        $A$ le quiere enviar  un mensaje encriptado a $B$.
+        \vskip .2cm             
+        \textbf{Preliminares}
+        
+        \begin{enumerate}
+            \item[$\circ$] $A$ conoce la clave pública $(e,n)$. 
+            \item[$\circ$] $B$ conoce la clave pública y una clave privada $d$. 
+        \end{enumerate}
+        \vskip .2cm    
+        \textbf{Protocolo }
+        
+        \begin{enumerate}
+            \item[$\circ$] $A$  le quiere enviar el mensaje $m$  a $B$. 
+            \item[$\circ$] $A$ calcula $c \equiv m^e \pmod{n}$ y  le envía $c$ a $B$
+            \item[$\circ$] $B$ descifra el mensaje:  $c^d \equiv (m^e)^d \equiv m \pmod{n}$.
+        \end{enumerate}
+        
+    \end{frame}
+    
+    
+    \begin{frame}
+        
+        \begin{observacion}
+            
             
             \begin{itemize}
-                \item[$\circ$] $1 =(74,109)$, por lo tanto, existen $s,t \in \mathbb Z$ tal que
-                \begin{equation}\label{eq:elc1}
-                    1  = s \cdot 74 + t\cdot 109
-                \end{equation}
-                \vskip .2cm\pause
-                \item[$\circ$] Luego,
-                \begin{equation}\label{eq:elc2}
-                    1  \equiv  s \cdot 74\pmod{109}.
-                \end{equation} \vskip .2cm\pause
-                \item[$\circ$] Multiplicando  por $5$ la ecuación (\ref{eq:elc2}), obtenemos
-                \begin{equation}\label{eq:elc3}
-                    5 \equiv  (5s) \cdot 74 \pmod{109}.
-                \end{equation}
-                Eso  implica que $5s$ es solución de  $74x\equiv 5 \pmod{109}$.
+                \item[$\circ$]\vskip .4cm    
+                Los dos primos $p$ y $q$ deberían tener alrededor de $100$ dígitos cada uno (longitud considerada segura en este momento).
+                \item[$\circ$]\vskip .4cm    
+                El número $e$ puede elegirse pequeño y se selecciona haciendo prueba y error con el algoritmo de Euclides, es decir probando hasta encontrar un $e$ tal que $\operatorname{mcd}(e, (p-1)(q-1)) = 1$.
+                \item[$\circ$]\vskip .4cm    
+                La existencia de $d$ está garantizada por  la ecuación lineal de congruencia), pues $e$ y $(p-1)(q-1)$ son coprimos.
             \end{itemize}
             
-            
-        \end{solucion}
+        \end{observacion}
     \end{frame}
     
-    \begin{frame}
-        \frametitle{}
-    
-        Con el algoritmo de Euclides obtenemos,
-        $$
-        1 =  28 \cdot  74 + (-19) \cdot 109.
-        $$
+    \begin{frame}\frametitle{Consideraciones finales sobre el algoritmo RSA}
 
-        Por lo anterior, $5 \cdot 28 = 140$ es solución de la ecuación, es decir,
-        $$
-        74 \cdot 140  \equiv 5 \pmod{109}.
-        $$
-
-        Pero $140>109$. Pero  $31 = 140 -109$ también  es solución, pues \linebreak $109 \equiv 0\pmod{109}$. 
-        \vskip .3cm
-        Luego la solución es $x = 31$, pues
-        $$74 \cdot 31  \equiv 5 \pmod{109}. \qquad \text{y} \qquad0 \le 31 < 109.$$
-
-        \qed
-
+        Hay dos ``obstrucciones'' para una implementación del algoritmo RSA:
         
-    
+        \vskip .4cm 
+            \begin{enumerate}
+                \item ¿Cómo calcular un número elevado a una potencia de más de 200 dígitos? Hay dos problemas 
+                \begin{enumerate}
+                    \item[(a)] La cantidad de multiplicaciones necesarias va más allá de $2^{200}$, imposibles de realizar.
+                    \item[(b)] Los números se tornan tan grandes que no entrarían en ninguna memoria.
+                \end{enumerate}
+                
+                \item   
+                ¿Cómo saber si un número de más de 100 dígitos es primo o no?\\
+                No  es posible conocer los divisores  de un número de ese tamaño.
+            \end{enumerate}
+
     \end{frame}
 
-    \begin{comment}
-    \begin{frame}
-        Obtengamos entonces la ecuación (\ref{eq:elc1}).\pause
-        \begin{alignat}3
-            109 &= 74 \cdot 1 + 35& \qquad&\Rightarrow& \qquad 35 &= 109 - 74 \label{eq:cle1}\\ 
-            74 &=  35\cdot 2 +4 & \qquad&\Rightarrow& \qquad 4 &= 74 - 35\cdot 2 \label{eq:cle2}\qquad\\
-            35 &= 4 \cdot 8 + 3& \qquad&\Rightarrow& \qquad  3 &= 35 - 4 \cdot 8 \label{eq:cle3}  \\
-            4 &=  3\cdot 1 + 1& \qquad&\Rightarrow& \qquad 1 &= 4 - 3\label{eq:cle4}\\
-            3 &=  1\cdot 3  +0 & \qquad&& \qquad  &
-        \end{alignat}
-        \pause    Luego,\pause
-        \begin{align*}
-            1 & \overset{(\ref{eq:cle4})}{=} 4 -3 \overset{(\ref{eq:cle3})}{=} 4 - ( 35 - 4 \cdot 8) \\
-            &=  9 \cdot 4 - 35 \\
-            & \overset{(\ref{eq:cle2})}{=} 9 \cdot (74 - 35\cdot 2) - 35  = 9 \cdot  74 + (-18) \cdot 35 - 35 \\
-            &= 9 \cdot  74 + (-19) \cdot 35 \\
-            & \overset{(\ref{eq:cle1})}{=}  9 \cdot  74 + (-19) \cdot (109 - 74) \\ %= 9 \cdot  74 + (-19) \cdot 109 + 19 \cdot 74 \\
-            &= 28 \cdot  74 + (-19) \cdot 109 .
-        \end{align*}
-    \end{frame}
+    \begin{frame}\frametitle{Consideraciones finales sobre el algoritmo RSA}
 
-    
-    \begin{frame}
-        Recordemos que debemos resolver la ecuación
-        \begin{equation*}
-            74x\equiv 5 \pmod{109}.
-        \end{equation*}
-        \pause Como 
-        \begin{equation*}
-            1 = 28 \cdot  74 + (-19) \cdot 109,
-        \end{equation*}
-        \pause tenemos
-        \begin{equation*}
-            1  \equiv 28 \cdot  74\pmod{109}.
-        \end{equation*}
-        \pause Por lo tanto, 
-        \begin{equation*}
-            5 \equiv (5 \cdot28)  74\pmod{109}.
-        \end{equation*}
-        \vskip .3cm
-        \pause Es decir, $140$ es solución y $31 = 140 -109$ también lo es, pues \linebreak $109 \equiv 0\pmod{109}$. 
-        \vskip .3cm
-        Luego 
-        $$5 \equiv 31 \cdot  74\pmod{109} \qquad \text{y} \qquad0 \le 31 < 109.\qed $$
-    \end{frame}
-\end{comment}
-    
-    \begin{frame}
-        Analicemos ahora la situación general de la ecuación $ ax\equiv b\pmod{m}$. 
-        \vskip .3cm 
-        \begin{teorema}\label{elc} Sean $a,b$ números enteros y $m$ un entero positivo y denotemos $d =\operatorname{mcd}(a,m)$. La  ecuación 
-            \begin{equation}\label{elc}
-                ax \equiv b \pmod{m}
-            \end{equation}
-            admite solución si y sólo si $d|b$, y en este caso dada $x_0$ una solución, todas las soluciones son de la forma 
-            $$x = x_0 + k n,\qquad \mbox{ con } k \in \mathbb Z \mbox{ y } n = {\frac{m}{d}} $$
-        \end{teorema}
-    \end{frame}
-    
-    
-    \begin{frame}
-        \begin{proof}
-            ($\Leftarrow$) Muy  similar al ejemplo anterior (p. {\color{blue}\ref{ejemplo-eq-lineal-cong}}). \pause Como 
-            \begin{equation*}
-                d = s \cdot  a +t \cdot m,\qquad \text{para algunos $s,t \in \mathbb Z$,}
-            \end{equation*}
-            \pause tenemos
-            \begin{equation*}
-                d  \equiv s \cdot  a\pmod{m}.
-            \end{equation*}
-            \pause Como  $d|b$, tenemos $b = d q$. Por lo tanto, 
-            \begin{equation*}
-                b = d q \equiv qs \cdot  a\pmod{m}.
-            \end{equation*}
-            Es decir 
-            \begin{equation*}
-                a(qs)  \equiv b\pmod{m}.
-            \end{equation*}
-            \vskip .3cm
-            \pause Es decir, $x_0 = qs$ es solución de $ax \equiv b \pmod{m}$. 
-        \end{proof}
-    \end{frame}
-    
-    
-    \begin{frame}
-        Veamos ahora que si $n = {\frac{m}{d}}$ y $k \in \mathbb Z$, entonces $x_0 + kn$ también es solución.
-        \vskip .3cm
-        Es decir
-        \begin{equation*}
-            a(x_0 + kn) \equiv b \pmod{m}.
-        \end{equation*} \pause
-        
-        Como $d|a$ $\Rightarrow$ $a = dr$, luego $akn = dr\frac{m}{d} = rm \equiv 0 \pmod{m}$. 
-        \vskip .3cm\pause
-        Luego
-        $$
-        a(x_0 + kn) \equiv     ax_0 + akn \equiv    ax_0 \equiv b \pmod{m}.
-        $$
-        \vskip .6cm\pause
-        ($\Rightarrow$) Ver apunte. 
+        El problema (1) es fácil de resolver, se usa la técnica llamada \textit{exponenciación modular},  explicada en el apunte, capítulo 4, sección 5.
+        \begin{itemize}
+            \item La idea para (1)(a) es usar la propiedad siguiente: si $m = 2q +r$, entonces 
+            $$
+            a^m = (a^q)^2 a^r
+            $$
+            y definir recursivamente la potencia.
+            \item La idea para (1)(b) es usar la idea de (1)(a) y en cada paso reducir módulo $n$. Es decir,  utilizar la propiedad
+            $$
+            a^m \equiv (a^q)^2 a^r \equiv s\pmod{n}
+            $$
+            con $0 \le s < n$.
+        \end{itemize}
+
+        \vskip .4 cm
+
         
     \end{frame}
     
-    \begin{comment}
-    \begin{frame}
-        \begin{proposicion}
-            Sean $a$, $b$, $m \in {\mathbb Z}$, $d>0$ tales que  \,$d\mid a$,\,  \,$d\mid b$\, y \,$d\mid m$. Entonces, 
-            \begin{equation*}
-                ax \equiv b\,({m}) \quad \Leftrightarrow\quad\frac{a}{d} x \equiv \frac{b}{d}\,\left(\frac{m}{d}\right).
-            \end{equation*}
-            \vskip -.4cm
-        \end{proposicion} \pause
-        \begin{proof} \pause
-            \vskip -.8cm
-            \begin{align*}
-                a x \equiv b\,({m}) &\Leftrightarrow m| ax -b \\&\Leftrightarrow  a x -b = m \cdot q   \\
-                &\Leftrightarrow \frac{a}{d} x -\frac{b}{d} =\frac{m}{d}\cdot q   \\
-                &\Leftrightarrow \frac{a}{d} x \equiv \frac{b}{d}\,\left(\frac{m}{d}\right)\qquad  
-            \end{align*}
-            \qed
-        \end{proof}
-        La proposición anterior nos permite reducir las ecuaciones al caso $    ax \equiv b\,({m})$ con $(a,m)=1$. \pause
+    \begin{frame}\frametitle{Consideraciones finales sobre el algoritmo RSA}
+
+        El  problema (2) es más complicado y se usa el llamado el test de primalidad de Miller-Rabin probabilístico. 
+        
+        \vskip .4 cm
+        
+        En  el apunte, capítulo 4, sección 6 se explica en que consiste este test.
+
+        \vskip 4 cm
     \end{frame}
-\end{comment}
-    
-    \begin{frame}
-    
-        
-        \vskip .4cm
-        
-        \begin{ejemplo}
-            Encontrar todos los $x \in \mathbb Z$ tales que
-            \begin{equation}
-                6x \equiv 18 \pmod{21}. \tag{*}
-            \end{equation}
-        \end{ejemplo} \pause \vskip -.6cm
-        \begin{solucion} \pause
-            Como $3 =(6,21)$ y $3|18$, la ecuación (*) tiene solución. 
-            
-            Por otro lado, por el algoritmo de Euclides,
-            \begin{equation*}
-                \begin{matrix*}
-                    3 &=& (-3)\cdot 6 + 1\cdot 21& && \Longrightarrow \\
-                    3 &\equiv& (-3)\cdot 6 &\pmod{21}& & \stackrel{\text{multiplicando por $6$}}{\Longrightarrow} \\
-                    18 &\equiv& (-18)\cdot 6 &\pmod{21}& & {\Longrightarrow} \\
-                    6 \cdot (-18 ) &\equiv& 18 &\pmod{21}& &.
-                \end{matrix*}
-            \end{equation*}
-        
-            Es decir $x_0 = -18$  es solución de la ecuación (*) y todas las soluciones son $-18 + k\cdot(\frac{21}{3})$, $k \in \mathbb Z$.\qed
-        \end{solucion}
-    \end{frame}
-    
-    
     
 \end{document}
 
