--- a/2023-1/beamer/C19_md1.tex
+++ b/2023-1/beamer/C19_md1.tex
@@ -44,7 +44,6 @@
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
-
 \setbeamertemplate{itemize item}{$\circ$}
 \setbeamertemplate{enumerate items}[default]
 \definecolor{links}{HTML}{2A1B81}
@@ -83,7 +82,7 @@
 
 \nc{\ba}{\mathbf{a}} \nc{\bb}{\mathbf{b}} \nc{\bt}{\mathbf{t}}
 \nc{\bB}{\mathbf{B}}
-
+ 
 \nc{\cP}{\mathcal{P}} \nc{\cU}{\mathcal{U}} \nc{\cX}{\mathcal{X}}
 \nc{\cE}{\mathcal{E}} \nc{\cS}{\mathcal{S}} \nc{\cA}{\mathcal{A}}
 \nc{\cC}{\mathcal{C}} \nc{\cO}{\mathcal{O}} \nc{\cQ}{\mathcal{Q}}
@@ -96,13 +95,13 @@
 
 
 
-\title[Clase 19 - Isomorfismo de grafos]{Matemática Discreta I \\ Clase 19 -  Isomorfismo de grafos / Valencias}
+\title[Clase 20 - Isomorfismo / Caminatas, caminos y ciclos]{Matemática Discreta I \\ Clase 20 -  Isomorfismo / Caminatas, caminos y ciclos}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[01/06/2023]{1 de junio de 2023}
+\date[06/06/2023]{6 de junio de 2023}
 
 
 
@@ -112,285 +111,32 @@
     \frame{\titlepage} 
     
     
-    \begin{frame}\frametitle{Isomorfismo de grafos}
-        ¿Cuándo debemos considerar a dos grafos ``iguales''?
-        \vskip .4cm\pause
-        \begin{itemize}
-            \item[$\circ$] No importa el  nombre de los vértices. 
-            \vskip .2cm\pause
-            \item[$\circ$] Un grafo se puede dibujar de muchas maneras.
-            \vskip .2cm\pause
-            \item[$\circ$]  La propiedad característica de un grafo es la manera en que los vértices están conectados por aristas. 
-        \end{itemize}
-        \vskip .4cm\pause
-        Dicho en forma directa: vamos a considerar que dos grafos $G_1$ y $G_2$ son ``iguales'' si  cambiando  el nombre de los vértices de $G_2$  por el de los vértices de $G_1$,  en cierto orden, obtenemos $G_1$.  
-        
-    \end{frame}
+    
     
     \begin{frame}
-        \begin{ejemplo} Tenemos dos grafos:
-            \begin{figure}[ht]
-                \begin{center}
-                    \begin{tabular}{llll}
-                        &
-                        \begin{tikzpicture}[scale=1]
-                            %\SetVertexSimple[Shape=circle,FillColor=white]
-                            \Vertex[x=0,y=0]{$a$}
-                            \Vertex[x=2,y=0]{$b$}
-                            \Vertex[x=2,y=-2]{$c$}
-                            \Vertex[x=0,y=-2]{$d$}
-                            \Edges($a$, $b$,$c$,$d$,$a$,$b$,$d$)
-                            \draw (1,-3) node {$G_1$};
-                        \end{tikzpicture}
-                        &
-                        \qquad
-                        & 
-                        \begin{tikzpicture}[scale=1]
-                            %\SetVertexSimple[Shape=circle,FillColor=white]
-                            \Vertex[x=1,y=0]{$t$}
-                            \Vertex[x=1,y=-1.3]{$w$}
-                            \Vertex[x=2,y=-2]{$v$}
-                            \Vertex[x=0,y=-2]{$u$}
-                            \Edges($v$, $t$,$u$,$v$,$w$,$u$)
-                            \draw (1,-3) node {$G_2$};
-                        \end{tikzpicture}
-                    \end{tabular}
-                \end{center}
-            \end{figure}\pause
-            Parecen ser distintos. 
-        \end{ejemplo}
-    \end{frame}
-    
-    \begin{frame}
-        Sin embargo, si dibujamos $G_2$ diferente (``dando vuelta $w$ alrededor del eje $uv$'' y  rotando), obtenemos: \pause
+        Una aplicación importante de la noción de valencia es en el problema de determinar si dos grafos son o no isomorfos. \pause
         
-        \begin{figure}[ht]
-            \begin{center}
-                \begin{tabular}{llll}
-                    &
-                    \begin{tikzpicture}[scale=1]
-                        %\SetVertexSimple[Shape=circle,FillColor=white]
-                        \Vertex[x=0,y=0]{$a$}
-                        \Vertex[x=2,y=0]{$b$}
-                        \Vertex[x=2,y=-2]{$c$}
-                        \Vertex[x=0,y=-2]{$d$}
-                        \Edges($a$, $b$,$c$,$d$,$a$,$b$,$d$)
-                        \draw (1,-3) node {$G_1$};
-                    \end{tikzpicture}
-                    &
-                    \qquad
-                    & 
-                    \begin{tikzpicture}[scale=1]
-                        %\SetVertexSimple[Shape=circle,FillColor=white]
-                        \Vertex[x=0,y=0]{$t$}
-                        \Vertex[x=2,y=0]{$v$}
-                        \Vertex[x=2,y=-2]{$w$}
-                        \Vertex[x=0,y=-2]{$u$}
-                        \Edges($v$, $t$,$u$,$v$,$w$,$u$)
-                        \draw (1,-3) node {$G_2$};
-                    \end{tikzpicture}
-                \end{tabular}
-            \end{center}
-        \end{figure}
-        Los cuales claramente describen el mismo grafo, pero  con los nombres de los vértices cambiados. 
-    \end{frame}
-    
-    \begin{frame}\frametitle{Isomorfismo de grafos: preliminares}
-        
-        \begin{definicion}
-            Dado  dos conjuntos $X,Y$ diremos que una aplicación $f: X \to Y$ es {\em biyectiva} si para cada $y \in Y$ existe un  único $x \in X$ tal que $f(x) =y$. 
-        \end{definicion}
-        \pause
-
         \vskip .6cm
-        Un propiedad importante, de las funciones biyectivas es:
-        \vskip .4cm
-        \begin{teorema}
-            $f$ es biyectiva si y sólo sí  $f$ tiene {\em inversa}, es decir existe $f^{-1}: Y \to X$, tal que 
-            $$f(f^{-1}(y)) = y\;\;\forall \,y \in Y \quad \wedge \quad f^{-1}(f(x)) = x, \;\;\forall \,x \in X.$$
-        \end{teorema}
-    \end{frame}
-    
-    \begin{frame}
-
-    
-        \begin{ejemplo}
-            La función  
-            \begin{align*}
-                f&: \{1,2,3\}\to\{a,b,c\} \quad \text{definida } f(1) = c, f(2) = b, f(3) = a
-            \end{align*}
-            es biyectiva y su  inversa es 
-            $$
-            f^{-1}(a) = 3,\;f^{-1}(b) = 2,\;f^{-1}(c) =1.
-            $$
-        \end{ejemplo}
-
-        \vskip 2cm
-    \end{frame}
-    
-    \begin{frame}\frametitle{Isomorfismos de grafos: definición}
-        \begin{definicion} Dos grafos $G_1$ y $G_2$ se dicen que
-            son {\em isomorfos} cuando  existe una biyección $\alpha$ entre el
-            conjunto de vértices de $G_1$ y el conjunto de vértices de
-            $G_2$ tal que  
-            
-            \begin{itemize}\pause
-                \item[$\circ$] si $\{x,y\}$ es una arista de $G_1$ entonces $\{\alpha(x),\alpha(y)\}$ es una arista de $G_2$ \pause y, recíprocamente,
-                \item[$\circ$]si  $\{z,w\}$ es una arista de $G_2$ entonces $\{\alpha^{-1}(z),\alpha^{-1}(w)\}$ es una arista de $G_1$. 
-            \end{itemize} \pause
-            \vskip .3cm
-            Equivalentemente, diremos que $\alpha$    es un {\em isomorfismo} si es una biyección entre el     conjunto de vértices de $G_1$ y el conjunto de vértices de
-            $G_2$ tal que por cada $\{z,w\}$  arista de $G_2$,  existe una y solo una $\{x,y\}$  arista de $G_1$ tal que $\{\alpha(x),\alpha(y)\}  = \{z,w\}$.
-            
-        \end{definicion}
-    \end{frame}
-    
-    \begin{frame}
-        \begin{ejemplo}
-            \begin{figure}[ht]
-                \begin{center}
-                    \begin{tabular}{llll}
-                        &
-                        \begin{tikzpicture}[scale=1]
-                            %\SetVertexSimple[Shape=circle,FillColor=white]
-                            \Vertex[x=0,y=0]{$a$}
-                            \Vertex[x=2,y=0]{$b$}
-                            \Vertex[x=2,y=-2]{$c$}
-                            \Vertex[x=0,y=-2]{$d$}
-                            \Edges($a$, $b$,$c$,$d$,$a$,$b$,$d$)
-                            \draw (1,-3) node {$G_1$};
-                        \end{tikzpicture}
-                        &
-                        \qquad
-                        & 
-                        \begin{tikzpicture}[scale=1]
-                            %\SetVertexSimple[Shape=circle,FillColor=white]
-                            \Vertex[x=1,y=0]{$t$}
-                            \Vertex[x=1,y=-1.3]{$w$}
-                            \Vertex[x=2,y=-2]{$v$}
-                            \Vertex[x=0,y=-2]{$u$}
-                            \Edges($v$, $t$,$u$,$v$,$w$,$u$)
-                            \draw (1,-3) node {$G_2$};
-                        \end{tikzpicture}
-                    \end{tabular}
-                \end{center}
-                \caption{$G_1$ y $G_2$ son isomorfos} \label{f5.3}
-            \end{figure}
-            
-            
-            Una biyección es dada por
-            $$
-            \alpha(a)=t,\quad \alpha(b)=v,\quad \alpha(c)=w,\quad \alpha(d)=u.
-            $$
-            Podemos comprobar que a cada arista de $G_1$ le corresponde una
-            arista de $G_2$ y vi\-ce\-ver\-sa.
-        \end{ejemplo}
-    \end{frame}
-    
-    \begin{frame}
-        \begin{itemize}
-            \item Para mostrar que dos grafos no son isomorfos, nosotros debemos
-            demostrar que no hay una biyección entre el conjunto de vértices
-            de uno con el conjunto de vértices de otro, que lleve las aristas
-            de uno en las aristas del otro.\pause
-            \item     Si dos grafos tienen diferente número de vértices, entonces no es
-            posible ninguna biyección, y los grafos no pueden ser isomorfos.\pause
-            \item Si los grafos tienen el mismo número de vértices, pero di\-fe\-ren\-te
-            número de aristas, entonces hay biyecciones de vértices  pero ninguna de ellas
-            puede ser un isomorfismo. 
-        \end{itemize}
+        
+        Si     $\alpha:V_1 \to  V_2$ es un isomorfismo entre $G_1$ y $G_2$, y $\alpha(v)=w$, entonces cada arista que contiene a $v$ se transforma en una arista que contiene a $w$. \pause
+        
+        \vskip .6cm
+        
+        En consecuencia $\delta(v)=\delta(w)$. Por otro lado, si $G_1$ tiene un vértice $x$, con valencia $\delta(x)=\delta_0$, y $G_2$ no tiene vértices    con valencia $\delta_0$, entonces $G_1$ y $G_2$ no pueden ser    isomorfos. 
         
         
         
         
         
-    \end{frame}
-    
-    \begin{frame}
         
-        
-        
-        \begin{definicion} 
-            
-            Sea $G=(V,E)$ un grafo. Se dice que $G^{\prime}=(V^{\prime},E^{\prime})$ es {\em subgrafo} de $G=(V,E)$ si 
-            \vskip .2cm
-            (1)  $G^{\prime}$  es un grafo,\quad  y \quad (2)     $V^{\prime} \subset V$, $E^{\prime} \subset E$.
-            
-        \end{definicion}
-        \pause \vskip .4cm
-        Algunos subgrafos de 
-        \begin{figure}[ht]
-            \begin{center}
-                \begin{tikzpicture}[scale=0.4]
-                    \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-                    \Vertex[x=0.00, y=2.00]{$a$}
-                    \Vertex[x=1.90, y=0.62]{$b$}
-                    \Vertex[x=1.18, y=-1.62]{$c$}
-                    \Vertex[x=-1.18, y=-1.62]{$d$}
-                    \Vertex[x=-1.90, y=0.62]{$e$}
-                    \Edges($c$, $b$,$a$,$e$,$d$,$b$,$a$,$d$)
-                    \Edges($e$,$b$)
-                \end{tikzpicture}
-            \end{center}
-        \end{figure}
-        son:    
-        \begin{figure}[ht]
-            \begin{center}
-                \begin{tabular}{llllllll}
-                    &
-                    \begin{tikzpicture}[scale=0.4]
-                        \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-                        \Vertex[x=0.00, y=2.00]{$a$}
-                        \Vertex[x=1.90, y=0.62]{$b$}
-                        \Vertex[x=-1.18, y=-1.62]{$d$}
-                        \Edges($a$,$b$,$d$,$a$)
-                    \end{tikzpicture}
-                    &
-                    \qquad
-                    & 
-                    \begin{tikzpicture}[scale=0.4]
-                        \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-                        \Vertex[x=0.00, y=2.00]{$a$}
-                        \Vertex[x=1.90, y=0.62]{$b$}
-                        \Vertex[x=-1.18, y=-1.62]{$d$}
-                        \Vertex[x=-1.90, y=0.62]{$e$}
-                        \Edges($a$,$e$,$b$,$a$)
-                    \end{tikzpicture}
-                    &
-                    \qquad
-                    &
-                    \begin{tikzpicture}[scale=0.4]
-                        \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-                        \Vertex[x=0.00, y=2.00]{$a$}
-                        \Vertex[x=1.90, y=0.62]{$b$}
-                        \Vertex[x=1.18, y=-1.62]{$c$}
-                        \Vertex[x=-1.18, y=-1.62]{$d$}
-                        \Vertex[x=-1.90, y=0.62]{$e$}
-                        \Edges($a$,$e$,$b$)
-                    \end{tikzpicture}
-                    &
-                    \qquad
-                    &
-                    \begin{tikzpicture}[scale=0.4]
-                        \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-                        \Vertex[x=0.00, y=2.00]{$a$}
-                        \Vertex[x=1.90, y=0.62]{$b$}
-                        \Vertex[x=-1.18, y=-1.62]{$d$}
-                        \Vertex[x=-1.90, y=0.62]{$e$}
-                        \Edges( $b$,$a$,$e$,$d$,$b$,$a$,$d$)
-                        \Edges($e$,$b$)
-                    \end{tikzpicture}
-                \end{tabular}
-            \end{center}
-        \end{figure}
         
         
     \end{frame}
     
     
     \begin{frame}
+        Esto nos da otra manera de ver que no son isomorfos los siguientes grafos:
         
-        Es claro, pero  no lo demostraremos aquí, que un isomorfismo lleva un subgrafo a un subgrafo isomorfo. Este resultado es una herramienta que puede ser útil para ver si dos grafos no son isomorfos. \pause
         \vskip .5cm
         \begin{figure}[ht]
             \begin{center}
@@ -405,7 +151,6 @@
                         \Vertex[x=-1.90, y=0.62]{$e$}
                         \Edges($c$, $b$,$a$,$e$,$d$,$b$,$a$,$d$)
                         \Edges($e$,$b$)
-                        \draw (0,-2.2) node {$G_1$};
                     \end{tikzpicture}
                     &
                     \qquad
@@ -419,159 +164,472 @@
                         \Vertex[x=-1.90, y=0.62]{5}
                         \Edges(1,2,3,4,5,1)
                         \Edges(4,2,5)
-                        \draw (0,-2.2) node {$G_2$};
                     \end{tikzpicture}
                 \end{tabular}
             \end{center}
-            \caption{$G_1$ y $G_2$ no son isomorfos pues $K_4 \subset G_1$ y $K_4 \not\subset G_2$}
         \end{figure}
-        
+        \vskip .4cm
+        Puesto que el primer grafo tiene un vértice de
+        valencia 1 y el segundo no.
     \end{frame}
     
     
-    
-    \begin{frame}\frametitle{Valencias}
-        La {\em {valencia}} de un vértice $v$ en un grafo $G=(V,E)$ es el
-        \index{valencia de un vértice} número de aristas de $G$ que contienen a $v$.
-        Usaremos la notación $\delta(v)$ para la valencia de $v$,
-        formalmente
-        $$
-        \delta(v)=|D_v|, \quad \text{ donde } \quad D_v=\{e \in E| v\in
-        e\}.
-        $$
+    \begin{frame}
+        Una extensión de esta idea se da en la siguiente proposición.\pause
         
+        \vskip .4cm
+        \begin{proposicion}\label{criterioiso}Sean  $G_1$ y $G_2$ grafos isomorfos. Para cada $k\ge 0$ sea $n_i(k)$ el
+            número de vértices de $G_i$ que tienen valencia $k$ ($i=1,2$).
+            Entonces $n_1(k)=n_2(k)$.
+        \end{proposicion}\pause
+        \vskip .4cm
+        \begin{proof}\pause  Hemos visto más arriba que si $\alpha:V_1 \to  V_2$ es un isomorfismo entre $G_1$ y $G_2$ y $v\in V_1$, entonces $\delta(v)=\delta(\alpha(v))$. Luego la cantidad de vértices con valencia $k$ en $G_1$ es igual  a la cantidad de vértices con valencia $k$ en $G_2$.  
+            
+            \qed
+        \end{proof}
+    \end{frame}
+    
+    \begin{frame}
+        
+        
+        No hay ningún criterio general eficiente para determinar si dos grafos son isomorfos o no. En  el siguiente ejemplo, no se aplica el criterio anterior. \pause
+        
+        \vskip .4cm
         \begin{ejemplo}
+            Probar que los siguientes grafos no son isomorfos.
+            
             \begin{figure}[ht]
                 \begin{center}
                     \begin{tabular}{llll}
-                        &\begin{tikzpicture}[scale=0.8]
-                            %\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-                            \Vertex[x=0.00, y=2.00,L=$3$]{$a$}
-                            \Vertex[x=1.90, y=0.62,L=$4$]{$b$}
-                            \Vertex[x=1.18, y=-1.62,L=$1$]{$c$}
-                            \Vertex[x=-1.18, y=-1.62,L=$3$]{$d$}
-                            \Vertex[x=-1.90, y=0.62,L=$3$]{$e$}
-                            \Edges($c$, $b$,$a$,$e$,$d$,$b$,$a$,$d$)
-                            \Edges($e$,$b$)
+                        &
+                        \begin{tikzpicture}[scale=1]
+                            \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+                            \Vertex[x=0.00, y=2.00]{a}
+                            \Vertex[x=2., y=-1.50]{b}
+                            \Vertex[x=-2., y=-1.50]{c}
+                            \Edges(a,b,c,a)
+                            \Vertex[x=0.00, y=0.85]{1}
+                            \Vertex[x=1., y=-0.9]{2}
+                            \Vertex[x=-1., y=-0.9]{3}
+                            \Edges(1,2,3,1)
+                            \Edges(a,1,3,c,b,2)
+                            \draw (0,-2.2) node {$G_1$};
                         \end{tikzpicture}
                         &
-                        \qquad    \qquad
+                        \qquad
                         & 
-                        \begin{tikzpicture}[scale=0.55]
-                            %\SetVertexSimple[Shape=circle,FillColor=white]
+                        \begin{tikzpicture}[scale=0.65]
+                            \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
                             %                
-                            \Vertex[x=3.00, y=0.00, L=$1$]{$v_3$}
-                            \Vertex[x=1.50, y=2.60, L=$0$]{$v_2$}
-                            \Vertex[x=-1.50, y=2.60, L=$2$]{$v_1$}
-                            \Vertex[x=-3.00, y=0.00, L=$2$]{$v_6$}
-                            \Vertex[x=-1.50, y=-2.60, L=$3$]{$v_5$}
-                            \Vertex[x=1.50, y=-2.60, L=$2$]{$v_4$}
-                            \Edges($v_1$,$v_6$, $v_5$,$v_4$,$v_1$)
-                            \Edges($v_3$,$v_5$)
+                            \Vertex[x=3.00, y=0.00]{1}
+                            \Vertex[x=1.50, y=2.60]{2}
+                            \Vertex[x=-1.50, y=2.60]{3}
+                            \Vertex[x=-3.00, y=0.00]{4}
+                            \Vertex[x=-1.50, y=-2.60]{5}
+                            \Vertex[x=1.50, y=-2.60]{6}
+                            \Edges(1,2,3,4,5,6,1)
+                            \Edges(1,4) \Edges(3,6) \Edges(2,5)
+                            \draw (0,-3.8) node {$G_2$};
                         \end{tikzpicture}
                     \end{tabular}
                 \end{center}
             \end{figure}
         \end{ejemplo}
+        
+        
+    \end{frame}
+    
+    
+    
+    \begin{frame}
+        \begin{solucion}\pause
+            Ambos tienen $6$ vértices, $9$ aristas y todos los vértices son de valencia $3$. 
+            \pause
+            \vskip.2cm
+            Por lo tanto no podemos utilizar los criterios anteriores para decir que no son isomorfos.
+            \pause 
+            \vskip .2cm
+            
+            Sin embargo, observar que  $G_1$ tiene un subgrafo $K_3$:
+            \vskip .2cm
+            \begin{center}
+                \begin{tikzpicture}[scale=0.6]
+                    \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+                    \Vertex[x=0.00, y=2.00]{a}
+                    \Vertex[x=2., y=-1.50]{b}
+                    \Vertex[x=-2., y=-1.50]{c}
+                    \Edges(a,b,c,a)
+                \end{tikzpicture}
+            \end{center}\pause
+            \vskip .4cm
+            Mientras que $G_2$ no lo tiene. Por lo tanto, $G_1$ y $G_2$ no son isomorfos.
+            
+            \qed
+        \end{solucion}
+    \end{frame}
+    
+    \begin{frame}\frametitle{Caminatas, caminos y ciclos}
+        \begin{definicion}  Una {\em caminata} en un grafo $G$ es  \index{caminata}
+            una secuencia de vértices
+            $$
+            v_1,v_2,\ldots,v_k,
+            $$
+            tal que $v_i$ y $v_{i+1}$ son adyacentes ($1 \le i \le k-1$). \pause
+            
+            \vskip .4cm
+            Si todos los vértices son distintos, una caminata es llamada un {\em  camino}.\pause
+            
+            \vskip .4cm
+            
+            Un \textit{recorrido} es una caminata donde todas las aristas $\{v_i,v_{i+1}\}$ con $1 \le i \le k-1$ son distintas.  
+
+            \vskip .4cm
+
+            Un {\em ciclo} a una caminata $v_1,v_2,\ldots,v_{k}, v_1$ con $v_1,v_2,\ldots,v_{k}$ camino y $k \ge 3$. A menudo diremos que es un {\em
+                $k$-ciclo}, o un ciclo de {\em longitud} $k$ en $G$.
+        \end{definicion}\pause
+
+    
+        
+    \end{frame}
+
+
+    \begin{frame}
+        
+        \begin{observacion}
+            \begin{itemize}
+                \item Por definición de caminata $k\ge2$, es decir una caminata tiene al menos una arista ($\{v_1, v_2\}$).
+                \item Por definición de ciclo  $v_1,v_2,\ldots,v_{k}, v_1$, $k \ge 3$; un ciclo tiene al menos 3 aristas (claramente, no hay 2-ciclos.). 
+            \end{itemize}
+
+        \end{observacion}
+    
+        \vskip 3cm
+    
     \end{frame}
     
     \begin{frame}
-        En una lista de adyacencia la valencia de un vértice es exactamente la cantidad de elementos que tiene la columna correspondiente al vértice.
-        
         \begin{ejemplo}
-            Vimos el $G=(V,E)$ es dado por
-            \begin{equation*}\label{grafosimple}
-                V=\{a,b,c,d,z\}, \qquad\quad
-                E=\{\{a,b\},\{a,d\},\{b,z\},\{c,d\},\{d,z\}\}.
-            \end{equation*}
-            \pause    
-            Su lista de adyacencia es 
+            Dibujemos caminatas, caminos, recorridos y ciclos en el siguiente grafo:
+            \vskip .4cm
             
             \begin{center}
-                \begin{tabular}{ccccc}
-                    $a$&$b$&$c$&$d$&$z$ \\ \hline
-                    $b$&$a$&$d$&$a$&$b$ \\
-                    $d$&$z$&&$c$&$d$\\
-                    &&&$z$&
-                \end{tabular}
+                \begin{tikzpicture}[scale=1]
+                    \def\rvar{1.2}
+                    \Vertex[x=0.00, y=-2.00]{u}
+                    \Vertex[x=\rvar*1.90, y=-0.62]{t}
+                    \Vertex[x=\rvar*1.18, y=1.62]{q}
+                    \Vertex[x=-1.18*\rvar, y=1.62]{p}
+                    \Vertex[x=-1.90*\rvar, y=-0.62]{r}
+                    \Vertex[x=0, y=0]{s}
+                    \Edge(u)(t)
+                    \Edges(t,q,p)
+                    \Edges(r,u)
+                    \Edges(s,t)
+                    \Edges(r,s,q,r)
+                    \Edges(p,t,s)
+                    \Edges(s,p)
+                    
+                    %\Edge[label=1](u)(t)
+                \end{tikzpicture}
             \end{center}
-            \pause    
-            Luego $\delta(a)=2$, $\delta(b)=2$, $\delta(c)=1$, $\delta(d)=3$, $\delta(z)=2$.
             
         \end{ejemplo}
     \end{frame}
+
     
     \begin{frame}
         
+        Caminata: p,q,t,s,q,r,u,r
         
-        
-        \begin{teorema}\label{t5.3} La suma de los valores de las valencias
-            $\delta(v)$, tomados sobre todos los vértices $v$ del grafo
-            $G=(V,E)$, es igual a dos veces el número de aristas:
-            $$
-            \sum_{v \in V} \delta(v) = 2|E|.
-            $$
-        \end{teorema}\vskip -.6cm\pause
-        \begin{proof} La valencia de un vértice $v$ indica la cantidad de
-            ``extremos'' de aristas que ``tocan'' a $v$. Es claro que hay
-            $2|E|$ extremos de aristas, luego la suma total de las valencias
-            de los vértices es $2|E|$.
+        \begin{figure}[ht]
+            \begin{center}
+                \begin{tikzpicture}[scale=1]
+                    %\SetVertexSimple[Shape=circle,FillColor=white]
+                    \def\rvar{1.2}
+                    \Vertex[x=0.00, y=-2.00]{u}
+                    \Vertex[x=\rvar*1.90, y=-0.62]{t}
+                    \Vertex[x=\rvar*1.18, y=1.62]{q}
+                    \Vertex[x=-1.18*\rvar, y=1.62]{p}
+                    \Vertex[x=-1.90*\rvar, y=-0.62]{r}
+                    \Vertex[x=0, y=0]{s}
+                    \Edges(u,t,q,p)
+                    \Edges(r,u)
+                    \Edges(s,t)
+                    \Edges(r,s,q,r)
+                    \Edges(p,t,s)
+                    \tikzset{EdgeStyle/.style = {->,color=blue}}
+                    %\tikzset{EdgeStyle/.append style = {bend left,->,color=blue}}
+                    \Edge[label=1](p)(q)
+                    \Edge[label=2](q)(t)
+                    \Edge[label=3](t)(s)
+                    \Edge[label=4](s)(q)
+                    \Edge[label=5](q)(r)
+                    \Edge[label=6](r)(u)
+                    \Edge[label=7,style={bend left}](u)(r)
+                \end{tikzpicture}
+            \end{center}
+        \end{figure}
+    \end{frame}
 
-            \qed
+    \begin{frame}
+        
+        Recorrido: p,q,t,s,q,r,u
+        
+        \begin{figure}[ht]
+            \begin{center}
+                \begin{tikzpicture}[scale=1]
+                    %\SetVertexSimple[Shape=circle,FillColor=white]
+                    \def\rvar{1.2}
+                    \Vertex[x=0.00, y=-2.00]{u}
+                    \Vertex[x=\rvar*1.90, y=-0.62]{t}
+                    \Vertex[x=\rvar*1.18, y=1.62]{q}
+                    \Vertex[x=-1.18*\rvar, y=1.62]{p}
+                    \Vertex[x=-1.90*\rvar, y=-0.62]{r}
+                    \Vertex[x=0, y=0]{s}
+                    \Edges(u,t,q,p)
+                    \Edges(r,u)
+                    \Edges(s,t)
+                    \Edges(r,s,q,r)
+                    \Edges(p,t,s)
+                    \tikzset{EdgeStyle/.style = {->,color=blue}}
+                    %\tikzset{EdgeStyle/.append style = {bend left,->,color=blue}}
+                    \Edge[label=1](p)(q)
+                    \Edge[label=2](q)(t)
+                    \Edge[label=3](t)(s)
+                    \Edge[label=4](s)(q)
+                    \Edge[label=5](q)(r)
+                    \Edge[label=6](r)(u)
+                \end{tikzpicture}
+            \end{center}
+        \end{figure}
+    \end{frame}
+    
+    
+    \begin{frame}
+        
+        Camino: p,q,s,r,u,t
+        
+        \begin{figure}[ht]
+            \begin{center}
+                \begin{tikzpicture}[scale=1]
+                    %\SetVertexSimple[Shape=circle,FillColor=white]
+                    \def\rvar{1.2}
+                    \Vertex[x=0.00, y=-2.00]{u}
+                    \Vertex[x=\rvar*1.90, y=-0.62]{t}
+                    \Vertex[x=\rvar*1.18, y=1.62]{q}
+                    \Vertex[x=-1.18*\rvar, y=1.62]{p}
+                    \Vertex[x=-1.90*\rvar, y=-0.62]{r}
+                    \Vertex[x=0, y=0]{s}
+                    \Edges(u,t,q,p)
+                    \Edges(r,u)
+                    \Edges(s,t)
+                    \Edges(r,s,q,r)
+                    \Edges(p,t,s)
+                    \tikzset{EdgeStyle/.style = {->,color=blue}}
+                    \Edge[label=1](p)(q)
+                    \Edge[label=2](q)(s)
+                    \Edge[label=3](s)(r)
+                    \Edge[label=4](r)(u)
+                    \Edge[label=5](u)(t)
+                \end{tikzpicture}
+            \end{center}
+        \end{figure}
+    \end{frame}
+    
+    \begin{frame}
+        
+        Ciclo: p,q,s,r,u,t,p
+        
+        \begin{figure}[ht]
+            \begin{center}
+                \begin{tikzpicture}[scale=1]
+                    %\SetVertexSimple[Shape=circle,FillColor=white]
+                    \def\rvar{1.2}
+                    \Vertex[x=0.00, y=-2.00]{u}
+                    \Vertex[x=\rvar*1.90, y=-0.62]{t}
+                    \Vertex[x=\rvar*1.18, y=1.62]{q}
+                    \Vertex[x=-1.18*\rvar, y=1.62]{p}
+                    \Vertex[x=-1.90*\rvar, y=-0.62]{r}
+                    \Vertex[x=0, y=0]{s}
+                    \Edges(u,t,q,p)
+                    \Edges(r,u)
+                    \Edges(s,t)
+                    \Edges(r,s,q,r)
+                    \Edges(p,t,s)
+                    \tikzset{EdgeStyle/.style = {->,color=blue}}
+                    \Edge[label=1](p)(q)
+                    \Edge[label=2](q)(s)
+                    \Edge[label=3](s)(r)
+                    \Edge[label=4](r)(u)
+                    \Edge[label=5](u)(t)
+                    \Edge(t)(p)
+    
+                \end{tikzpicture}
+            \end{center}
+        \end{figure}
+    \end{frame}
+    
+    
+    \begin{frame}
+        
+        \begin{lema} Sea $G$ un grafo.  Entonces, $x$ e $y$ pueden ser unidos por una caminata  si  y sólo si  $x$ e $y$ pueden ser unidos por un camino.
+        \end{lema}
+        \begin{idea} ($\Leftarrow$) es trivial (un camino es una caminata).
+            
+            \vskip .2cm
+            ($\Rightarrow$) Eliminar "bucles".
+            
+            \begin{figure}[ht]
+                \begin{center}
+                    \begin{tikzpicture}[scale=1]
+                        \SetVertexSimple[Shape=circle,FillColor=white,MinSize=5 pt]
+                        %
+                        %\ponertz{-7}{-30}{$x=$}
+                        \draw (-0.6,0) node {$x = $};                
+                        \draw (0,0.4) node {$v_0$};
+                        \Vertex[x=0.00, y=0]{v0}
+                        \Vertex[x=1, y=0]{v1}
+                        \draw (1,0.4) node {$v_1$};
+                        \Vertex[x=3, y=0]{vi}
+                        \draw (3,0.4) node {$v_i$};
+                        \Vertex[x=2.5, y=0.5]{vi1}
+                        \Vertex[x=2.5, y=1]{vi2}
+                        \Vertex[x=3.5, y=0.5]{vi3}
+                        \Vertex[x=3.5, y=1]{vi4}
+                        \Edges(v0,v1)
+                        \Edges(vi,vi1)
+                        \Edges(vi1,vi2)
+                        \draw (2.7,1.3) node {$\scriptstyle\bullet$};
+                        \draw (2.9,1.5) node {$\scriptstyle\bullet$};
+                        \draw (3.1,1.5) node {$\scriptstyle\bullet$};
+                        \draw (3.3,1.3) node {$\scriptstyle\bullet$};
+                        \draw (2,0) node {$\scriptstyle\bullet$};
+                        \draw (2.3,0) node {$\scriptstyle\bullet$};
+                        \Edges(vi3,vi4)
+                        \Edges(vi3,vi)
+                        \Vertex[x=5, y=0]{vr1}
+                        \Vertex[x=6, y=0]{vr}
+                        \Edges(vr1,vr)
+                        \draw (6,0.4) node {$v_r$};
+                        \draw (5,0.4) node {$v_{r-1}$};
+                        \draw (6.6,0) node {$=y$};
+                        
+                        \SetVertexNormal[LineColor=white]
+                        \Vertex[x=1.8, y=0]{s1}
+                        \Vertex[x=2.2, y=0]{s2}
+                        \Edges(v1,s1)
+                        \Edges(vi,s2)
+                        \draw (1.7,0) node {$\scriptstyle\bullet$};
+                        \draw (2,0) node {$\scriptstyle\bullet$};
+                        \draw (2.3,0) node {$\scriptstyle\bullet$};
+                        
+                        \Vertex[x=4.2, y=0]{t1}
+                        \Vertex[x=3.8, y=0]{t2}
+                        \Edges(vr1,t1)
+                        \Edges(vi,t2)
+                        \draw (3.7,0) node {$\scriptstyle\bullet$};
+                        \draw (4,0) node {$\scriptstyle\bullet$};
+                        \draw (4.3,0) node {$\scriptstyle\bullet$};
+                    \end{tikzpicture}
+                \end{center}
+                Se transforma en 
+                \begin{center}
+                    \begin{tikzpicture}[scale=1]
+                        \SetVertexSimple[Shape=circle,FillColor=white,MinSize=5 pt]
+                        %
+                        %\ponertz{-7}{-30}{$x=$}
+                        \draw (-0.6,0) node {$x = $};                
+                        \draw (0,0.4) node {$v_0$};
+                        \Vertex[x=0.00, y=0]{v0}
+                        \Vertex[x=1, y=0]{v1}
+                        \draw (1,0.4) node {$v_1$};
+                        \Vertex[x=3, y=0]{vi}
+                        \draw (3,0.4) node {$v_i$};
+                        \Edges(v0,v1)
+                        \Vertex[x=5, y=0]{vr1}
+                        \Vertex[x=6, y=0]{vr}
+                        \Edges(vr1,vr)
+                        \draw (6,0.4) node {$v_r$};
+                        \draw (5,0.4) node {$v_{r-1}$};
+                        \draw (6.6,0) node {$=y$};
+                        
+                        \SetVertexNormal[LineColor=white]
+                        \Vertex[x=1.8, y=0]{s1}
+                        \Vertex[x=2.2, y=0]{s2}
+                        \Edges(v1,s1)
+                        \Edges(vi,s2)
+                        \draw (1.7,0) node {$\scriptstyle\bullet$};
+                        \draw (2,0) node {$\scriptstyle\bullet$};
+                        \draw (2.3,0) node {$\scriptstyle\bullet$};
+                        
+                        \Vertex[x=4.2, y=0]{t1}
+                        \Vertex[x=3.8, y=0]{t2}
+                        \Edges(vr1,t1)
+                        \Edges(vi,t2)
+                        \draw (3.7,0) node {$\scriptstyle\bullet$};
+                        \draw (4,0) node {$\scriptstyle\bullet$};
+                        \draw (4.3,0) node {$\scriptstyle\bullet$};
+                    \end{tikzpicture}
+                \end{center}    \qed
+            \end{figure}
+            
+            
+            
+            \vskip 4cm
+        \end{idea}
+        
+        
+        
+    \end{frame}
+    
+    \begin{frame} 
+        Escribamos $x \sim y$ siempre y cuando los vértices $x$ e $y$ de
+        $G$ puedan ser unidos por un camino en $G$ o $x=y$: hablando en forma
+        rigurosa, esto significa que si $x \ne y$ hay un camino $v_1,v_2,\ldots,v_k$ en
+        $G$ con $x=v_1$ e $y=v_k$. 
+        \vskip .3cm
+        
+        \begin{definicion}
+            Sea $G$ grafo,  diremos que es conexo si  para $x\sim y$ para cualesquiera  $x,y$ vértices en $G$. 
+        \end{definicion}
+        
+        \vskip .6cm
+        El  lema de la página anterior implica que  $\sim$  es una relación de equivalencia. 
+
+    
+        
+ 
+    \end{frame}
+    
+    \begin{frame}
+        \begin{proposicion} Sea $G$ grafo  y $x$, $y$, $z$ vértices de $G$. Entonces, 
+            \begin{enumerate}
+                \item $x \sim x$ (reflexividad de $\sim$).
+                \item $x \sim y$, entonces $y \sim x$ (simetría de $\sim$).
+                \item $x \sim y$,  $y \sim z$, entonces  $x \sim z$ (transitividad  de $\sim$).
+            \end{enumerate}
+        \end{proposicion}
+        
+        \begin{proof}
+            (1) Por definición $x \sim x$.
+            \vskip .4cm
+
+            (2) Si $x=x_1,x_2, \ldots,x_k= y$  es un camino de $x$ a $y$,  entonces $y=x_k,\ldots, x_2, x_1 =x$  es un camino de $y$ a $x$.
+            \vskip .4cm
+
+            (3) 
+            
+            $x \sim y$ $\Rightarrow$  un camino de $x$ a $y$. 
+
+            $y \sim z$ $\Rightarrow$  un camino de $y$ a $z$.
+            
+            Pegando los caminos en $y$,  obtenemos  una caminata de $x$ a $z$ (que se reduce a un camino por el lema). \qed
+
         \end{proof}
         
-        
-    \end{frame}
     
-    \begin{frame}
-        Diremos que un vértice de $G$ es {\em impar} si su  valencia es impar, y {\em par} si su valencia es par.
-        \pause\vskip .3cm
-        
-        Denotemos $V_i$ y $V_p$ los conjuntos de vértices impares y pares
-        respectivamente, luego $V=V_i \cup V_p$ es una partición de $V$.\pause
-        Luego
-        $$
-        \sum_{v \in V_i} \delta(v) + \sum_{v \in V_p} \delta(v)= 2|E|.
-        $$ 
-        y entonces
-        $$
-        \sum_{v \in V_i} \delta(v) = \underbrace{2|E|}_{\text{par}} -  \underbrace{\sum_{v \in V_p} \delta(v)}_{\text{par}}.
-        $$ 
-        \pause
-        Luego, la suma de las valencias de los vértices impares  es par \; $\Rightarrow$
-        
-        \begin{teorema} El número de vértices impares es par.
-        \end{teorema}
-        
-        
     \end{frame}
-    
-    \begin{frame}
-        Este resultado es a veces llamado el ``handshaking lemma'': dado un conjunto de personas, el número de personas
-        que le ha dado la mano a un número impar de miembros del conjunto
-        es par.
-        
-        \vskip .4cm
-        
-        Un grafo en el cual todos los vértices tienen la misma valencia $r$ se llama {\em regular}  (con valencia $r$), o {\em $r$-valente.} Luego, 
-        $$
-        r|V|=2|E|.
-        $$
-        
-        \begin{itemize}
-            \item $K_n$ regular $(n-1)$-valente.
-            \item  $C_n$,  el polígono de $n$-lados. Si $n \ge3$, $C_n$  es regular de valencia $2$. 
-        \end{itemize}
-        
-        \vskip .4cm 
-        
-        $C_n$  es llamado el \textit{grafo cíclico} de $n$ vértices. Formalmente $C_n =(V,E)$, con
-        $$
-        V = \{ 1,2,\ldots,n\}, \qquad E = \{\{1,2\}, \{2,3\}, \ldots , \{n-1,n\},\{n,1\}  \}.
-        $$
-        
-        
-    \end{frame}
-    
+
 \end{document}
 
