--- a/2023-1/beamer/C20_md1.tex
+++ b/2023-1/beamer/C20_md1.tex
@@ -3,7 +3,6 @@
 \usetheme{CambridgeUS}
 %\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
-
 \usepackage{etex}
 \usepackage{t1enc}
 \usepackage[spanish,es-nodecimaldot]{babel}
@@ -82,7 +81,7 @@
 
 \nc{\ba}{\mathbf{a}} \nc{\bb}{\mathbf{b}} \nc{\bt}{\mathbf{t}}
 \nc{\bB}{\mathbf{B}}
- 
+
 \nc{\cP}{\mathcal{P}} \nc{\cU}{\mathcal{U}} \nc{\cX}{\mathcal{X}}
 \nc{\cE}{\mathcal{E}} \nc{\cS}{\mathcal{S}} \nc{\cA}{\mathcal{A}}
 \nc{\cC}{\mathcal{C}} \nc{\cO}{\mathcal{O}} \nc{\cQ}{\mathcal{Q}}
@@ -94,14 +93,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%LETRAS
 
 
-
-\title[Clase 20 - Isomorfismo / Caminatas, caminos y ciclos]{Matemática Discreta I \\ Clase 20 -  Isomorfismo / Caminatas, caminos y ciclos}
+\title[Clase 21 - Caminatas eulerianas]{Matemática Discreta I \\ Clase 21 - Caminatas eulerianas, ciclos hamiltonianos}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[06/06/2023]{6 de junio de 2023}
+\date[08/06/2023]{8 de junio de 2023}
 
 
 
@@ -111,525 +109,292 @@
     \frame{\titlepage} 
     
     
+    \begin{frame}\frametitle{Los puentes de Könisberg}
+        
+        {\color{blue}Pregunta}%
+    \vskip .2cm
+            ¿Es posible cruzar todos los puentes pasando  una y solo una vez por cada uno?         Leonhard Euler (1707-1783).
     
-    
-    \begin{frame}
-        Una aplicación importante de la noción de valencia es en el problema de determinar si dos grafos son o no isomorfos. \pause
         
-        \vskip .6cm
-        
-        Si     $\alpha:V_1 \to  V_2$ es un isomorfismo entre $G_1$ y $G_2$, y $\alpha(v)=w$, entonces cada arista que contiene a $v$ se transforma en una arista que contiene a $w$. \pause
-        
-        \vskip .6cm
-        
-        En consecuencia $\delta(v)=\delta(w)$. Por otro lado, si $G_1$ tiene un vértice $x$, con valencia $\delta(x)=\delta_0$, y $G_2$ no tiene vértices    con valencia $\delta_0$, entonces $G_1$ y $G_2$ no pueden ser    isomorfos. 
-        
-        
-        
-        
-        
-        
-        
+        \begin{figure}
+            \includegraphics[scale=0.12]{images/konisberg_hc.png}
+        \end{figure}
         
     \end{frame}
     
     
+    \begin{frame}\frametitle{Los puentes de Könisberg - versión 2}
+        \begin{figure}
+            \includegraphics[scale=0.23]{images/konisberg2.jpg}
+        \end{figure}
+    \end{frame}
+    
+    \begin{frame}\frametitle{Los puentes de Könisberg - versión 3}
+        \begin{figure}
+            \includegraphics[scale=0.18]{images/konisberg3.jpg}
+        \end{figure}
+        \pause
+        Ahora el problema se reduce a encontrar una caminata  que use cada arista (o puente) una y solo una vez.
+    \end{frame}
+    
     \begin{frame}
-        Esto nos da otra manera de ver que no son isomorfos los siguientes grafos:
+        \begin{observacion}
+            $\delta(A)=5$, $\delta(B)=3$, $\delta(C)=3$, $\delta(D)=3$.
+        \end{observacion}\pause
         
         \vskip .5cm
-        \begin{figure}[ht]
-            \begin{center}
-                \begin{tabular}{llll}
-                    &
-                    \begin{tikzpicture}[scale=1]
-                        %\SetVertexSimple[Shape=circle,FillColor=white]
-                        \Vertex[x=0.00, y=2.00]{$a$}
-                        \Vertex[x=1.90, y=0.62]{$b$}
-                        \Vertex[x=1.18, y=-1.62]{$c$}
-                        \Vertex[x=-1.18, y=-1.62]{$d$}
-                        \Vertex[x=-1.90, y=0.62]{$e$}
-                        \Edges($c$, $b$,$a$,$e$,$d$,$b$,$a$,$d$)
-                        \Edges($e$,$b$)
-                    \end{tikzpicture}
-                    &
-                    \qquad
-                    & 
-                    \begin{tikzpicture}[scale=1]
-                        %\SetVertexSimple[Shape=circle,FillColor=white]
-                        \Vertex[x=0.00, y=2.00]{1}
-                        \Vertex[x=1.90, y=0.62]{2}
-                        \Vertex[x=1.18, y=-1.62]{3}
-                        \Vertex[x=-1.18, y=-1.62]{4}
-                        \Vertex[x=-1.90, y=0.62]{5}
-                        \Edges(1,2,3,4,5,1)
-                        \Edges(4,2,5)
-                    \end{tikzpicture}
-                \end{tabular}
-            \end{center}
-        \end{figure}
-        \vskip .4cm
-        Puesto que el primer grafo tiene un vértice de
-        valencia 1 y el segundo no.
-    \end{frame}
-    
-    
-    \begin{frame}
-        Una extensión de esta idea se da en la siguiente proposición.\pause
         
-        \vskip .4cm
-        \begin{proposicion}\label{criterioiso}Sean  $G_1$ y $G_2$ grafos isomorfos. Para cada $k\ge 0$ sea $n_i(k)$ el
-            número de vértices de $G_i$ que tienen valencia $k$ ($i=1,2$).
-            Entonces $n_1(k)=n_2(k)$.
-        \end{proposicion}\pause
-        \vskip .4cm
-        \begin{proof}\pause  Hemos visto más arriba que si $\alpha:V_1 \to  V_2$ es un isomorfismo entre $G_1$ y $G_2$ y $v\in V_1$, entonces $\delta(v)=\delta(\alpha(v))$. Luego la cantidad de vértices con valencia $k$ en $G_1$ es igual  a la cantidad de vértices con valencia $k$ en $G_2$.  
+        Euler, abstrayéndose del problema concreto, razonó de la siguiente manera:\pause
+        
+        \vskip .5cm 
+        \begin{itemize}
+            \item Supongamos que el vértice de partida es $x$ y  el de llegada es $y$. Todos los demás los llamo vértices intermedios.\pause
+            \item En un vértice intermedio cada vez que entro por un puente salgo por otro. Eso  me ``aporta''  2 a la valencia.\pause
+            \item Terminado el proceso usé todos los puentes, por lo tanto  en cada vértice intermedio la cantidad de entradas más la cantidad de salidas es la valencia. Como la cantidad de entradas es igual a la cantidad de salidas, la valencia en los vértices intermedios es par.
             
-            \qed
-        \end{proof}
+        \end{itemize}
+        
+        
     \end{frame}
     
     \begin{frame}
+        \textbf{Concluyendo}
+        \vskip .3cm
+        \begin{itemize}
+            \item Si hay una caminata que pasa por cada puente una y solo una vez,  la cantidad de vértices con valencia impar es a lo sumo 2. \pause
+            \item Como todos los vértices en el problema tienen valencia impar, el problema no tiene solución. 
+        \end{itemize}\pause
+        \vskip .3cm
+        Como veremos más adelante el problema de los puentes de Könisberg puede ser generalizado y también vale la recíproca.\pause
+        \vskip .5cm
+        \textbf{Cita:}  Euler, Leonhard (1736). \href{http://math.dartmouth.edu/\~euler/docs/originals/E053.pdf}{Solutio problematis ad geometriam situs pertinentis}. Comment. Acad. Sci. U. Petrop 8, 128-40 (en latín)
         
-        
-        No hay ningún criterio general eficiente para determinar si dos grafos son isomorfos o no. En  el siguiente ejemplo, no se aplica el criterio anterior. \pause
-        
-        \vskip .4cm
-        \begin{ejemplo}
-            Probar que los siguientes grafos no son isomorfos.
-            
-            \begin{figure}[ht]
+    \end{frame}
+    
+    \begin{frame}
+        \begin{ejemplo} ¿Es posible recorrer el siguiente gráfo con una caminata que pase por cada vértice una sola vez y volver al de partida? ¿Es posible hacer una caminata  que pasa por cada arista una sola vez?
+            \begin{figure}[h]
                 \begin{center}
-                    \begin{tabular}{llll}
-                        &
-                        \begin{tikzpicture}[scale=1]
-                            \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-                            \Vertex[x=0.00, y=2.00]{a}
-                            \Vertex[x=2., y=-1.50]{b}
-                            \Vertex[x=-2., y=-1.50]{c}
-                            \Edges(a,b,c,a)
-                            \Vertex[x=0.00, y=0.85]{1}
-                            \Vertex[x=1., y=-0.9]{2}
-                            \Vertex[x=-1., y=-0.9]{3}
-                            \Edges(1,2,3,1)
-                            \Edges(a,1,3,c,b,2)
-                            \draw (0,-2.2) node {$G_1$};
-                        \end{tikzpicture}
-                        &
-                        \qquad
-                        & 
-                        \begin{tikzpicture}[scale=0.65]
-                            \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-                            %                
-                            \Vertex[x=3.00, y=0.00]{1}
-                            \Vertex[x=1.50, y=2.60]{2}
-                            \Vertex[x=-1.50, y=2.60]{3}
-                            \Vertex[x=-3.00, y=0.00]{4}
-                            \Vertex[x=-1.50, y=-2.60]{5}
-                            \Vertex[x=1.50, y=-2.60]{6}
-                            \Edges(1,2,3,4,5,6,1)
-                            \Edges(1,4) \Edges(3,6) \Edges(2,5)
-                            \draw (0,-3.8) node {$G_2$};
-                        \end{tikzpicture}
-                    \end{tabular}
+                    \begin{tikzpicture}[scale=1]
+                        %\SetVertexSimple[Shape=circle,FillColor=white]
+                        \def\rvar{1.2}
+                        \Vertex[x=0.00, y=-2.00]{$u$}
+                        \Vertex[x=\rvar*1.90, y=-0.62]{$t$}
+                        \Vertex[x=\rvar*1.18, y=1.62]{$q$}
+                        \Vertex[x=-1.18*\rvar, y=1.62]{$p$}
+                        \Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
+                        \Vertex[x=0, y=0]{$s$}
+                        \Edges($u$,$t$,$q$,$p$,$r$,$u$,$s$,$t$,$r$,$s$,$q$,$r$,$p$,$t$,$s$,$u$,$s$,$p$)
+                    \end{tikzpicture}
                 \end{center}
             \end{figure}
+            
         \end{ejemplo}
-        
-        
     \end{frame}
-    
-    
     
     \begin{frame}
         \begin{solucion}\pause
-            Ambos tienen $6$ vértices, $9$ aristas y todos los vértices son de valencia $3$. 
-            \pause
-            \vskip.2cm
-            Por lo tanto no podemos utilizar los criterios anteriores para decir que no son isomorfos.
-            \pause 
-            \vskip .2cm
+            Para la primera pregunta una posibilidad es el ciclo $p,q,t,s,u,r,p$.\pause
             
-            Sin embargo, observar que  $G_1$ tiene un subgrafo $K_3$:
+            \vskip .5cm
+            
+            La segunda pregunta tiene respuesta negativa:\pause
+            
+            Las valencias son 
+            $$\delta(p) = 4,\quad\delta(q) = 4,\quad\delta(s) = 5,\quad\delta(r) = 5,\quad\delta(u) = 3,\quad\delta(t) = 5.$$\pause
+            
+            Como en los puentes de Königsberg,  al haber más de $2$ vértices de valencia impar, no es posible recorrer todas las aristas una sola vez.
+            
+            \qed
+            
+            
+            
+        \end{solucion}
+    \end{frame}
+    
+        
+    \begin{frame}
+        \begin{definicion}
+            Un {\em ciclo hamiltoniano} en un grafo $G$ es un ciclo que contiene a todos los vértices del grafo.\pause
             \vskip .2cm
-            \begin{center}
-                \begin{tikzpicture}[scale=0.6]
-                    \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-                    \Vertex[x=0.00, y=2.00]{a}
-                    \Vertex[x=2., y=-1.50]{b}
-                    \Vertex[x=-2., y=-1.50]{c}
-                    \Edges(a,b,c,a)
-                \end{tikzpicture}
-            \end{center}\pause
+            Una {\em caminata euleriana} en un grafo $G$ es un caminata que usa todas las aristas de $G$ exactamente  una vez o,  equivalentemente, un recorrido que utiliza todas las aristas.  \pause
+            \vskip .2cm
+            Una caminata euleriana que comienza y termina en un mismo vértice se llama también {\em circuito euleriano}.
+        \end{definicion}
+        
+        \vskip .2cm
+        
+        \begin{teorema}  Un grafo conexo con más de un vértice tiene un circuito euleriano si y sólo si todos los vértices tienen grado par. Un grafo conexo con más de un vértice posee caminatas eulerianas de $v$ a $w$, con $v \not= w$ si y sólo si $v$ y $w$ son los únicos vértices de grado impar.
+        \end{teorema}
+    \end{frame}
+
+    \begin{frame}
+    
+
+        C. Hierholzer (1840-1871) mostró, poco antes de su muerte, un algoritmo fácilmente implementable para encontrar un circuito euleriano  para cualquier grafo  con vértices de grado  par. 
+
+        \pause
+        \vskip .4cm
+        
+        Artículo: \href{https://eudml.org/doc/156599}{Ueber die Möglichkeit, einen Linienzug ohne Wiederholung und ohne Unterbrechung zu umfahren}. Mathematische Annalen volume 6, pp. 30–32 (1873) (en alemán). \pause
+        
+        \vskip .4cm
+        
+        El  mismo algoritmo sirve para grafos con dos vértices de grado impar.
+        
+        \vskip .6cm\pause
+        
+        Para explicar el algoritmo de Hierholzer nos es útil la siguiente
+        
+        \vskip .4cm
+        
+        \begin{definicion}
+            Un \textit{recorrido maximal}  es un recorrido que respetando la condición de no repetir aristas no es posible continuarlo.  
+        \end{definicion}
+
+    
+    \end{frame}
+        
+    \begin{frame}\frametitle{Algoritmo de Hierholzer: idea clave}\pause
+        
+        La idea clave del algoritmo de Hierholzer  es la siguiente:  en un grafo de valencias pares (conexo o no conexo) todo recorrido maximal termina en el vértice original. Veamos la demostración de esta afirmación.
+
+        \vskip .2cm\pause
+
+        \begin{itemize}
+            \item Sea $x$ un vértice del grafo  que será donde comenzará la caminata.
+            \item Cada vez que ingreso y salgo de un vértice $v$ ``consumo'' $2$  aristas y  me quedan $2$ aristas menos para utilizar.\pause
+            \item Como $\delta(v)$  es par,  si $v\ne x$ cada vez que ingreso y salgo  de $v$ me queda un un número par de aristas de ese vértice sin utilizar.\pause
+            \item Es decir,  siempre que puedo entrar a un vértice $v \ne x$, puedo salir.\pause
+            \item Es  decir, el único vértice al que puedo entrar y quizás no pueda  salir es $x$.\pause
+            \item Como el recorrido es maximal,  va a haber algún momento en que no pueda avanzar más y eso solo puede ocurrir cuando estamos en el vértice $x$.
+        \end{itemize}
+
+    \end{frame}
+
+    \begin{frame}
+        \frametitle{Algoritmo de Hierholzer: idea de la demostración (1)}\pause
+        
+        
+        Algoritmo  de Hierholzer (grafo con todas valencias pares):\pause
+        \vskip .4cm
+        \begin{enumerate}
+            \item \textbf{Paso 1.} Elija cualquier vértice  inicial $v$ y haga un recorrido  maximal.\pause
+            \vskip .2cm
+            (recorrido cerrado, puede no cubrir todas las aristas).\pause
             \vskip .4cm
-            Mientras que $G_2$ no lo tiene. Por lo tanto, $G_1$ y $G_2$ no son isomorfos.
+            \item \textbf{Paso iterativo} \pause
+            \begin{enumerate}\pause
+                \item[\textit{i)}] Mientras exista un vértice $u$ en la caminata ya realizada, pero que tenga aristas que no formen parte de la caminata, inicie otro recorrido maximal (será de $u$ a $u$) siguiendo las aristas no utilizadas.\pause
+                \item[\textit{ii)}] Inserte esta  caminata a la caminata  anterior en $u$  para formar una caminata nueva (más larga).\pause
+                \item[\textit{iii)}] Si no cubrió todas las aristas vuelva a \textit{i)}.
+            \end{enumerate} 
             
+        \end{enumerate}
+    
+    \end{frame}
+    
+    \begin{frame}\frametitle{Algoritmo de Hierholzer: idea de la demostración (2)}
+
+        En  el paso iterativo el subgrafo que obtenemos luego de quitar las aristas recorridas es par. Esto nos permite hacer caminatas cerradas  por aristas no utilizadas desde cada vértice con aristas no utilizadas.\pause
+        \vskip .6cm
+
+        
+            El caso de un grafo donde todas las valencias son pares excepto $2$ se puede reducir al anterior: si deseamos una caminata euleriana que empiece por $v$ y termine en $w$.\pause
+        \begin{itemize}
+            \item Comenzamos en $v$ y haga una caminata  que no repita aristas hasta que se detenga. \pause
+            \item Elimine la aristas utilizadas. El grafo que queda es par y  ahí utilizamos el algoritmo para ese caso. 
+        \end{itemize}
+        
+        \qed
+        
+    \end{frame}
+    
+    
+    
+    \begin{frame}
+        \begin{ejemplo}
+            Encontremos un circuito euleriano del siguiente grafo. 
+            \vskip .4cm
+            \begin{figure}[ht]
+                \begin{center}
+                    \begin{tikzpicture}[scale=1]
+                    %\SetVertexSimple[Shape=circle,FillColor=white]
+                    \def\rvar{1.2}
+                    \Vertex[x=0.00, y=-2.00, L=$u$]{$u$} % 3
+                    \Vertex[x=\rvar*1.90, y=-0.62, L=$t$]{$t$} % 2
+                    \Vertex[x=\rvar*1.18, y=1.62, L=$q$]{$q$} % 1
+                    \Vertex[x=-1.18*\rvar, y=1.62, L=$p$]{$p$} % 0
+                    \Vertex[x=-1.90*\rvar, y=-0.62, L=$r$]{$r$} % 4
+                    \Vertex[x=0, y=0, L=$s$]{$s$} % 5
+                    \Edges($u$,$t$,$q$,$p$)
+                    \Edges($r$,$u$)
+                    \Edges($s$,$t$)
+                    \Edges($r$,$s$,$q$,$r$)
+                    \Edges($p$,$t$,$s$)
+                    \Edges($s$,$p$,$r$)
+                    \end{tikzpicture}
+                    \end{center}
+            \end{figure}
+            
+        \end{ejemplo}
+    \end{frame}
+    
+    \begin{frame}
+        \begin{solucion}
+            Debemos primero observar que  debe existir un circuito euleriano, pues $\delta(p)=4$, $\delta(q)=4$, $\delta(r)=4$, $\delta(s)=4$, $\delta(t)=4$, y $\delta(u)=2$,  es decir todos los vértices tienen grado par. \pause
+            \vskip .2cm
+            
+            Apliquemos el algoritmo de Hierholzer partiendo  desde $u$. Una caminata posible con origen en $u$ y que vuelva a $u$ es $$u, r, p, q, s, t, u.$$
+
+
+            Ahora elijamos $q$ que es un vértice que pertenece a la caminata pero que tiene aristas que no son parte de la caminata. Una caminata que no toca aristas usadas y  que parte de $q$ y regresa a $q$ es $q,t,p,s,r,q$.  \pause
+
+            Insertamos en $q$  esta caminata  a la caminata anterior y obtenemos:
+            $$u, r, p, \underline{q,t,p,s,r,q}, s, t, u.$$
+            (Subrayada la caminata insertada).
+
             \qed
         \end{solucion}
     \end{frame}
     
-    \begin{frame}\frametitle{Caminatas, caminos y ciclos}
-        \begin{definicion}  Una {\em caminata} en un grafo $G$ es  \index{caminata}
-            una secuencia de vértices
-            $$
-            v_1,v_2,\ldots,v_k,
-            $$
-            tal que $v_i$ y $v_{i+1}$ son adyacentes ($1 \le i \le k-1$). \pause
-            
-            \vskip .4cm
-            Si todos los vértices son distintos, una caminata es llamada un {\em  camino}.\pause
-            
-            \vskip .4cm
-            
-            Un \textit{recorrido} es una caminata donde todas las aristas $\{v_i,v_{i+1}\}$ con $1 \le i \le k-1$ son distintas.  
 
-            \vskip .4cm
+    \begin{frame}[fragile]\frametitle{Recorrido maximal}
+Mostramos en pseudocódigo el algoritmo de recorrido maximal. 
 
-            Un {\em ciclo} a una caminata $v_1,v_2,\ldots,v_{k}, v_1$ con $v_1,v_2,\ldots,v_{k}$ camino y $k \ge 3$. A menudo diremos que es un {\em
-                $k$-ciclo}, o un ciclo de {\em longitud} $k$ en $G$.
-        \end{definicion}\pause
+\begin{verbatim}
+def r_max(L, v_ini): 
+    # pre: L grafo, v_ini vértice de L
+    # post: recorrido maximal que comienza en v_ini
+    sub_caminata = [v_ini]  # sub caminata
+    p0 = v_ini
+    while len(L.adyacentes(p0)) > 0:  
+        p1 = L.adyacentes(p0)[0] # p1 primer adyacente a p0 
+        sub_caminata.append(p1) # agrega p1 a caminata
+        L.quitar_arista((p0,p1)) # quita arista {p0, p1}
+        p0 = p1 
+    return sub_caminata
+\end{verbatim}
+\end{frame}
 
+\begin{frame}[fragile]
+    \frametitle{Algoritmo de Hierholzer}
+    Mostramos en pseudocódigo el algoritmo de Hierholzer
     
-        
-    \end{frame}
+\begin{verbatim}
+    # pre: G grafo admisible
+    # post: cuando termina 'c' es una caminata
+    #       o circuito euleriano que empieza en 0.
+    libres = G.copiar() # sub grafo de aristas no utilizadas
+    c = r_max(libres, v_ini) # recorrido maximal
+    while len(libres.aristas()) > 0: 
+        for v in libres.vertices(): 
+            if len(libres.adyacentes(v)) > 0 and v in c:
+                pos = cam.index(v) 
+                c  =  c[:pos] + r_max(libres, v) + c[pos+1:]
+\end{verbatim}
 
-
-    \begin{frame}
-        
-        \begin{observacion}
-            \begin{itemize}
-                \item Por definición de caminata $k\ge2$, es decir una caminata tiene al menos una arista ($\{v_1, v_2\}$).
-                \item Por definición de ciclo  $v_1,v_2,\ldots,v_{k}, v_1$, $k \ge 3$; un ciclo tiene al menos 3 aristas (claramente, no hay 2-ciclos.). 
-            \end{itemize}
-
-        \end{observacion}
-    
-        \vskip 3cm
-    
-    \end{frame}
-    
-    \begin{frame}
-        \begin{ejemplo}
-            Dibujemos caminatas, caminos, recorridos y ciclos en el siguiente grafo:
-            \vskip .4cm
-            
-            \begin{center}
-                \begin{tikzpicture}[scale=1]
-                    \def\rvar{1.2}
-                    \Vertex[x=0.00, y=-2.00]{u}
-                    \Vertex[x=\rvar*1.90, y=-0.62]{t}
-                    \Vertex[x=\rvar*1.18, y=1.62]{q}
-                    \Vertex[x=-1.18*\rvar, y=1.62]{p}
-                    \Vertex[x=-1.90*\rvar, y=-0.62]{r}
-                    \Vertex[x=0, y=0]{s}
-                    \Edge(u)(t)
-                    \Edges(t,q,p)
-                    \Edges(r,u)
-                    \Edges(s,t)
-                    \Edges(r,s,q,r)
-                    \Edges(p,t,s)
-                    \Edges(s,p)
-                    
-                    %\Edge[label=1](u)(t)
-                \end{tikzpicture}
-            \end{center}
-            
-        \end{ejemplo}
-    \end{frame}
-
-    
-    \begin{frame}
-        
-        Caminata: p,q,t,s,q,r,u,r
-        
-        \begin{figure}[ht]
-            \begin{center}
-                \begin{tikzpicture}[scale=1]
-                    %\SetVertexSimple[Shape=circle,FillColor=white]
-                    \def\rvar{1.2}
-                    \Vertex[x=0.00, y=-2.00]{u}
-                    \Vertex[x=\rvar*1.90, y=-0.62]{t}
-                    \Vertex[x=\rvar*1.18, y=1.62]{q}
-                    \Vertex[x=-1.18*\rvar, y=1.62]{p}
-                    \Vertex[x=-1.90*\rvar, y=-0.62]{r}
-                    \Vertex[x=0, y=0]{s}
-                    \Edges(u,t,q,p)
-                    \Edges(r,u)
-                    \Edges(s,t)
-                    \Edges(r,s,q,r)
-                    \Edges(p,t,s)
-                    \tikzset{EdgeStyle/.style = {->,color=blue}}
-                    %\tikzset{EdgeStyle/.append style = {bend left,->,color=blue}}
-                    \Edge[label=1](p)(q)
-                    \Edge[label=2](q)(t)
-                    \Edge[label=3](t)(s)
-                    \Edge[label=4](s)(q)
-                    \Edge[label=5](q)(r)
-                    \Edge[label=6](r)(u)
-                    \Edge[label=7,style={bend left}](u)(r)
-                \end{tikzpicture}
-            \end{center}
-        \end{figure}
-    \end{frame}
-
-    \begin{frame}
-        
-        Recorrido: p,q,t,s,q,r,u
-        
-        \begin{figure}[ht]
-            \begin{center}
-                \begin{tikzpicture}[scale=1]
-                    %\SetVertexSimple[Shape=circle,FillColor=white]
-                    \def\rvar{1.2}
-                    \Vertex[x=0.00, y=-2.00]{u}
-                    \Vertex[x=\rvar*1.90, y=-0.62]{t}
-                    \Vertex[x=\rvar*1.18, y=1.62]{q}
-                    \Vertex[x=-1.18*\rvar, y=1.62]{p}
-                    \Vertex[x=-1.90*\rvar, y=-0.62]{r}
-                    \Vertex[x=0, y=0]{s}
-                    \Edges(u,t,q,p)
-                    \Edges(r,u)
-                    \Edges(s,t)
-                    \Edges(r,s,q,r)
-                    \Edges(p,t,s)
-                    \tikzset{EdgeStyle/.style = {->,color=blue}}
-                    %\tikzset{EdgeStyle/.append style = {bend left,->,color=blue}}
-                    \Edge[label=1](p)(q)
-                    \Edge[label=2](q)(t)
-                    \Edge[label=3](t)(s)
-                    \Edge[label=4](s)(q)
-                    \Edge[label=5](q)(r)
-                    \Edge[label=6](r)(u)
-                \end{tikzpicture}
-            \end{center}
-        \end{figure}
-    \end{frame}
-    
-    
-    \begin{frame}
-        
-        Camino: p,q,s,r,u,t
-        
-        \begin{figure}[ht]
-            \begin{center}
-                \begin{tikzpicture}[scale=1]
-                    %\SetVertexSimple[Shape=circle,FillColor=white]
-                    \def\rvar{1.2}
-                    \Vertex[x=0.00, y=-2.00]{u}
-                    \Vertex[x=\rvar*1.90, y=-0.62]{t}
-                    \Vertex[x=\rvar*1.18, y=1.62]{q}
-                    \Vertex[x=-1.18*\rvar, y=1.62]{p}
-                    \Vertex[x=-1.90*\rvar, y=-0.62]{r}
-                    \Vertex[x=0, y=0]{s}
-                    \Edges(u,t,q,p)
-                    \Edges(r,u)
-                    \Edges(s,t)
-                    \Edges(r,s,q,r)
-                    \Edges(p,t,s)
-                    \tikzset{EdgeStyle/.style = {->,color=blue}}
-                    \Edge[label=1](p)(q)
-                    \Edge[label=2](q)(s)
-                    \Edge[label=3](s)(r)
-                    \Edge[label=4](r)(u)
-                    \Edge[label=5](u)(t)
-                \end{tikzpicture}
-            \end{center}
-        \end{figure}
-    \end{frame}
-    
-    \begin{frame}
-        
-        Ciclo: p,q,s,r,u,t,p
-        
-        \begin{figure}[ht]
-            \begin{center}
-                \begin{tikzpicture}[scale=1]
-                    %\SetVertexSimple[Shape=circle,FillColor=white]
-                    \def\rvar{1.2}
-                    \Vertex[x=0.00, y=-2.00]{u}
-                    \Vertex[x=\rvar*1.90, y=-0.62]{t}
-                    \Vertex[x=\rvar*1.18, y=1.62]{q}
-                    \Vertex[x=-1.18*\rvar, y=1.62]{p}
-                    \Vertex[x=-1.90*\rvar, y=-0.62]{r}
-                    \Vertex[x=0, y=0]{s}
-                    \Edges(u,t,q,p)
-                    \Edges(r,u)
-                    \Edges(s,t)
-                    \Edges(r,s,q,r)
-                    \Edges(p,t,s)
-                    \tikzset{EdgeStyle/.style = {->,color=blue}}
-                    \Edge[label=1](p)(q)
-                    \Edge[label=2](q)(s)
-                    \Edge[label=3](s)(r)
-                    \Edge[label=4](r)(u)
-                    \Edge[label=5](u)(t)
-                    \Edge(t)(p)
-    
-                \end{tikzpicture}
-            \end{center}
-        \end{figure}
-    \end{frame}
-    
-    
-    \begin{frame}
-        
-        \begin{lema} Sea $G$ un grafo.  Entonces, $x$ e $y$ pueden ser unidos por una caminata  si  y sólo si  $x$ e $y$ pueden ser unidos por un camino.
-        \end{lema}
-        \begin{idea} ($\Leftarrow$) es trivial (un camino es una caminata).
-            
-            \vskip .2cm
-            ($\Rightarrow$) Eliminar "bucles".
-            
-            \begin{figure}[ht]
-                \begin{center}
-                    \begin{tikzpicture}[scale=1]
-                        \SetVertexSimple[Shape=circle,FillColor=white,MinSize=5 pt]
-                        %
-                        %\ponertz{-7}{-30}{$x=$}
-                        \draw (-0.6,0) node {$x = $};                
-                        \draw (0,0.4) node {$v_0$};
-                        \Vertex[x=0.00, y=0]{v0}
-                        \Vertex[x=1, y=0]{v1}
-                        \draw (1,0.4) node {$v_1$};
-                        \Vertex[x=3, y=0]{vi}
-                        \draw (3,0.4) node {$v_i$};
-                        \Vertex[x=2.5, y=0.5]{vi1}
-                        \Vertex[x=2.5, y=1]{vi2}
-                        \Vertex[x=3.5, y=0.5]{vi3}
-                        \Vertex[x=3.5, y=1]{vi4}
-                        \Edges(v0,v1)
-                        \Edges(vi,vi1)
-                        \Edges(vi1,vi2)
-                        \draw (2.7,1.3) node {$\scriptstyle\bullet$};
-                        \draw (2.9,1.5) node {$\scriptstyle\bullet$};
-                        \draw (3.1,1.5) node {$\scriptstyle\bullet$};
-                        \draw (3.3,1.3) node {$\scriptstyle\bullet$};
-                        \draw (2,0) node {$\scriptstyle\bullet$};
-                        \draw (2.3,0) node {$\scriptstyle\bullet$};
-                        \Edges(vi3,vi4)
-                        \Edges(vi3,vi)
-                        \Vertex[x=5, y=0]{vr1}
-                        \Vertex[x=6, y=0]{vr}
-                        \Edges(vr1,vr)
-                        \draw (6,0.4) node {$v_r$};
-                        \draw (5,0.4) node {$v_{r-1}$};
-                        \draw (6.6,0) node {$=y$};
-                        
-                        \SetVertexNormal[LineColor=white]
-                        \Vertex[x=1.8, y=0]{s1}
-                        \Vertex[x=2.2, y=0]{s2}
-                        \Edges(v1,s1)
-                        \Edges(vi,s2)
-                        \draw (1.7,0) node {$\scriptstyle\bullet$};
-                        \draw (2,0) node {$\scriptstyle\bullet$};
-                        \draw (2.3,0) node {$\scriptstyle\bullet$};
-                        
-                        \Vertex[x=4.2, y=0]{t1}
-                        \Vertex[x=3.8, y=0]{t2}
-                        \Edges(vr1,t1)
-                        \Edges(vi,t2)
-                        \draw (3.7,0) node {$\scriptstyle\bullet$};
-                        \draw (4,0) node {$\scriptstyle\bullet$};
-                        \draw (4.3,0) node {$\scriptstyle\bullet$};
-                    \end{tikzpicture}
-                \end{center}
-                Se transforma en 
-                \begin{center}
-                    \begin{tikzpicture}[scale=1]
-                        \SetVertexSimple[Shape=circle,FillColor=white,MinSize=5 pt]
-                        %
-                        %\ponertz{-7}{-30}{$x=$}
-                        \draw (-0.6,0) node {$x = $};                
-                        \draw (0,0.4) node {$v_0$};
-                        \Vertex[x=0.00, y=0]{v0}
-                        \Vertex[x=1, y=0]{v1}
-                        \draw (1,0.4) node {$v_1$};
-                        \Vertex[x=3, y=0]{vi}
-                        \draw (3,0.4) node {$v_i$};
-                        \Edges(v0,v1)
-                        \Vertex[x=5, y=0]{vr1}
-                        \Vertex[x=6, y=0]{vr}
-                        \Edges(vr1,vr)
-                        \draw (6,0.4) node {$v_r$};
-                        \draw (5,0.4) node {$v_{r-1}$};
-                        \draw (6.6,0) node {$=y$};
-                        
-                        \SetVertexNormal[LineColor=white]
-                        \Vertex[x=1.8, y=0]{s1}
-                        \Vertex[x=2.2, y=0]{s2}
-                        \Edges(v1,s1)
-                        \Edges(vi,s2)
-                        \draw (1.7,0) node {$\scriptstyle\bullet$};
-                        \draw (2,0) node {$\scriptstyle\bullet$};
-                        \draw (2.3,0) node {$\scriptstyle\bullet$};
-                        
-                        \Vertex[x=4.2, y=0]{t1}
-                        \Vertex[x=3.8, y=0]{t2}
-                        \Edges(vr1,t1)
-                        \Edges(vi,t2)
-                        \draw (3.7,0) node {$\scriptstyle\bullet$};
-                        \draw (4,0) node {$\scriptstyle\bullet$};
-                        \draw (4.3,0) node {$\scriptstyle\bullet$};
-                    \end{tikzpicture}
-                \end{center}    \qed
-            \end{figure}
-            
-            
-            
-            \vskip 4cm
-        \end{idea}
-        
-        
-        
-    \end{frame}
-    
-    \begin{frame} 
-        Escribamos $x \sim y$ siempre y cuando los vértices $x$ e $y$ de
-        $G$ puedan ser unidos por un camino en $G$ o $x=y$: hablando en forma
-        rigurosa, esto significa que si $x \ne y$ hay un camino $v_1,v_2,\ldots,v_k$ en
-        $G$ con $x=v_1$ e $y=v_k$. 
-        \vskip .3cm
-        
-        \begin{definicion}
-            Sea $G$ grafo,  diremos que es conexo si  para $x\sim y$ para cualesquiera  $x,y$ vértices en $G$. 
-        \end{definicion}
-        
-        \vskip .6cm
-        El  lema de la página anterior implica que  $\sim$  es una relación de equivalencia. 
-
-    
-        
- 
-    \end{frame}
-    
-    \begin{frame}
-        \begin{proposicion} Sea $G$ grafo  y $x$, $y$, $z$ vértices de $G$. Entonces, 
-            \begin{enumerate}
-                \item $x \sim x$ (reflexividad de $\sim$).
-                \item $x \sim y$, entonces $y \sim x$ (simetría de $\sim$).
-                \item $x \sim y$,  $y \sim z$, entonces  $x \sim z$ (transitividad  de $\sim$).
-            \end{enumerate}
-        \end{proposicion}
-        
-        \begin{proof}
-            (1) Por definición $x \sim x$.
-            \vskip .4cm
-
-            (2) Si $x=x_1,x_2, \ldots,x_k= y$  es un camino de $x$ a $y$,  entonces $y=x_k,\ldots, x_2, x_1 =x$  es un camino de $y$ a $x$.
-            \vskip .4cm
-
-            (3) 
-            
-            $x \sim y$ $\Rightarrow$  un camino de $x$ a $y$. 
-
-            $y \sim z$ $\Rightarrow$  un camino de $y$ a $z$.
-            
-            Pegando los caminos en $y$,  obtenemos  una caminata de $x$ a $z$ (que se reduce a un camino por el lema). \qed
-
-        \end{proof}
-        
-    
-    \end{frame}
+\end{frame}
 
 \end{document}
 
